1567638826 | 89 files | M bin/version.txt,  M content/panorama/localization/tenfoot_bulgarian.txt,  M content/panorama/localization/tenfoot_dutch.txt,  M content/panorama/localization/tenfoot_finnish.txt,  M content/panorama/localization/tenfoot_german.txt,  M content/panorama/localization/tenfoot_hungarian.txt,  M content/panorama/localization/tenfoot_italian.txt,  M content/panorama/localization/tenfoot_japanese.txt,  M content/panorama/localization/tenfoot_portuguese.txt,  M content/panorama/localization/tenfoot_russian.txt,  M content/vrmonitor/translations/vrmonitor_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_bulgarian.txt,  M content/vrmonitor/translations/vrmonitor_czech.txt,  M content/vrmonitor/translations/vrmonitor_danish.txt,  M content/vrmonitor/translations/vrmonitor_dutch.txt,  M content/vrmonitor/translations/vrmonitor_errors_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_errors_bulgarian.txt,  M content/vrmonitor/translations/vrmonitor_errors_czech.txt,  M content/vrmonitor/translations/vr
https://steamdb.info/patchnotes/4167815/

--- a/content/panorama/localization/tenfoot_bulgarian.txt
+++ b/content/panorama/localization/tenfoot_bulgarian.txt
@@ -170,7 +170,7 @@
 "[english]Panorama_Lang_Japanese"	"Japanese"
 "Panorama_Lang_Portuguese"	"Português"
 "[english]Panorama_Lang_Portuguese"	"Portuguese"
-"Panorama_Lang_Brazilian"	"Português-Brasil"
+"Panorama_Lang_Brazilian"	"Português — Brasil"
 "[english]Panorama_Lang_Brazilian"	"Portuguese-Brazil"
 "Panorama_Lang_Polish"	"Polski"
 "[english]Panorama_Lang_Polish"	"Polish"
@@ -276,7 +276,7 @@
 "[english]Panorama_Selection_Japanese"	"日本語 (Japanese)"
 "Panorama_Selection_Portuguese"	"Português (португалски)"
 "[english]Panorama_Selection_Portuguese"	"Português (Portuguese)"
-"Panorama_Selection_Brazilian"	"Português-Brasil (бразилски португалски)"
+"Panorama_Selection_Brazilian"	"Português — Brasil (бразилски португалски)"
 "[english]Panorama_Selection_Brazilian"	"Português-Brasil (Portuguese-Brazil)"
 "Panorama_Selection_Polish"	"Polski (полски)"
 "[english]Panorama_Selection_Polish"	"Polski (Polish)"
@@ -296,7 +296,7 @@
 "[english]Panorama_Selection_Hungarian"	"Magyar (Hungarian)"
 "Panorama_Selection_Romanian"	"Română (румънски)"
 "[english]Panorama_Selection_Romanian"	"Română (Romanian)"
-"Panorama_Selection_Bulgarian"	"български (Bulgarian)"
+"Panorama_Selection_Bulgarian"	"български"
 "[english]Panorama_Selection_Bulgarian"	"Български (Bulgarian)"
 "Panorama_Selection_Turkish"	"Türkçe (турски)"
 "[english]Panorama_Selection_Turkish"	"Türkçe (Turkish)"
