--- a/content/panorama/localization/tenfoot_finnish.txt
+++ b/content/panorama/localization/tenfoot_finnish.txt
@@ -300,9 +300,9 @@
 "[english]Panorama_Selection_Bulgarian"	"Български (Bulgarian)"
 "Panorama_Selection_Turkish"	"Türkçe (turkki)"
 "[english]Panorama_Selection_Turkish"	"Türkçe (Turkish)"
-"Panorama_Selection_Arabic"	"العربية (Arabia)"
+"Panorama_Selection_Arabic"	"العربية (arabia)"
 "[english]Panorama_Selection_Arabic"	"العربية(Arabic)"
-"Panorama_Selection_Ukrainian"	"Українська (Ukraina)"
+"Panorama_Selection_Ukrainian"	"Українська (ukraina)"
 "[english]Panorama_Selection_Ukrainian"	"Українська (Ukrainian)"
 "Panorama_MoviePlaybackError"	"Toiston aikana tapahtui virhe"
 "[english]Panorama_MoviePlaybackError"	"An error ocurred during playback"
@@ -618,7 +618,7 @@
 "[english]Transition_Progress_Description"	"WAITING FOR..."
 "Now_Waiting"	"ODOTTAA..."
 "[english]Now_Waiting"	"WAITING..."
-"HomeAppCheck"	"Parannellut SteamVR-ympäristöt"
+"HomeAppCheck"	"SteamVR Home"
 "[english]HomeAppCheck"	"SteamVR Home"
 "HomeAppDesc"	"Uudet SteamVR-ympäristöt tukevat muokautettuvia kotiympäristöjä, yhteisöominaisuuksia ja paljon muuta. Osallistu testaukseen ja anna palautetta SteamVR-foorumeilla."
 "[english]HomeAppDesc"	"SteamVR Home experience supports richer home spaces, social features, and more."
@@ -664,6 +664,8 @@
 "[english]Panorama_Lang_Latam_Vietnamese"	"Vietnamese"
 "Panorama_Selection_Latam_Spanish"	"Español-Latinoamérica (latinalaisenamerikanespanja)"
 "[english]Panorama_Selection_Latam_Spanish"	"Español-Latinoamérica (Spanish-Latin America)"
+"Panorama_Selection_Vietnamese"	"Tiếng Việt (vietnam)"
+"[english]Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamese)"
 "BindingCallout_Header"	"NÄYTÄ TOIMINNOT"
 "[english]BindingCallout_Header"	"SHOW CONTROLS"
 "App_Not_Responding"	"Sovellus ei vastaa..."
