--- a/content/panorama/localization/tenfoot_german.txt
+++ b/content/panorama/localization/tenfoot_german.txt
@@ -620,9 +620,9 @@
 "[english]Transition_Progress_Description"	"WAITING FOR..."
 "Now_Waiting"	"WARTEN..."
 "[english]Now_Waiting"	"WAITING..."
-"HomeAppCheck"	"Erweiterte SteamVR-Umgebungen"
+"HomeAppCheck"	"SteamVR-Startort"
 "[english]HomeAppCheck"	"SteamVR Home"
-"HomeAppDesc"	"Die neuen SteamVR-Umgebungen unterstützen reichhaltigere Startorte, soziale Funktionen und mehr. Melden Sie sich an, um sie zu testen und geben Sie uns in den SteamVR-Foren Feedback."
+"HomeAppDesc"	"Der SteamVR-Startort bietet detailgetreuere Startorte, soziale Funktionen und mehr."
 "[english]HomeAppDesc"	"SteamVR Home experience supports richer home spaces, social features, and more."
 "MutedLabel"	"Stumm"
 "[english]MutedLabel"	"Muted"
@@ -660,6 +660,16 @@
 "[english]VRSettingsBindingUITitle"	"Controller Binding"
 "VRSettingsTrackerUITitle"	"Vive-Tracker verwalten"
 "[english]VRSettingsTrackerUITitle"	"Manage Vive Trackers"
+"Panorama_Lang_Latam_Spanish"	"Spanisch (Lateinamerika)"
+"[english]Panorama_Lang_Latam_Spanish"	"Latam"
+"Panorama_Lang_Latam_Vietnamese"	"Vietnamesisch"
+"[english]Panorama_Lang_Latam_Vietnamese"	"Vietnamese"
+"Panorama_Selection_Latam_Spanish"	"Español-Latinoamérica (Lateinamerikanisches Spanisch)"
+"[english]Panorama_Selection_Latam_Spanish"	"Español-Latinoamérica (Spanish-Latin America)"
+"Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamesisch)"
+"[english]Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamese)"
 "BindingCallout_Header"	"STEUERUNG ANZEIGEN"
 "[english]BindingCallout_Header"	"SHOW CONTROLS"
+"App_Not_Responding"	"Warten auf Antwort der Anwendung"
+"[english]App_Not_Responding"	"Waiting for application to respond"
 }
