--- a/content/panorama/localization/tenfoot_hungarian.txt
+++ b/content/panorama/localization/tenfoot_hungarian.txt
@@ -661,11 +661,11 @@
 "[english]VRSettingsTrackerUITitle"	"Manage Vive Trackers"
 "Panorama_Lang_Latam_Spanish"	"Latin-amerikai spanyol"
 "[english]Panorama_Lang_Latam_Spanish"	"Latam"
-"Panorama_Lang_Latam_Vietnamese"	"Vietnami"
+"Panorama_Lang_Latam_Vietnamese"	"Vietnámi"
 "[english]Panorama_Lang_Latam_Vietnamese"	"Vietnamese"
 "Panorama_Selection_Latam_Spanish"	"Español - Latinoamérica (latin-amerikai spanyol)"
 "[english]Panorama_Selection_Latam_Spanish"	"Español-Latinoamérica (Spanish-Latin America)"
-"Panorama_Selection_Vietnamese"	"Tiếng Việt (vietnami)"
+"Panorama_Selection_Vietnamese"	"Tiếng Việt (vietnámi)"
 "[english]Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamese)"
 "BindingCallout_Header"	"VEZÉRLÉS MUTATÁSA"
 "[english]BindingCallout_Header"	"SHOW CONTROLS"
