--- a/content/panorama/localization/tenfoot_portuguese.txt
+++ b/content/panorama/localization/tenfoot_portuguese.txt
@@ -306,7 +306,7 @@
 "[english]Panorama_Selection_Ukrainian"	"Українська (Ukrainian)"
 "Panorama_MoviePlaybackError"	"Ocorreu um erro durante a reprodução"
 "[english]Panorama_MoviePlaybackError"	"An error ocurred during playback"
-"Debugger_PaintInfo"	"Mostrar info de pintura"
+"Debugger_PaintInfo"	"Mostrar dados de pintura"
 "[english]Debugger_PaintInfo"	"Show Paint Info"
 "Debugger_Style"	"Estilo"
 "[english]Debugger_Style"	"Style"
@@ -314,7 +314,7 @@
 "[english]Debugger_Computed"	"Computed"
 "Debugger_Measurements"	"Medidas:"
 "[english]Debugger_Measurements"	"Measurements:"
-"Debugger_Misc"	"Misc:"
+"Debugger_Misc"	"Diversos:"
 "[english]Debugger_Misc"	"Misc:"
 "Debugger_Properties"	"Propriedades:"
 "[english]Debugger_Properties"	"Properties:"
@@ -334,7 +334,7 @@
 "[english]Debugger_PanelStyleInvalid"	"Styles changed while editing! Hit F5 to reload displayed styles"
 "Debugger_AnimationHeader"	"Keyframes da animação"
 "[english]Debugger_AnimationHeader"	"Animation Keyframes"
-"Debugger_DevInfo"	"Mostrar Info do Desenv."
+"Debugger_DevInfo"	"Mostrar dados de desenvolvimento"
 "[english]Debugger_DevInfo"	"Show Dev Info"
 "Time"	"10:08"
 "[english]Time"	"10:08"
