--- a/content/panorama/localization/tenfoot_russian.txt
+++ b/content/panorama/localization/tenfoot_russian.txt
@@ -523,7 +523,7 @@
 "[english]VRSettingsCamera_CameraColor"	"Camera Chaperone Color"
 "VRSettingsCamera_CameraOpacity"	"Прозрачность пространственной сетки"
 "[english]VRSettingsCamera_CameraOpacity"	"Camera Chaperone Opacity"
-"OpenBackgroundWorkshop"	"Посмотреть Мастерскую"
+"OpenBackgroundWorkshop"	"Просмотр Мастерской"
 "[english]OpenBackgroundWorkshop"	"Browse Workshop"
 "VRSettingsCamera_EnableCamera"	"Вы можете включить фронтальную камеру в настройках на рабочем столе."
 "[english]VRSettingsCamera_EnableCamera"	"To enable the front-facing camera go to Settings on the Desktop."
@@ -667,7 +667,7 @@
 "[english]Panorama_Selection_Latam_Spanish"	"Español-Latinoamérica (Spanish-Latin America)"
 "Panorama_Selection_Vietnamese"	"Tiếng Việt (вьетнамский)"
 "[english]Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamese)"
-"BindingCallout_Header"	"ПОКАЗАТЬ НАСТРОЙКИ"
+"BindingCallout_Header"	"ПОКАЗАТЬ УПРАВЛЕНИЕ"
 "[english]BindingCallout_Header"	"SHOW CONTROLS"
 "App_Not_Responding"	"Ожидается ответ приложения"
 "[english]App_Not_Responding"	"Waiting for application to respond"
