--- a/content/vrmonitor/translations/vrmonitor_bulgarian.txt
+++ b/content/vrmonitor/translations/vrmonitor_bulgarian.txt
@@ -147,16 +147,16 @@
 "[english]SteamVRSystemState_NotReady"	" "
 "SteamVRSystemState_Connecting"	"Търсене…"
 "[english]SteamVRSystemState_Connecting"	"Searching..."
-"SteamVRSystemState_Shutdown"	"Излизане от SteamVR…"
-"[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
+"SteamVRSystemState_Shutdown"	"Излизане от ВР…"
+"[english]SteamVRSystemState_Shutdown"	"Exiting VR..."
 "SteamVRSystemState_Installing"	"Протича хардуерна установка…"
 "[english]SteamVRSystemState_Installing"	"Hardware setup in progress..."
 "SteamVRSystemState_Restart"	"Рестартиране на SteamVR…"
 "[english]SteamVRSystemState_Restart"	"Restarting SteamVR..."
 "SteamVRSystemState_Startup"	"Стартиране на ВР…"
 "[english]SteamVRSystemState_Startup"	"Starting VR..."
-"SteamVRSystemState_ShutdownRequested"	"Излизане от SteamVR…"
-"[english]SteamVRSystemState_ShutdownRequested"	"Exiting SteamVR..."
+"SteamVRSystemState_ShutdownRequested"	"Излизане от ВР…"
+"[english]SteamVRSystemState_ShutdownRequested"	"Exiting VR..."
 "MenuAction_StatusBar"	"Статус"
 "[english]MenuAction_StatusBar"	"Status"
 "MenuAction_RoomOverview"	"Преглед на обзора за стаята"
@@ -2312,10 +2312,10 @@
 "[english]BS_PowerManagement_ObservedInTracking"	"Observed in a prior tracking session."
 "BS_PowerManagement_FailedToConnectRefresh"	"%1 неуспешно свързване. Кликнете върху „Опресняване“, за да опитате отново."
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
-"Monitor_WakingBaseStations"	"Включване на базовите станции…"
-"[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
-"Monitor_PuttingBaseStationsInStandby"	"Изключване на базовите станции…"
-"[english]Monitor_PuttingBaseStationsInStandby"	"Bases Powering Down..."
+"Monitor_WakingBaseStations"	"Събуждане на базовите станции…"
+"[english]Monitor_WakingBaseStations"	"Base stations waking up..."
+"Monitor_PuttingBaseStationsInStandby"	"Базовите станции са в режим на готовност…"
+"[english]Monitor_PuttingBaseStationsInStandby"	"Base stations standing by..."
 "Settings_BaseStation_ContinueBaseStationUpdate"	"Възстановяване от незавършено обновление"
 "[english]Settings_BaseStation_ContinueBaseStationUpdate"	"Recover From Incomplete Update"
 "Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Поправяне на прекъснато или отказано обновяване на базова станция, което предотвратява нормалното проследяване."
@@ -2528,5 +2528,35 @@
 "[english]BS20_ConfigureChannel_ProgressWritingChannel"	"\nWriting Channel...\n"
 "BS20_ConfigureChannel_RSSI"	"RSSI: %1"
 "[english]BS20_ConfigureChannel_RSSI"	"RSSI: %1"
+"Key_Escape_Abbreviation"	"ESC"
+"[english]Key_Escape_Abbreviation"	"ESC"
+"HeadsetView_Title"	"ВР изглед"
+"[english]HeadsetView_Title"	"VR View"
+"HeadsetView_MenuLabel"	"Меню"
+"[english]HeadsetView_MenuLabel"	"Menu"
+"HeadsetView_PressKeyToExit"	"Натиснете %1, за да излезете от цял екран"
+"[english]HeadsetView_PressKeyToExit"	"Press %1 to exit Full Screen"
+"HeadsetView_FullscreenButtonLabel"	"Цял екран"
+"[english]HeadsetView_FullscreenButtonLabel"	"Full Screen"
+"HeadsetView_DockButtonLabel"	"Закрепостяване на изгледа"
+"[english]HeadsetView_DockButtonLabel"	"Dock View"
+"HeadsetView_UndockButtonLabel"	"Разкрепостяване на изгледа"
+"[english]HeadsetView_UndockButtonLabel"	"Undock View"
+"HeadsetView_CloseButtonLabel"	"Затваряне"
+"[english]HeadsetView_CloseButtonLabel"	"Close"
+"HeadsetView_EyeMode_Both"	"И двете очи"
+"[english]HeadsetView_EyeMode_Both"	"Both Eyes"
+"HeadsetView_EyeMode_Left"	"Ляво око"
+"[english]HeadsetView_EyeMode_Left"	"Left Eye"
+"HeadsetView_EyeMode_Right"	"Дясно око"
+"[english]HeadsetView_EyeMode_Right"	"Right Eye"
+"HeadsetView_EyeMode_BothLeftDominant"	"И двете очи — Ляво доминантно"
+"[english]HeadsetView_EyeMode_BothLeftDominant"	"Both Eyes - Left Dominant"
+"HeadsetView_EyeMode_BothRightDominant"	"И двете очи — Дясно доминантно"
+"[english]HeadsetView_EyeMode_BothRightDominant"	"Both Eyes - Right Dominant"
+"HeadsetView_ViewMode_Center"	"Центриране на изгледа"
+"[english]HeadsetView_ViewMode_Center"	"Center View"
+"HeadsetView_DebugCommands"	"Отваряне на командите за отстраняване на грешки"
+"[english]HeadsetView_DebugCommands"	"Open Debug Commands"
 }
 }
