--- a/content/vrmonitor/translations/vrmonitor_errors_brazilian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_brazilian.txt
@@ -261,9 +261,9 @@
 "[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"Please make sure your video cables are securely connected. The headset's display was not found."
 "VRInitError_Driver_HmdDisplayNotFound_Action"	"Mais informações"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Action"	"More info"
-"VRInitError_IPC_ServerInitFailed_Header"	"Falha do SteamVR"
+"VRInitError_IPC_ServerInitFailed_Header"	"Problema com instalação do SteamVR"
 "[english]VRInitError_IPC_ServerInitFailed_Header"	"SteamVR Installation Issue"
-"VRInitError_IPC_ServerInitFailed_Description"	"Um componente-chave do SteamVR não está funcionando corretamente. Por favor, verifique se o aplicativo foi instalado corretamente e depois reinicie o headset abaixo."
+"VRInitError_IPC_ServerInitFailed_Description"	"Um componente-chave do SteamVR não está funcionando corretamente. Por favor, verifique se o SteamVR foi instalado corretamente."
 "[english]VRInitError_IPC_ServerInitFailed_Description"	"A key component of SteamVR isn't working properly. Please verify that SteamVR is properly installed."
 "VRInitError_IPC_ServerInitFailed_Action"	"Mais informações"
 "[english]VRInitError_IPC_ServerInitFailed_Action"	"More info"
