--- a/content/vrmonitor/translations/vrmonitor_errors_dutch.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_dutch.txt
@@ -903,6 +903,8 @@
 "[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_Action"	"More info"
 "Warning_DismissableWarning_BluetoothLinkServiceNotFound_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326&l=dutch#steamvr-issues"
 "[english]Warning_DismissableWarning_BluetoothLinkServiceNotFound_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326#steamvr-issues"
+"Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Bluetoothfout"
+"[english]Warning_DismissableWarning_BluetoothLinkServiceError_Header"	"Bluetooth Error"
 "Warning_DismissableWarning_BluetoothLinkServiceError_Action"	"Bluetooth-instellingen"
 "[english]Warning_DismissableWarning_BluetoothLinkServiceError_Action"	"Bluetooth Settings"
 "Warning_DismissableWarning_BluetoothLinkServiceError_ActionURL"	"vrmonitor://open/settings/bluetooth"
@@ -945,6 +947,8 @@
 "[english]VRInitError_IPC_ServerInitFailed_FirstActionURL"	"vrmonitor://reboothmd"
 "Warning_DismissableWarning_SteamVRInSafeMode_Header"	"Veilige modus"
 "[english]Warning_DismissableWarning_SteamVRInSafeMode_Header"	"Safe Mode"
+"Warning_DismissableWarning_SteamVRInSafeMode_Description"	"<span>Vanwege</span> een recente crash draait SteamVR momenteel in de veilige modus.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Meer informatie</a>."
+"[english]Warning_DismissableWarning_SteamVRInSafeMode_Description"	"<span>Due</span> to a recent crash, SteamVR is currently operating in Safe Mode.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Learn more</a>."
 "Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Veilige modus uitschakelen"
 "[english]Warning_DismissableWarning_SteamVRInSafeMode_Action"	"Disable Safe Mode"
 "Warning_DismissableWarning_SteamVRInSafeMode_ActionURL"	"vrmonitor://safemode/disable"
@@ -962,11 +966,17 @@
 "Warning_DismissableWarning_HeadsetDisplayDisconnected_ActionURL"	"
 "
 "[english]Warning_DismissableWarning_HeadsetDisplayDisconnected_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Warning_DismissableWarning_HDCPError_Description"	"SteamVR heeft een HDCP-fout ondervonden. Maak voor meer informatie een SteamVR-systeemrapport aan."
+"[english]Warning_DismissableWarning_HDCPError_Description"	"SteamVR has encountered an HDCP error. Please create a SteamVR System Report for further info."
 "Warning_DismissableWarning_HDCPError_Action"	"Meer informatie"
 "[english]Warning_DismissableWarning_HDCPError_Action"	"More info"
 "Warning_DismissableWarning_HDCPError_ActionURL"	"
 "
 "[english]Warning_DismissableWarning_HDCPError_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"VRInitError_VendorSpecific_HmdFound_ConfigFailedSanityCheck_ActionURL"	" "
+"[english]VRInitError_VendorSpecific_HmdFound_ConfigFailedSanityCheck_ActionURL"	" "
+"Popover_NoPose_HMD_Action"	"Meer informatie"
+"[english]Popover_NoPose_HMD_Action"	"More info"
 "Popover_Standby_Invalid_Description"	"Dit apparaat bevindt zich in de stand-bymodus."
 "[english]Popover_Standby_Invalid_Description"	"This device is standing by."
 "Popover_FirmwareUpdateNeededWarning_ActionURL"	"https://help.steampowered.com/nl/wizard/HelpWithGame/?appid=250820"
@@ -979,6 +989,8 @@
 "[english]Warning_DismissableWarning_OutOfVideoMemory_Action"	"More info"
 "Warning_DismissableWarning_OutOfVideoMemory_ActionURL"	"https://help.steampowered.com/nl/wizard/HelpWithGame/?appid=250820"
 "[english]Warning_DismissableWarning_OutOfVideoMemory_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstAction"	"Headset opnieuw instellen"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstAction"	"Reset Headset"
 "VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstActionURL"	"vrmonitor://reboothmd"
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstActionURL"	"vrmonitor://reboothmd"
 "VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"Meer informatie"
@@ -1005,5 +1017,11 @@
 "[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"automatic"
 "Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"aangepast"
 "[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"your custom"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_Header"	"Verbindingsproblemen weergeven"
+"[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_Header"	"Display Connection Trouble"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_FirstActionURL"	"vrmonitor://reboothmd"
+"[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_FirstActionURL"	"vrmonitor://reboothmd"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_Action"	"Meer informatie"
+"[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_Action"	"More info"
 }
 }
