--- a/content/vrmonitor/translations/vrmonitor_errors_finnish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_finnish.txt
@@ -3,9 +3,9 @@
 "Language"	"finnish"
 "Tokens"
 {
-"Error_NoHMDAvailable_Header"	"Visiiriä ei löydetty"
+"Error_NoHMDAvailable_Header"	"VR-laseja ei löydetty"
 "[english]Error_NoHMDAvailable_Header"	"Headset Not Detected"
-"Error_NoHMDAvailable_Description"	"Visiiriäsi ei löydetty. Tarkista että se on yhdistetty kunnolla ja käynnistä sitten SteamVR uudestaan."
+"Error_NoHMDAvailable_Description"	"Tarkista, että virtuaalitodellisuuslasisi on yhdistetty kunnolla, ja käynnistä sitten SteamVR uudestaan."
 "[english]Error_NoHMDAvailable_Description"	"Make sure your headset is connected properly, then restart SteamVR."
 "Error_NoHMDAvailable_Action"	"Vianmääritys"
 "[english]Error_NoHMDAvailable_Action"	"More info"
@@ -15,9 +15,9 @@
 "[english]Error_HMDDoesNotTrack_Description"	"Make sure your headset is in view of base station. "
 "Error_HMDDoesNotTrack_Action"	"Vianmääritys"
 "[english]Error_HMDDoesNotTrack_Action"	"More info"
-"Error_NoCompositorAvailable_Header"	"Latoja ei ole käytettävissä"
+"Error_NoCompositorAvailable_Header"	"SteamVR-virhe"
 "[english]Error_NoCompositorAvailable_Header"	"SteamVR Fail"
-"Error_NoCompositorAvailable_Description"	"Tämä tarvitaan SteamVR:n toimimiseen kunnolla."
+"Error_NoCompositorAvailable_Description"	"Voi ei! SteamVR:ssä tapahtui odottamattoman virhe."
 "[english]Error_NoCompositorAvailable_Description"	"Oh no! SteamVR has encountered an unexpected problem."
 "Error_NoCompositorAvailable_Action"	"Käynnistä SteamVR uudelleen"
 "[english]Error_NoCompositorAvailable_Action"	"Restart SteamVR"
@@ -971,6 +971,8 @@
 "[english]Warning_DismissableWarning_SteamVRUpdated_ActionURL"	"%1"
 "Warning_DismissableWarning_HeadsetDisplayDisconnected_Header"	"Yhteys VR-laseihin katkaistu"
 "[english]Warning_DismissableWarning_HeadsetDisplayDisconnected_Header"	"Headset Disconnected"
+"Warning_DismissableWarning_HeadsetDisplayDisconnected_Description"	"VR-lasiesi näyttökaapeli on irronnut. Tarkasta VR-lasien kaapeli ja yritä uudelleen."
+"[english]Warning_DismissableWarning_HeadsetDisplayDisconnected_Description"	"Your headset's display cable has become disconnected. Please check your headset's connections and try again."
 "Warning_DismissableWarning_HeadsetDisplayDisconnected_Action"	"Lisätietoja"
 "[english]Warning_DismissableWarning_HeadsetDisplayDisconnected_Action"	"More info"
 "Warning_DismissableWarning_HeadsetDisplayDisconnected_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGame/?appid=250820"
@@ -1059,22 +1061,38 @@
 "[english]Lighthouse_BasestationFactoryError_ActionURL"	" "
 "Lighthouse_BasestationInternalFault_01_Header"	"Tukiasema ei käytettävissä"
 "[english]Lighthouse_BasestationInternalFault_01_Header"	"Base Station Error"
+"Lighthouse_BasestationInternalFault_01_Description"	"Tukiasema on havainnut sisäinen virheen. Sammuta ja käynnistä uudelleen tukiasema, jossa vilkkuu punainen valo. Mikäli ongelma jatkuu, ota yhteyttä valmistajaan."
+"[english]Lighthouse_BasestationInternalFault_01_Description"	"One of your base stations has developed an internal problem. Please unplug and then replug the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
+"Lighthouse_BasestationInternalFault_01_Action"	" "
+"[english]Lighthouse_BasestationInternalFault_01_Action"	" "
 "Lighthouse_BasestationInternalFault_02_Header"	"Tukiasema ei käytettävissä"
 "[english]Lighthouse_BasestationInternalFault_02_Header"	"Base Station Error"
+"Lighthouse_BasestationInternalFault_02_Description"	"Tukiasema on havainnut sisäisen virheen. Sammuta ja käynnistä uudelleen tukiasema, jossa vilkkuu punainen valo. Mikäli ongelma jatkuu, ota yhteyttä valmistajaan."
+"[english]Lighthouse_BasestationInternalFault_02_Description"	"A base station has developed an internal problem. Please unplug and then replug the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
 "Lighthouse_BasestationInternalFault_03_Header"	"Tukiasema ei käytettävissä"
 "[english]Lighthouse_BasestationInternalFault_03_Header"	"Base Station Error"
+"Lighthouse_BasestationInternalFault_03_Description"	"Tukiasema on havainnut sisäisen virheen. Sammuta ja käynnistä uudelleen tukiasema, jossa vilkkuu punainen valo. Mikäli ongelma jatkuu, ota yhteyttä valmistajaan."
+"[english]Lighthouse_BasestationInternalFault_03_Description"	"A base station has developed an internal problem. Please unplug and then replug the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
 "Lighthouse_BasestationInternalFault_04_Header"	"Tukiasema ei käytettävissä"
 "[english]Lighthouse_BasestationInternalFault_04_Header"	"Base Station Error"
+"Lighthouse_BasestationInternalFault_04_Description"	"Tukiasema on havainnut sisäisen virheen. Sammuta ja käynnistä uudelleen tukiasema, jossa vilkkuu punainen valo. Mikäli ongelma jatkuu, ota yhteyttä valmistajaan."
+"[english]Lighthouse_BasestationInternalFault_04_Description"	"A base station has developed an internal problem. Please unplug and then replug the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
 "Lighthouse_BasestationInternalFault_05_Header"	"Virhe tukiasemassa"
 "[english]Lighthouse_BasestationInternalFault_05_Header"	"Base Station Error"
+"Lighthouse_BasestationInternalFault_05_Description"	"Tukiasema on havainnut sisäisen virheen (virhe 05). Sammuta ja käynnistä uudelleen tukiasema, jossa vilkkuu punainen valo. Mikäli ongelma jatkuu, ota yhteyttä valmistajaan."
+"[english]Lighthouse_BasestationInternalFault_05_Description"	"A base station has developed an internal problem (fault 05). Please unplug and then replug the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
 "Popover_Off_Tracker_Action"	"Lisätietoja"
 "[english]Popover_Off_Tracker_Action"	"More info"
 "Popover_Off_Tracker_ActionURL"	"https://community.viveport.com/t5/Technical-Support/bd-p/technical-support"
 "[english]Popover_Off_Tracker_ActionURL"	"https://community.viveport.com/t5/Technical-Support/bd-p/technical-support"
+"Popover_Pose_Invalid_Description"	"Tunnistamaton laite jäljittää."
+"[english]Popover_Pose_Invalid_Description"	"This unreconginzed device is currently tracking."
 "Popover_Pose_Invalid_Action"	"Lisätietoja"
 "[english]Popover_Pose_Invalid_Action"	"More info"
 "Popover_Pose_Invalid_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGame/?appid=250820"
 "[english]Popover_Pose_Invalid_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Popover_NoPose_Invalid_Description"	"Laitetta ei tunnistettu ja se se ei tällä hetkellä jäljitä."
+"[english]Popover_NoPose_Invalid_Description"	"This device is unrecognized and not currently tracking."
 "Popover_NoPose_Invalid_Action"	"Lisätietoja"
 "[english]Popover_NoPose_Invalid_Action"	"More info"
 "Popover_NoPose_Invalid_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=109&return_nodeid=71"
@@ -1091,6 +1109,8 @@
 "[english]Popover_NoPose_Tracker_Action"	"More info"
 "Popover_NoPose_Tracker_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGame/?appid=250820"
 "[english]Popover_NoPose_Tracker_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Popover_Standby_Invalid_Description"	"Laite on lepotilassa."
+"[english]Popover_Standby_Invalid_Description"	"This device is standing by."
 "Popover_BaseStationNoPowerManagement_Action"	"Lisätietoja"
 "[english]Popover_BaseStationNoPowerManagement_Action"	"More info"
 "Popover_BaseStationNoPowerManagement_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGame/?appid=250820"
@@ -1143,10 +1163,22 @@
 "[english]Warning_DismissableWarning_HeadsetTetherDisconnected_Action"	"More info"
 "Warning_DismissableWarning_HeadsetTetherDisconnected_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGame/?appid=250820"
 "[english]Warning_DismissableWarning_HeadsetTetherDisconnected_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
-"Warning_DismissableWarning_OutOfVideoMemory_Action"	"Lisää tietoa"
+"Warning_DismissableWarning_OutOfVideoMemory_Header"	"Näyttömuisti loppui"
+"[english]Warning_DismissableWarning_OutOfVideoMemory_Header"	"Out Of Video Memory"
+"Warning_DismissableWarning_OutOfVideoMemory_Description"	"Näyttömuisti ei riitä, mikä alentaa suorituskykyä. Poistu nykyisestä sovelluksesta tai käynnistä SteamVR uudelleen."
+"[english]Warning_DismissableWarning_OutOfVideoMemory_Description"	"Your system is running low on video memory which will cause poor performance. Try exiting the current application, or restarting SteamVR."
+"Warning_DismissableWarning_OutOfVideoMemory_Action"	"Lisätietoa"
 "[english]Warning_DismissableWarning_OutOfVideoMemory_Action"	"More info"
 "Warning_DismissableWarning_OutOfVideoMemory_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGame/?appid=250820"
 "[english]Warning_DismissableWarning_OutOfVideoMemory_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_Header"	"Kannettava: Yhteys VR-lasien näyttöön on katkennut"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Header"	"Laptop: Headset Display Disconnected"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_Description"	"Tarkasta, että olet kiinnittänyt kaapelit kunnolla kannettavaan tietokoneeseesi. Kannettavat saattavat vaatia erityistoimenpiteitä tukeakseen virtuaalitodellisuutta."
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Description"	"Please make sure your video cables are securely connected to your laptop. Laptops may require special setup to work with VR."
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstAction"	"Määritä VR-lasit uudelleen"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstAction"	"Reset Headset"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstActionURL"	"vrmonitor://reboothmd"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstActionURL"	"vrmonitor://reboothmd"
 "VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"Lisätietoja"
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"More info"
 "VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
@@ -1171,5 +1203,45 @@
 "[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"automatic"
 "Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"muokatut asetukset"
 "[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"your custom"
+"VRInitError_IPC_ConnectFailedAfterTargetExited_Header"	"SteamVR-virhe"
+"[english]VRInitError_IPC_ConnectFailedAfterTargetExited_Header"	"SteamVR Fail"
+"VRInitError_IPC_ConnectFailedAfterTargetExited_Description"	"SteamVR:lle oleellinen osa ei toimi oikein. Käynnistä SteamVR uudelleen."
+"[english]VRInitError_IPC_ConnectFailedAfterTargetExited_Description"	"A key component of SteamVR isn't working properly. Please restart SteamVR."
+"VRInitError_IPC_ConnectFailedAfterTargetExited_Action"	"Lisätietoa"
+"[english]VRInitError_IPC_ConnectFailedAfterTargetExited_Action"	"More info"
+"VRInitError_IPC_ConnectFailedAfterTargetExited_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374"
+"[english]VRInitError_IPC_ConnectFailedAfterTargetExited_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374"
+"VRInitError_IPC_NamespaceUnavailable_Header"	"SteamVR-virhe"
+"[english]VRInitError_IPC_NamespaceUnavailable_Header"	"SteamVR Fail"
+"VRInitError_IPC_NamespaceUnavailable_Description"	"SteamVR:lle oleellinen osa ei toimi oikein. Käynnistä SteamVR uudelleen."
+"[english]VRInitError_IPC_NamespaceUnavailable_Description"	"A key component of SteamVR isn't working properly. Please restart SteamVR."
+"VRInitError_IPC_NamespaceUnavailable_Action"	"Lisätietoa"
+"[english]VRInitError_IPC_NamespaceUnavailable_Action"	"More info"
+"VRInitError_IPC_NamespaceUnavailable_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374"
+"[english]VRInitError_IPC_NamespaceUnavailable_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374"
+"Warning_DismissableWarning_BaseStationUpdateFailedToComplete_Header"	"Keskeneräinen laitepäivitys"
+"[english]Warning_DismissableWarning_BaseStationUpdateFailedToComplete_Header"	"Incomplete Device Update"
+"Warning_DismissableWarning_BaseStationUpdateFailedToComplete_Description"	"Tukiaseman päivitys keskeytyi tai epäonnistui. Klikkaa \"Palauta\" aloittaaksesi prosessin."
+"[english]Warning_DismissableWarning_BaseStationUpdateFailedToComplete_Description"	"A Base Station update was interrupted or failed to complete. Please click 'Recovery' to begin the procedure."
+"Warning_DismissableWarning_BaseStationUpdateFailedToComplete_Action"	"Palauta"
+"[english]Warning_DismissableWarning_BaseStationUpdateFailedToComplete_Action"	"Recovery"
+"Warning_DismissableWarning_BaseStationUpdateFailedToComplete_ActionURL"	"vrmonitor://open/settings/basestation/recovery"
+"[english]Warning_DismissableWarning_BaseStationUpdateFailedToComplete_ActionURL"	"vrmonitor://open/settings/basestation/recovery"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_Header"	"Näytön yhteysongelma"
+"[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_Header"	"Display Connection Trouble"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_Description"	"Näytönohjaimesi ei voi yhdistää virtuaalitodellisuuslaitteesi (HMD) näyttöön. Poista kaikki kaapelin adapterit ja lisäosat ja kokeile uudellen. Kokeile toista porttia grafiikkasuorittimessa, jos sellainen on saatavilla. <b>Klikkaa nollaa-linkkiä alta nollataksesi virtuaalitodellisuuslaitteesi, jotta grafiikkasuoritin kokeilee yhdistämistä uudelleen.</b>"
+"[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_Description"	"Your graphics card cannot successfully connect to your HMD display. Try removing any cable adapters or extenders you are using. Try another port on your GPU if one is available. <b>Use the reset link below to reset the HMD so the GPU will try again.</b>"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_FirstAction"	"Nollaa VR-lasit"
+"[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_FirstAction"	"Reset Headset"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_FirstActionURL"	"vrmonitor://reboothmd"
+"[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_FirstActionURL"	"vrmonitor://reboothmd"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_Action"	"Lisätietoa"
+"[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_Action"	"More info"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237"
+"[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237"
+"Warning_DismissableWarning_DevelopmentHardwareNotSupported_Header"	"Laitetta ei enää tueta"
+"[english]Warning_DismissableWarning_DevelopmentHardwareNotSupported_Header"	"Device No Longer Supported"
+"Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description"	"%1 (%2) on kehitystyökalu eikä sitä enää tueta.<br><br><font color=#ff0000>Toimivuutta ei voida taata. Käytä toista laitetta.</font>"
+"[english]Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description"	"<font color=#aaaa00>Your pre-production %1 is no longer supported.</font> <br><br> This device will no longer receive firmware updates, and diminished functionality is expected. Please replace at your earliest convenience. <br><br>(hwid: %2)"
 }
 }
