--- a/content/vrmonitor/translations/vrmonitor_errors_german.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_german.txt
@@ -801,7 +801,7 @@
 "[english]Warning_DismissableWarning_IssuesWithTwoDongles_Action"	"More info"
 "VRInitError_Driver_HmdDisplayMirrored_Header"	"Gespiegelte VR-Headset-Anzeige"
 "[english]VRInitError_Driver_HmdDisplayMirrored_Header"	"Headset display mirrored"
-"VRInitError_Driver_HmdDisplayMirrored_Description"	"Die Anzeige des VR-Headsets wurde nicht erkannt, aber eine gespiegelte Anzeige wurde erkannt. Bitte wechseln Sie vom gespiegelten in den gestreckten Anzeigemodus."
+"VRInitError_Driver_HmdDisplayMirrored_Description"	"Die Anzeige des VR-Headsets wurde nicht erkannt, aber eine duplizierte Anzeige wurde erkannt. Bitte wechseln Sie vom gespiegelten in den erweiterten Anzeigemodus."
 "[english]VRInitError_Driver_HmdDisplayMirrored_Description"	"The headset's display was not found, but a mirrored display was detected.  Please set the headset to extended mode rather than mirrored."
 "VRInitError_Driver_HmdDisplayMirrored_FirstAction"	"Anzeigeeinstellungen anzeigen"
 "[english]VRInitError_Driver_HmdDisplayMirrored_FirstAction"	"View display properties"
@@ -1271,5 +1271,9 @@
 "[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_Action"	"More info"
 "VRInitError_Compositor_FailedToCreateDirectModeDisplay_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237"
 "[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237"
+"Warning_DismissableWarning_DevelopmentHardwareNotSupported_Header"	"Gerät nicht mehr unterstützt"
+"[english]Warning_DismissableWarning_DevelopmentHardwareNotSupported_Header"	"Device No Longer Supported"
+"Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description"	"Ihr %1 (%2) ist ein Vorserien-Entwicklungswerkzeug und wird nicht länger unterstützt.<br><br><font color=#ff0000>Funktionsfähigkeit wird nicht erwartet. Bitte umgehend ersetzen.</font>"
+"[english]Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description"	"<font color=#aaaa00>Your pre-production %1 is no longer supported.</font> <br><br> This device will no longer receive firmware updates, and diminished functionality is expected. Please replace at your earliest convenience. <br><br>(hwid: %2)"
 }
 }
