--- a/content/vrmonitor/translations/vrmonitor_errors_italian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_italian.txt
@@ -65,7 +65,7 @@
 "[english]Error_TrackingDevice_NoPose_Action"	"More info"
 "VRInitError_Unknown_Header"	"Errore di SteamVR"
 "[english]VRInitError_Unknown_Header"	"SteamVR Fail"
-"VRInitError_Unknown_Description"	"Si è verificato un problema inaspettato. Ti invitiamo a visitare la pagina dell'assistenza di SteamVR."
+"VRInitError_Unknown_Description"	"Si è verificato un problema inaspettato con SteamVR. Visita la pagina dell'assistenza di SteamVR per ulteriori informazioni."
 "[english]VRInitError_Unknown_Description"	"SteamVR has encountered an unexpected problem. Please visit SteamVR Support for more info."
 "VRInitError_Unknown_Action"	"Ulteriori informazioni"
 "[english]VRInitError_Unknown_Action"	"More info"
@@ -217,7 +217,7 @@
 "[english]VRInitError_Driver_Unknown_Header"	"SteamVR Error"
 "VRInitError_Driver_Unknown_Description"	"SteamVR ha riscontrato un errore con un dispositivo."
 "[english]VRInitError_Driver_Unknown_Description"	"SteamVR has encountered a device error."
-"VRInitError_Driver_Unknown_Action"	"Risolvilo!"
+"VRInitError_Driver_Unknown_Action"	"Risolvi il problema"
 "[english]VRInitError_Driver_Unknown_Action"	"Fix it!"
 "VRInitError_Driver_HmdUnknown_Header"	"Visore non riconosciuto"
 "[english]VRInitError_Driver_HmdUnknown_Header"	"Headset not Recognized"
@@ -269,7 +269,7 @@
 "[english]VRInitError_IPC_ServerInitFailed_Action"	"More info"
 "VRInitError_IPC_ConnectFailed_Header"	"Errore di SteamVR"
 "[english]VRInitError_IPC_ConnectFailed_Header"	"SteamVR Fail"
-"VRInitError_IPC_ConnectFailed_Description"	"Un componente chiave di SteamVR non sta funzionando correttamente."
+"VRInitError_IPC_ConnectFailed_Description"	"Una componente chiave di SteamVR non funziona correttamente."
 "[english]VRInitError_IPC_ConnectFailed_Description"	"A key component of SteamVR isn't working properly."
 "VRInitError_IPC_ConnectFailed_Action"	"Ulteriori informazioni"
 "[english]VRInitError_IPC_ConnectFailed_Action"	"More info"
@@ -711,7 +711,7 @@
 "[english]Popover_Off_Controller_FirstAction"	"Pair Controller"
 "Warning_DismissableWarning_Windows8_Header"	"È necessario aggiornare Windows"
 "[english]Warning_DismissableWarning_Windows8_Header"	"Time to update Windows"
-"Warning_DismissableWarning_Windows8_Description"	"SteamVR non è supportato su Windows 8. Per risultati ottimali, effettua l'aggiornamento a Windows 8.1 o a Windows 10."
+"Warning_DismissableWarning_Windows8_Description"	"SteamVR non è compatibile con Windows 8. Per risultati ottimali, effettua l'aggiornamento a Windows 8.1 o a Windows 10."
 "[english]Warning_DismissableWarning_Windows8_Description"	"SteamVR is not supported on Windows 8. Please upgrade to Windows 8.1 or Windows 10 for the best results."
 "Warning_DismissableWarning_DisplayInExtendedMode_Header"	"Avviso del visore"
 "[english]Warning_DismissableWarning_DisplayInExtendedMode_Header"	"Headset Notice"
@@ -745,7 +745,7 @@
 "[english]VRInitError_Driver_HmdDisplayNotFoundAfterFix_Header"	"Headset not connected properly"
 "VRInitError_Driver_HmdDisplayNotFoundAfterFix_Description"	"Lo schermo del visore non è stato trovato, assicurati che i cavi HDMI siano collegati correttamente e riavvia il visore cliccando qui sotto."
 "[english]VRInitError_Driver_HmdDisplayNotFoundAfterFix_Description"	"The headset's display was not found, please make sure your HDMI cables are securely connected, then reboot it by clicking below."
-"VRInitError_Driver_HmdDisplayNotFoundAfterFix_FirstAction"	"Riavvia visore"
+"VRInitError_Driver_HmdDisplayNotFoundAfterFix_FirstAction"	"Riavvia il visore"
 "[english]VRInitError_Driver_HmdDisplayNotFoundAfterFix_FirstAction"	"Reboot Headset"
 "VRInitError_Driver_HmdDisplayNotFoundAfterFix_Action"	"Risoluzione dei problemi"
 "[english]VRInitError_Driver_HmdDisplayNotFoundAfterFix_Action"	"Troubleshooting"
@@ -759,19 +759,19 @@
 "[english]VRInitError_Driver_HmdDriverIdOutOfBounds_Action"	"More info"
 "VRInitError_IPC_CompositorConnectFailed_Header"	"Errore di SteamVR"
 "[english]VRInitError_IPC_CompositorConnectFailed_Header"	"SteamVR Fail"
-"VRInitError_IPC_CompositorConnectFailed_Description"	"Una componente chiave di SteamVR non funziona correttamente. Esci da SteamVR, accedi a Gestione attività e termina qualsiasi processo di SteamVR prima di riavviare l'applicazione."
+"VRInitError_IPC_CompositorConnectFailed_Description"	"Una componente chiave di SteamVR non funziona correttamente. Esci da SteamVR, accedi a Gestione attività e termina qualsiasi processo di SteamVR rimasto prima di riavviare l'applicazione."
 "[english]VRInitError_IPC_CompositorConnectFailed_Description"	"A key component of SteamVR isn't working properly. Please quit SteamVR, then visit Task Manager and End any remaining SteamVR tasks before restarting the app."
 "VRInitError_IPC_CompositorConnectFailed_Action"	"Ulteriori informazioni"
 "[english]VRInitError_IPC_CompositorConnectFailed_Action"	"More info"
 "VRInitError_IPC_CompositorInvalidConnectResponse_Header"	"Errore di SteamVR"
 "[english]VRInitError_IPC_CompositorInvalidConnectResponse_Header"	"SteamVR Fail"
-"VRInitError_IPC_CompositorInvalidConnectResponse_Description"	"Una componente chiave di SteamVR non funziona correttamente. Esci da SteamVR, accedi a Gestione attività e termina qualsiasi processo di SteamVR prima di riavviare l'applicazione."
+"VRInitError_IPC_CompositorInvalidConnectResponse_Description"	"Una componente chiave di SteamVR non funziona correttamente. Esci da SteamVR, accedi a Gestione attività e termina qualsiasi processo di SteamVR rimasto prima di riavviare l'applicazione."
 "[english]VRInitError_IPC_CompositorInvalidConnectResponse_Description"	"A key component of SteamVR isn't working properly. Please quit SteamVR, then visit Task Manager and End any remaining SteamVR tasks before restarting the app."
 "VRInitError_IPC_CompositorInvalidConnectResponse_Action"	"Ulteriori informazioni"
 "[english]VRInitError_IPC_CompositorInvalidConnectResponse_Action"	"More info"
 "VRInitError_IPC_ConnectFailedAfterMultipleAttempts_Header"	"Errore di SteamVR"
 "[english]VRInitError_IPC_ConnectFailedAfterMultipleAttempts_Header"	"SteamVR Fail"
-"VRInitError_IPC_ConnectFailedAfterMultipleAttempts_Description"	"Una componente chiave di SteamVR non funziona correttamente. Esci da SteamVR, accedi a Gestione attività e termina qualsiasi processo di SteamVR prima di riavviare l'applicazione."
+"VRInitError_IPC_ConnectFailedAfterMultipleAttempts_Description"	"Una componente chiave di SteamVR non funziona correttamente. Esci da SteamVR, accedi a Gestione attività e termina qualsiasi processo di SteamVR rimasto prima di riavviare l'applicazione."
 "[english]VRInitError_IPC_ConnectFailedAfterMultipleAttempts_Description"	"A key component of SteamVR isn't working properly. Please quit SteamVR, then visit Task Manager and End any remaining SteamVR tasks before restarting the app."
 "VRInitError_IPC_ConnectFailedAfterMultipleAttempts_Action"	"Ulteriori informazioni"
 "[english]VRInitError_IPC_ConnectFailedAfterMultipleAttempts_Action"	"More info"
@@ -807,7 +807,7 @@
 "[english]Warning_DismissableWarning_WindowsAeroDisabled_Action"	"Personalization Settings"
 "Popover_Off_Tracker_Header"	"Dispositivo di tracciamento non rilevato"
 "[english]Popover_Off_Tracker_Header"	"Tracker not detected"
-"Popover_NotReady_Tracker_Header"	"Dispositivo di monitoraggio non pronto"
+"Popover_NotReady_Tracker_Header"	"Dispositivo di tracciamento non pronto"
 "[english]Popover_NotReady_Tracker_Header"	"Tracker not ready"
 "Popover_Pose_Tracker_Header"	"Dispositivo di tracciamento attivo"
 "[english]Popover_Pose_Tracker_Header"	"Tracker active"
@@ -831,7 +831,7 @@
 "[english]VRInitError_Compositor_FirmwareRequiresUpdate_Description"	"Your headset is detected, but requires an update to ensure correct operation."
 "VRInitError_Compositor_FirmwareRequiresUpdate_Action"	"Aggiorna il visore"
 "[english]VRInitError_Compositor_FirmwareRequiresUpdate_Action"	"Update Headset"
-"Popover_LowBattery_HMD_Header"	"La carica della batteria del visore è bassa"
+"Popover_LowBattery_HMD_Header"	"Batteria del visore scarsa"
 "[english]Popover_LowBattery_HMD_Header"	"Headset battery low"
 "Popover_LowBattery_HMD_Description"	"La carica della batteria di questo visore è bassa."
 "[english]Popover_LowBattery_HMD_Description"	"This headset's battery is low."
@@ -873,7 +873,7 @@
 "[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Action"	"Learn more"
 "Lighthouse_RecommendControllerUpgradeOverUsb_Header"	"È necessario aggiornare il controller"
 "[english]Lighthouse_RecommendControllerUpgradeOverUsb_Header"	"Controller Update Required"
-"Lighthouse_RecommendControllerUpgradeOverUsb_Description"	"Un controller sta avendo difficoltà a stabilire una connessione wireless. Collega il controller con un cavo USB, dopodiché aggiorna il dispositivo."
+"Lighthouse_RecommendControllerUpgradeOverUsb_Description"	"Un controller sta avendo difficoltà a stabilire una connessione wireless. Collega il controller in questione con un cavo USB, dopodiché aggiorna il dispositivo."
 "[english]Lighthouse_RecommendControllerUpgradeOverUsb_Description"	"A controller is having trouble staying connected wirelessly. Please connect this controller with a USB cable, then update the device."
 "Lighthouse_RecommendControllerUpgradeOverUsb_Action"	"Aggiorna il controller"
 "[english]Lighthouse_RecommendControllerUpgradeOverUsb_Action"	"Update Controller"
@@ -881,7 +881,7 @@
 "[english]Lighthouse_RecommendControllerUpgradeOverUsb_ActionURL"	"vrmonitor://firmwareupdate/"
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"Errore di configurazione delle stazioni di base"
 "[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"Base Station Setup Error"
-"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"SteamVR ha rilevato diverse basi sul canale %1. Per risultati migliori, usa dei canali unici per tutte le stazione di base che sono rilevabili contemporaneamente."
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"SteamVR ha rilevato diverse basi sul canale %1. Per risultati migliori, usa un canale unico per ogni stazione di base facendo in modo che siano tutte rilevabili contemporaneamente."
 "[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"SteamVR has detected multiple bases set to channel %1. For best results, use unique channels for all bases that can be seen at the same time."
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Configura"
 "[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Configure"
@@ -923,7 +923,7 @@
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_Action"	"More info"
 "Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
 "[english]Warning_DismissableWarning_SceneApplicationUsingWrongGraphicsAdapter_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
-"Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Aggiorna i driver della scheda grafica"
+"Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Aggiorna i driver video"
 "[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Header"	"Upgrade Graphics Driver"
 "Warning_DismissableWarning_UpgradeGraphicsDriver_Description"	"SteamVR funziona meglio con i driver video più recenti. Ti consigliamo di aggiornare i tuoi."
 "[english]Warning_DismissableWarning_UpgradeGraphicsDriver_Description"	"SteamVR performs best with an up-to-date graphics driver. We recommend that you update yours now."
@@ -1121,7 +1121,7 @@
 "[english]Popover_Off_Tracker_Action"	"More info"
 "Popover_Off_Tracker_ActionURL"	"https://community.viveport.com/t5/Technical-Support/bd-p/technical-support"
 "[english]Popover_Off_Tracker_ActionURL"	"https://community.viveport.com/t5/Technical-Support/bd-p/technical-support"
-"Popover_Pose_Invalid_Description"	"Questo dispositivo non riconosciuto sta effettuando il tracciamento."
+"Popover_Pose_Invalid_Description"	"Il tracciamento di questo dispositivo non riconosciuto è attivo."
 "[english]Popover_Pose_Invalid_Description"	"This unreconginzed device is currently tracking."
 "Popover_Pose_Invalid_Action"	"Ulteriori informazioni"
 "[english]Popover_Pose_Invalid_Action"	"More info"
@@ -1213,7 +1213,7 @@
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Header"	"Laptop: Headset Display Disconnected"
 "VRInitError_Driver_HmdDisplayNotFoundLaptop_Description"	"Assicurati che i cavi video siano ben collegati al laptop. I laptop potrebbero richiedere delle configurazioni aggiuntive per funzionare in VR."
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Description"	"Please make sure your video cables are securely connected to your laptop. Laptops may require special setup to work with VR."
-"VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstAction"	"Resetta il visore"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstAction"	"Ripristina il visore"
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstAction"	"Reset Headset"
 "VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstActionURL"	"vrmonitor://reboothmd"
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstActionURL"	"vrmonitor://reboothmd"
@@ -1277,5 +1277,9 @@
 "[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_Action"	"More info"
 "VRInitError_Compositor_FailedToCreateDirectModeDisplay_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237"
 "[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237"
+"Warning_DismissableWarning_DevelopmentHardwareNotSupported_Header"	"Dispositivo non più supportato"
+"[english]Warning_DismissableWarning_DevelopmentHardwareNotSupported_Header"	"Device No Longer Supported"
+"Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description"	"<font color=#aaaa00>Il tuo strumento in pre-produzione %1 non è più supportato.</font> <br><br> Questo dispositivo non riceverà più aggiornamenti del firmware, il che risulterà in una riduzione della sua funzionalità. Ti invitiamo a sostituirlo il più presto possibile. <br><br>(hwid: %2)"
+"[english]Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description"	"<font color=#aaaa00>Your pre-production %1 is no longer supported.</font> <br><br> This device will no longer receive firmware updates, and diminished functionality is expected. Please replace at your earliest convenience. <br><br>(hwid: %2)"
 }
 }
