--- a/content/vrmonitor/translations/vrmonitor_errors_japanese.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_japanese.txt
@@ -23,7 +23,7 @@
 "[english]Error_NoCompositorAvailable_Action"	"Restart SteamVR"
 "Error_NoChaperoneAvailable_Header"	"ルームセットアップ"
 "[english]Error_NoChaperoneAvailable_Header"	"Room Setup"
-"Error_NoChaperoneAvailable_Description"	"SteamVR が正常に動作するよう部屋をセットアップしてください。"
+"Error_NoChaperoneAvailable_Description"	"VRプレイエリアとシャペロン境界を設定する必要があるようです。"
 "[english]Error_NoChaperoneAvailable_Description"	"Looks like it's time to configure your VR play area and chaperone boundaries."
 "Error_NoChaperoneAvailable_Action"	"ルームセットアップを実行"
 "[english]Error_NoChaperoneAvailable_Action"	"Perform Room Setup"
@@ -117,7 +117,7 @@
 "[english]VRInitError_Init_UserConfigDirectoryInvalid_Description"	"We've discovered an error with your SteamVR installation. Please locate your SteamVR config directory."
 "VRInitError_Init_UserConfigDirectoryInvalid_Action"	"構成ディレクトリを設定"
 "[english]VRInitError_Init_UserConfigDirectoryInvalid_Action"	"Set Config Directory"
-"VRInitError_Init_HmdNotFound_Header"	"ヘッドセット 未検出"
+"VRInitError_Init_HmdNotFound_Header"	"ヘッドセット未検出"
 "[english]VRInitError_Init_HmdNotFound_Header"	"Headset Not Detected"
 "VRInitError_Init_HmdNotFound_Description"	"ヘッドセットが適切に接続されていることを確認した後に、以下からリセットしてください。"
 "[english]VRInitError_Init_HmdNotFound_Description"	"Make sure your headset is connected properly, then reset it below."
@@ -227,7 +227,7 @@
 "[english]VRInitError_Driver_HmdUnknown_Action"	"Fix it!"
 "VRInitError_Driver_NotLoaded_Header"	"SteamVRエラー"
 "[english]VRInitError_Driver_NotLoaded_Header"	"SteamVR Error"
-"VRInitError_Driver_NotLoaded_Description"	"SteamVR に必要なドライバーが正しくロードされていません。SteamVR のインストール状況を確認してください。"
+"VRInitError_Driver_NotLoaded_Description"	"SteamVRに必要なドライバーが正しくロードされていません。SteamVRのインストール状況を確認してください。"
 "[english]VRInitError_Driver_NotLoaded_Description"	"A driver required for SteamVR isn't loading correctly. Please check your SteamVR installation."
 "VRInitError_Driver_NotLoaded_Action"	"詳細情報"
 "[english]VRInitError_Driver_NotLoaded_Action"	"More info"
@@ -263,7 +263,7 @@
 "[english]VRInitError_Driver_HmdDisplayNotFound_Action"	"More info"
 "VRInitError_IPC_ServerInitFailed_Header"	"SteamVRで問題発生"
 "[english]VRInitError_IPC_ServerInitFailed_Header"	"SteamVR Installation Issue"
-"VRInitError_IPC_ServerInitFailed_Description"	"SteamVRの主要コンポーネントが正しく動作していません。アプリが正しくインストールされていることを確認し、以下でヘッドセットをリセットしてください。"
+"VRInitError_IPC_ServerInitFailed_Description"	"SteamVRの主要コンポーネントが正しく動作していません。SteamVRが正しくインストールされていることを確認してください。"
 "[english]VRInitError_IPC_ServerInitFailed_Description"	"A key component of SteamVR isn't working properly. Please verify that SteamVR is properly installed."
 "VRInitError_IPC_ServerInitFailed_Action"	"詳細情報"
 "[english]VRInitError_IPC_ServerInitFailed_Action"	"More info"
@@ -379,11 +379,11 @@
 "[english]VRInitError_VendorSpecific_HmdFound_ConfigFailedSanityCheck_Header"	"Headset Error"
 "VRInitError_VendorSpecific_HmdFound_ConfigFailedSanityCheck_Description"	"ヘッドセットは検出されていますが、ハードウェアに問題が発生しています。製造元にお問い合わせください。"
 "[english]VRInitError_VendorSpecific_HmdFound_ConfigFailedSanityCheck_Description"	"Your headset is detected, but there is a problem with its hardware. Please contact the manufacturer for assistance."
-"VRInitError_VendorSpecific_HmdFound_ConfigFailedSanityCheck_Action"	"HTC Website へ行く"
+"VRInitError_VendorSpecific_HmdFound_ConfigFailedSanityCheck_Action"	" "
 "[english]VRInitError_VendorSpecific_HmdFound_ConfigFailedSanityCheck_Action"	" "
 "VRInitError_Steam_SteamInstallationNotFound_Header"	"SteamVRエラー"
 "[english]VRInitError_Steam_SteamInstallationNotFound_Header"	"SteamVR Error"
-"VRInitError_Steam_SteamInstallationNotFound_Description"	"SteamVR が正しく動作するためには Steam をインストールする必要があります。"
+"VRInitError_Steam_SteamInstallationNotFound_Description"	"SteamVRが正しく動作するためにはSteamをインストールする必要があります。"
 "[english]VRInitError_Steam_SteamInstallationNotFound_Description"	"Steam must be installed for SteamVR to work correctly."
 "VRInitError_Steam_SteamInstallationNotFound_Action"	"Steam をインストール"
 "[english]VRInitError_Steam_SteamInstallationNotFound_Action"	"Install Steam"
@@ -443,7 +443,7 @@
 "[english]ChaperoneCalibrationState_Error_CollisionBoundsInvalid_Action"	"Perform Room Setup"
 "Lighthouse_UnknownEvent_Header"	"ベースステーションエラー"
 "[english]Lighthouse_UnknownEvent_Header"	"Base Station Error"
-"Lighthouse_UnknownEvent_Description"	"ライトハウスシステムに問題が発生しました。問題を解決するには SteamVR サポートをご利用ください。"
+"Lighthouse_UnknownEvent_Description"	"SteamVRのトラッキングに問題が発生しました。詳細はSteamVRサポートをご覧ください。"
 "[english]Lighthouse_UnknownEvent_Description"	"Something is wrong with SteamVR Tracking. Please visit SteamVR Support for more info."
 "Lighthouse_UnknownEvent_Action"	"詳細情報"
 "[english]Lighthouse_UnknownEvent_Action"	"More info"
@@ -451,7 +451,7 @@
 "[english]Lighthouse_BasestationFactoryError_Header"	"Base Station Error"
 "Lighthouse_BasestationFactoryError_Description"	"このベースステーションに製造エラーがあります。ベースステーションを交換するには、製造元にお問い合わせください。"
 "[english]Lighthouse_BasestationFactoryError_Description"	"This base station has a manufacturing error. Please contact the manufacturer for a replacement base station."
-"Lighthouse_BasestationFactoryError_Action"	"htcvive.com/support を開く"
+"Lighthouse_BasestationFactoryError_Action"	" "
 "[english]Lighthouse_BasestationFactoryError_Action"	" "
 "Lighthouse_Disambiguator_TooManyBasestations_Header"	"ベースステーションが多すぎます"
 "[english]Lighthouse_Disambiguator_TooManyBasestations_Header"	"Too Many Base Stations"
@@ -505,31 +505,31 @@
 "[english]Popover_Pose_Invalid_Header"	"Device active"
 "Popover_Pose_HMD_Header"	"ヘッドセットは利用可能"
 "[english]Popover_Pose_HMD_Header"	"Headset active"
-"Popover_Pose_HMD_Description"	"このヘッドセットは接続されトラッキングされています。"
+"Popover_Pose_HMD_Description"	"ヘッドセットは現在トラッキングされています。"
 "[english]Popover_Pose_HMD_Description"	"Your headset is currently tracking."
-"Popover_Pose_Controller_Header"	"コントローラ 利用可能"
+"Popover_Pose_Controller_Header"	"コントローラはアクティブ"
 "[english]Popover_Pose_Controller_Header"	"Controller active"
-"Popover_Pose_Controller_Description"	"このコントローラは接続されトラッキングされています。"
+"Popover_Pose_Controller_Description"	"このコントローラは現在トラッキングされています。"
 "[english]Popover_Pose_Controller_Description"	"This controller is currently tracking."
 "Popover_Pose_Controller_Action"	"コントローラを識別"
 "[english]Popover_Pose_Controller_Action"	"Identify controller"
-"Popover_Pose_Base_Header"	"ベースステーション 利用可能"
+"Popover_Pose_Base_Header"	"ベースステーションはアクティブ"
 "[english]Popover_Pose_Base_Header"	"Base station active"
-"Popover_Pose_Base_Description"	"このベースステーションは電源が入っていてトラッキングされています。"
+"Popover_Pose_Base_Description"	"このベースステーションは現在トラッキングされています。"
 "[english]Popover_Pose_Base_Description"	"This base station is currently tracking."
 "Popover_Pose_Other_Header"	"その他、利用可能"
 "[english]Popover_Pose_Other_Header"	"Other ready"
 "Popover_Pose_Other_Description"	"このデバイスは接続されトラッキングされています。"
 "[english]Popover_Pose_Other_Description"	"This device is connected and tracking."
-"Popover_NoPose_Invalid_Header"	"無効なデバイス、トラックされていません"
+"Popover_NoPose_Invalid_Header"	"トラッキングされていません"
 "[english]Popover_NoPose_Invalid_Header"	"Not tracking"
 "Popover_NoPose_HMD_Header"	"検索中..."
 "[english]Popover_NoPose_HMD_Header"	"Searching..."
-"Popover_NoPose_HMD_Description"	"このヘッドセットは接続されていますがトラッキングされていません。ベースステーションから見える位置にあることを確認してください。"
+"Popover_NoPose_HMD_Description"	"このヘッドセットはトラッキングされていません。ベースステーションから見える位置にあることを確認してください。"
 "[english]Popover_NoPose_HMD_Description"	"This headset is not currently tracking. Make sure it is in view of a base station. "
 "Popover_NoPose_Controller_Header"	"検索中..."
 "[english]Popover_NoPose_Controller_Header"	"Searching..."
-"Popover_NoPose_Controller_Description"	"このコントローラは接続されていますがトラッキングされていません。ベースステーションから見える位置にあることを確認してください。"
+"Popover_NoPose_Controller_Description"	"このコントローラはトラッキングされていません。ベースステーションから見える位置にあることを確認してください。"
 "[english]Popover_NoPose_Controller_Description"	"This controller is not currently tracking. Make sure it is in view of a base station. "
 "Popover_NoPose_Controller_Action"	"コントローラを識別"
 "[english]Popover_NoPose_Controller_Action"	"Identify controller"
@@ -549,7 +549,7 @@
 "[english]Popover_NoSteamWarning_Action"	"Start Steam"
 "Popover_FirmwareUpdateNeededWarning_Header"	"ファームウェアが最新ではありません"
 "[english]Popover_FirmwareUpdateNeededWarning_Header"	"Update Available"
-"Popover_FirmwareUpdateNeededWarning_Description"	"ファームウェアが最新ではありません。デバイスを正しく動作させるためアップデートしてください。"
+"Popover_FirmwareUpdateNeededWarning_Description"	"このデバイスをアップデートしてください。"
 "[english]Popover_FirmwareUpdateNeededWarning_Description"	"It's time to update this device."
 "Popover_FirmwareUpdateNeededWarning_Action"	"詳細情報"
 "[english]Popover_FirmwareUpdateNeededWarning_Action"	"More info"
@@ -559,9 +559,9 @@
 "[english]Popover_ConnectionRefusedBySteam_Header"	"Steam Error"
 "Popover_ConnectionRefusedBySteam_Description"	"Steam への接続に問題があります。解決するには Steam クライアントを再起動してください。"
 "[english]Popover_ConnectionRefusedBySteam_Description"	"SteamVR has encountered an error connecting to Steam. Please restart Steam and try again."
-"Popover_DirectModeDriverUpdate_Header"	"グラフィックドライバの更新"
+"Popover_DirectModeDriverUpdate_Header"	"ビデオドライバの更新"
 "[english]Popover_DirectModeDriverUpdate_Header"	"Update Graphics Drivers"
-"Popover_DirectModeDriverUpdate_Description"	"ダイレクトディスプレイモードを有効化するには、ビデオドライバを更新してください。バージョン %1 をインストール済みですが、ダイレクトモードにはバージョン %2 が必要です"
+"Popover_DirectModeDriverUpdate_Description"	"ダイレクトディスプレイモードを有効化するには、ビデオドライバを更新してください。バージョン %1 をインストール済みですが、ダイレクトディスプレイモードにはバージョン %2 が必要です"
 "[english]Popover_DirectModeDriverUpdate_Description"	"To enable Direct Display Mode, please update your video drivers. Version %1 is installed, but Direct Display Mode requires version %2"
 "Popover_DirectModeDriverUpdate_Action"	"ドライバのダウンロード"
 "[english]Popover_DirectModeDriverUpdate_Action"	"Download Drivers"
@@ -583,7 +583,7 @@
 "[english]Warning_DismissableWarning_OpticalBasestationSyncWarning_Description"	"There may be something blocking line of sight between your base stations. If this warning persists between sessions you might consider switching to cabled sync."
 "Warning_DismissableWarning_BasestationSingleBaseModeHint_Header"	"一台のベースステーションのみ検出"
 "[english]Warning_DismissableWarning_BasestationSingleBaseModeHint_Header"	"Only one base station detected"
-"Warning_DismissableWarning_BasestationSingleBaseModeHint_Description"	"ベースステーションを一台のみ使用する場合、このベースステーションをモード A に切り替えるだけでトラッキング品質が向上します。"
+"Warning_DismissableWarning_BasestationSingleBaseModeHint_Description"	"ベースステーションを1台のみ使用する場合、このベースステーションをモードAに切り替えると、トラッキング品質が向上します。"
 "[english]Warning_DismissableWarning_BasestationSingleBaseModeHint_Description"	"If you are only using one base station, tracking quality will improve if you switch this base station to mode A."
 "VRInitError_Init_NotAvailableToUtilityApps_Header"	"SteamVRで問題発生"
 "[english]VRInitError_Init_NotAvailableToUtilityApps_Header"	"SteamVR Fail"
@@ -601,7 +601,7 @@
 "[english]Explanation_ResetDismissableWarnings"	"Temporary warnings are reset and will show again as needed."
 "Warning_DismissableWarning_OpticalBasestationSyncWarning_Action"	"その他の情報"
 "[english]Warning_DismissableWarning_OpticalBasestationSyncWarning_Action"	"More info"
-"Warning_DismissableWarning_MissedFrames_Description"	"現在の VR アプリケーションの動作が遅すぎて、快適にお楽しみいただけません。これはアプリケーションが重すぎるためか、ご使用のコンピュータが遅すぎる可能性があります。"
+"Warning_DismissableWarning_MissedFrames_Description"	"現在のVRアプリケーションの動作が遅すぎて、快適にお楽しみいただけません。アプリケーションが重すぎるか、ご使用のコンピュータが遅すぎる可能性があります。"
 "[english]Warning_DismissableWarning_MissedFrames_Description"	"The current VR application runs too slowly, which can result in a bad experience. This may be because the application is too demanding, or your computer is too slow."
 "Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Header"	"ブルートゥースエラー"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Header"	"Bluetooth Error"
@@ -635,13 +635,13 @@
 "[english]Lighthouse_Disambiguator_TdmMasterBaseInSlaveMode_Action"	"More info"
 "Popover_LowBattery_Controller_Header"	"コントローラのバッテリー低下"
 "[english]Popover_LowBattery_Controller_Header"	"Controller battery low"
-"Popover_LowBattery_Controller_Description"	"このコントローラは接続されトラッキングされていますが、バッテリーが低下しています。"
+"Popover_LowBattery_Controller_Description"	"このコントローラのバッテリーが低下しています。"
 "[english]Popover_LowBattery_Controller_Description"	"This controller's battery is low."
 "Popover_LowBattery_Controller_Action"	"コントローラの識別"
 "[english]Popover_LowBattery_Controller_Action"	"Identify controller"
 "Warning_DismissableWarning_BluetoothLinkCommunicationFailed_Header"	"ブルートゥースエラー"
 "[english]Warning_DismissableWarning_BluetoothLinkCommunicationFailed_Header"	"Bluetooth Error"
-"Warning_DismissableWarning_BluetoothLinkCommunicationFailed_Description"	"リンクボックスの接続をチェックしてから、電源プラグを入れ直してリンクボックスをリセットし、SteamVR を再起動してください。"
+"Warning_DismissableWarning_BluetoothLinkCommunicationFailed_Description"	"リンクボックスの接続をチェックし、電源プラグを入れ直してリンクボックスをリセットしてから、SteamVRを再起動してください。"
 "[english]Warning_DismissableWarning_BluetoothLinkCommunicationFailed_Description"	"Check link box connections, unplug and replug power to the link box to reset it, then restart SteamVR."
 "Warning_DismissableWarning_BluetoothLinkCommunicationFailed_Action"	"ブルートゥース設定"
 "[english]Warning_DismissableWarning_BluetoothLinkCommunicationFailed_Action"	"Bluetooth Settings"
@@ -661,9 +661,9 @@
 "[english]Settings_PowerOffBaseStations_Text"	"Put Base Station in Standby mode when VR is not in use"
 "WorkshopUpload_Error_SteamClientNotFound"	"Steam クライアントが起動していないため、SteamVR ワークショップアップロードツールを立ち上げられません。"
 "[english]WorkshopUpload_Error_SteamClientNotFound"	"Cannot start the SteamVR Workshop Upload Tool because the Steam Client is not running."
-"Popover_BaseStationNoPowerManagement_Header"	"電源管理なし"
+"Popover_BaseStationNoPowerManagement_Header"	"電源管理"
 "[english]Popover_BaseStationNoPowerManagement_Header"	"Power Management"
-"Popover_BaseStationNoPowerManagement_Description"	"このベースステーションを電源管理に加えることはできません。"
+"Popover_BaseStationNoPowerManagement_Description"	"このベースステーションはリモート電源管理に対応していません。"
 "[english]Popover_BaseStationNoPowerManagement_Description"	"This base station is not designed to support remote power management."
 "VRInitError_Internal_Header"	"SteamVRで問題発生"
 "[english]VRInitError_Internal_Header"	"SteamVR Fail"
@@ -679,15 +679,15 @@
 "[english]Warning_DismissableWarning_UnknownHardwareDetected_Header"	"New Device Detected"
 "Warning_DismissableWarning_UnknownHardwareDetected_Description"	"ファームウェアマニフェストの登録が無いハードウェアが検出されました。"
 "[english]Warning_DismissableWarning_UnknownHardwareDetected_Description"	"Congrats on the new hardware! Please review the setup instructions for this device so SteamVR can properly detect it."
-"Warning_DismissableWarning_WindowsAeroDisabled_Header"	"Windows Aero が無効"
+"Warning_DismissableWarning_WindowsAeroDisabled_Header"	"パフォーマンス最適化"
 "[english]Warning_DismissableWarning_WindowsAeroDisabled_Header"	"Performance Optimization"
-"Warning_DismissableWarning_WindowsAeroDisabled_Description"	"VR を最高のパフォーマンスで実行するには、デスクトップ上で右クリック、個人設定を選択して Aero テーマに切り替えてください。"
+"Warning_DismissableWarning_WindowsAeroDisabled_Description"	"VRを最高のパフォーマンスで実行するには、Windowsの個人用設定でAeroテーマに切り替えてください。"
 "[english]Warning_DismissableWarning_WindowsAeroDisabled_Description"	"For best performance when running VR, please switch to an Aero theme in Windows Personalization settings."
 "Popover_Standby_Invalid_Header"	"スタンバイ中"
 "[english]Popover_Standby_Invalid_Header"	"Standing by"
 "Popover_Standby_HMD_Header"	"ヘッドセットがスタンバイ中"
 "[english]Popover_Standby_HMD_Header"	"Headset standing by"
-"Popover_Standby_HMD_Description"	"このヘッドセットはスタンバイモードです。復帰させるには、ヘッドセットを移動してください。"
+"Popover_Standby_HMD_Description"	"ヘッドセットを復帰させるには、動かしてください。"
 "[english]Popover_Standby_HMD_Description"	"Move your headset to wake it up."
 "Popover_Standby_Controller_Header"	"コントローラがスタンバイ中"
 "[english]Popover_Standby_Controller_Header"	"Controller standing by"
@@ -803,7 +803,7 @@
 "[english]VRInitError_Driver_HmdDisplayMirrored_Action"	"More info"
 "Warning_DismissableWarning_SomeDisplaysAreMirroring_Action"	"ディスプレイプロパティ"
 "[english]Warning_DismissableWarning_SomeDisplaysAreMirroring_Action"	"Display Properties"
-"Warning_DismissableWarning_WindowsAeroDisabled_Action"	"個人設定を開く"
+"Warning_DismissableWarning_WindowsAeroDisabled_Action"	"個人設定"
 "[english]Warning_DismissableWarning_WindowsAeroDisabled_Action"	"Personalization Settings"
 "Popover_Off_Tracker_Header"	"トラッカーが接続されていません"
 "[english]Popover_Off_Tracker_Header"	"Tracker not detected"
@@ -1225,5 +1225,7 @@
 "[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"automatic"
 "Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"カスタム"
 "[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"your custom"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237&l=japanese"
+"[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237"
 }
 }
