--- a/content/vrmonitor/translations/vrmonitor_errors_portuguese.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_portuguese.txt
@@ -262,9 +262,9 @@
 "[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"Please make sure your video cables are securely connected. The headset's display was not found."
 "VRInitError_Driver_HmdDisplayNotFound_Action"	"Mais informações"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Action"	"More info"
-"VRInitError_IPC_ServerInitFailed_Header"	"Falha do SteamVR"
+"VRInitError_IPC_ServerInitFailed_Header"	"Problema de instalação do SteamVR"
 "[english]VRInitError_IPC_ServerInitFailed_Header"	"SteamVR Installation Issue"
-"VRInitError_IPC_ServerInitFailed_Description"	"Um componente crucial do SteamVR não está a funcionar devidamente. Verifica se a aplicação está devidamente instalada e depois reinicia o teu headset abaixo."
+"VRInitError_IPC_ServerInitFailed_Description"	"Um componente crucial do SteamVR não está a funcionar devidamente. Por favor, verifica se o SteamVR foi devidamente instalado."
 "[english]VRInitError_IPC_ServerInitFailed_Description"	"A key component of SteamVR isn't working properly. Please verify that SteamVR is properly installed."
 "VRInitError_IPC_ServerInitFailed_Action"	"Mais informações"
 "[english]VRInitError_IPC_ServerInitFailed_Action"	"More info"
@@ -1247,5 +1247,45 @@
 "[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"automatic"
 "Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"personalizada"
 "[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"your custom"
+"VRInitError_IPC_ConnectFailedAfterTargetExited_Header"	"Falha do SteamVR"
+"[english]VRInitError_IPC_ConnectFailedAfterTargetExited_Header"	"SteamVR Fail"
+"VRInitError_IPC_ConnectFailedAfterTargetExited_Description"	"Um componente crucial do SteamVR não está a funcionar devidamente. Por favor, reinicia o SteamVR."
+"[english]VRInitError_IPC_ConnectFailedAfterTargetExited_Description"	"A key component of SteamVR isn't working properly. Please restart SteamVR."
+"VRInitError_IPC_ConnectFailedAfterTargetExited_Action"	"Mais informações"
+"[english]VRInitError_IPC_ConnectFailedAfterTargetExited_Action"	"More info"
+"VRInitError_IPC_ConnectFailedAfterTargetExited_ActionURL"	"https://help.steampowered.com/pt/wizard/HelpWithGameIssue/?appid=250820&issueid=374"
+"[english]VRInitError_IPC_ConnectFailedAfterTargetExited_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374"
+"VRInitError_IPC_NamespaceUnavailable_Header"	"Falha do SteamVR"
+"[english]VRInitError_IPC_NamespaceUnavailable_Header"	"SteamVR Fail"
+"VRInitError_IPC_NamespaceUnavailable_Description"	"Um componente crucial do SteamVR não está a funcionar devidamente. Por favor, reinicia o SteamVR."
+"[english]VRInitError_IPC_NamespaceUnavailable_Description"	"A key component of SteamVR isn't working properly. Please restart SteamVR."
+"VRInitError_IPC_NamespaceUnavailable_Action"	"Mais informações"
+"[english]VRInitError_IPC_NamespaceUnavailable_Action"	"More info"
+"VRInitError_IPC_NamespaceUnavailable_ActionURL"	"https://help.steampowered.com/pt/wizard/HelpWithGameIssue/?appid=250820&issueid=374"
+"[english]VRInitError_IPC_NamespaceUnavailable_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374"
+"Warning_DismissableWarning_BaseStationUpdateFailedToComplete_Header"	"Atualização incompleta"
+"[english]Warning_DismissableWarning_BaseStationUpdateFailedToComplete_Header"	"Incomplete Device Update"
+"Warning_DismissableWarning_BaseStationUpdateFailedToComplete_Description"	"A atualização de uma estação-base foi interrompida ou não pôde ser concluída. Clica em \"Recuperação\" para tentares resolver o problema."
+"[english]Warning_DismissableWarning_BaseStationUpdateFailedToComplete_Description"	"A Base Station update was interrupted or failed to complete. Please click 'Recovery' to begin the procedure."
+"Warning_DismissableWarning_BaseStationUpdateFailedToComplete_Action"	"Recuperação"
+"[english]Warning_DismissableWarning_BaseStationUpdateFailedToComplete_Action"	"Recovery"
+"Warning_DismissableWarning_BaseStationUpdateFailedToComplete_ActionURL"	"vrmonitor://open/settings/basestation/recovery"
+"[english]Warning_DismissableWarning_BaseStationUpdateFailedToComplete_ActionURL"	"vrmonitor://open/settings/basestation/recovery"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_Header"	"Problema com ligação do ecrã"
+"[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_Header"	"Display Connection Trouble"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_Description"	"A tua placa gráfica não pôde estabelecer ligação com o ecrã do teu headset. Experimenta remover adaptadores ou extensores de cabos que estejas a usar. Experimenta outra porta na tua placa gráfica, se possível.<b>Usa o link abaixo para reiniciares o headset e assim a placa gráfica tentar novamente.</b>"
+"[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_Description"	"Your graphics card cannot successfully connect to your HMD display. Try removing any cable adapters or extenders you are using. Try another port on your GPU if one is available. <b>Use the reset link below to reset the HMD so the GPU will try again.</b>"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_FirstAction"	"Reiniciar headset"
+"[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_FirstAction"	"Reset Headset"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_FirstActionURL"	"vrmonitor://reboothmd"
+"[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_FirstActionURL"	"vrmonitor://reboothmd"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_Action"	"Mais informações"
+"[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_Action"	"More info"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237"
+"[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237"
+"Warning_DismissableWarning_DevelopmentHardwareNotSupported_Header"	"O dispositivo já não é compatível"
+"[english]Warning_DismissableWarning_DevelopmentHardwareNotSupported_Header"	"Device No Longer Supported"
+"Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description"	"O dispositivo %1 (%2) é uma ferramenta de desenvolvimento de pré-produção e já não é compatível.<br><br><font color=#ff0000>O dispositivo pode não funcionar devidamente e recomendamos que seja substituído imediatamente.</font>"
+"[english]Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description"	"<font color=#aaaa00>Your pre-production %1 is no longer supported.</font> <br><br> This device will no longer receive firmware updates, and diminished functionality is expected. Please replace at your earliest convenience. <br><br>(hwid: %2)"
 }
 }
