--- a/content/vrmonitor/translations/vrmonitor_errors_thai.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_thai.txt
@@ -261,9 +261,9 @@
 "[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"Please make sure your video cables are securely connected. The headset's display was not found."
 "VRInitError_Driver_HmdDisplayNotFound_Action"	"ข้อมูลเพิ่มเติม"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Action"	"More info"
-"VRInitError_IPC_ServerInitFailed_Header"	"SteamVR ล้มเหลว"
+"VRInitError_IPC_ServerInitFailed_Header"	"ปัญหาการติดตั้ง SteamVR"
 "[english]VRInitError_IPC_ServerInitFailed_Header"	"SteamVR Installation Issue"
-"VRInitError_IPC_ServerInitFailed_Description"	"ส่วนประกอบสำคัญของ SteamVR ไม่ได้กำลังทำงานอย่างถูกต้อง กรุณายืนยันว่าแอปนั้นถูกติดตั้งอย่างถูกต้อง จากนั้นรีเซ็ตเครื่องสวมศีรษะของคุณจากด้านล่างนี้"
+"VRInitError_IPC_ServerInitFailed_Description"	"ส่วนประกอบสำคัญของ SteamVR ไม่ได้กำลังทำงานอย่างถูกต้อง กรุณายืนยันว่า SteamVR ถูกติดตั้งอย่างถูกต้อง"
 "[english]VRInitError_IPC_ServerInitFailed_Description"	"A key component of SteamVR isn't working properly. Please verify that SteamVR is properly installed."
 "VRInitError_IPC_ServerInitFailed_Action"	"ข้อมูลเพิ่มเติม"
 "[english]VRInitError_IPC_ServerInitFailed_Action"	"More info"
@@ -1246,5 +1246,41 @@
 "[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"automatic"
 "Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"แบบกำหนดเอง"
 "[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"your custom"
+"VRInitError_IPC_ConnectFailedAfterTargetExited_Header"	"SteamVR ล้มเหลว"
+"[english]VRInitError_IPC_ConnectFailedAfterTargetExited_Header"	"SteamVR Fail"
+"VRInitError_IPC_ConnectFailedAfterTargetExited_Description"	"ส่วนประกอบสำคัญของ SteamVR ไม่ได้กำลังทำงานอย่างถูกต้อง กรุณารีสตาร์ท SteamVR"
+"[english]VRInitError_IPC_ConnectFailedAfterTargetExited_Description"	"A key component of SteamVR isn't working properly. Please restart SteamVR."
+"VRInitError_IPC_ConnectFailedAfterTargetExited_Action"	"ข้อมูลเพิ่มเติม"
+"[english]VRInitError_IPC_ConnectFailedAfterTargetExited_Action"	"More info"
+"VRInitError_IPC_ConnectFailedAfterTargetExited_ActionURL"	"https://help.steampowered.com/th/wizard/HelpWithGameIssue/?appid=250820&issueid=374"
+"[english]VRInitError_IPC_ConnectFailedAfterTargetExited_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374"
+"VRInitError_IPC_NamespaceUnavailable_Header"	"SteamVR ล้มเหลว"
+"[english]VRInitError_IPC_NamespaceUnavailable_Header"	"SteamVR Fail"
+"VRInitError_IPC_NamespaceUnavailable_Description"	"ส่วนประกอบสำคัญของ SteamVR ไม่ได้กำลังทำงานอย่างถูกต้อง กรุณารีสตาร์ท SteamVR"
+"[english]VRInitError_IPC_NamespaceUnavailable_Description"	"A key component of SteamVR isn't working properly. Please restart SteamVR."
+"VRInitError_IPC_NamespaceUnavailable_Action"	"ข้อมูลเพิ่มเติม"
+"[english]VRInitError_IPC_NamespaceUnavailable_Action"	"More info"
+"VRInitError_IPC_NamespaceUnavailable_ActionURL"	"https://help.steampowered.com/th/wizard/HelpWithGameIssue/?appid=250820&issueid=374"
+"[english]VRInitError_IPC_NamespaceUnavailable_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374"
+"Warning_DismissableWarning_BaseStationUpdateFailedToComplete_Header"	"การอัปเดตอุปกรณ์ไม่สมบูรณ์"
+"[english]Warning_DismissableWarning_BaseStationUpdateFailedToComplete_Header"	"Incomplete Device Update"
+"Warning_DismissableWarning_BaseStationUpdateFailedToComplete_Description"	"การอัปเดตสถานีฐานถูกขัดจังหวะหรือล้มเหลวในการดำเนินการให้เสร็จสมบูรณ์ กรุณาคลิก 'กู้คืน' เพื่อเริ่มขั้นตอน"
+"[english]Warning_DismissableWarning_BaseStationUpdateFailedToComplete_Description"	"A Base Station update was interrupted or failed to complete. Please click 'Recovery' to begin the procedure."
+"Warning_DismissableWarning_BaseStationUpdateFailedToComplete_Action"	"กู้คืน"
+"[english]Warning_DismissableWarning_BaseStationUpdateFailedToComplete_Action"	"Recovery"
+"Warning_DismissableWarning_BaseStationUpdateFailedToComplete_ActionURL"	"vrmonitor://open/settings/basestation/recovery"
+"[english]Warning_DismissableWarning_BaseStationUpdateFailedToComplete_ActionURL"	"vrmonitor://open/settings/basestation/recovery"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_Header"	"ปัญหาการเชื่อมต่อจอแสดงผล"
+"[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_Header"	"Display Connection Trouble"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_Description"	"การ์ดกราฟิกส์ของคุณไม่สามารถเชื่อมต่อไปยังจอแสดงผลหน้าจอสวมศีรษะของคุณได้ กรุณาลองถอดสายอะแดปเตอร์หรือส่วนต่อขยายสายใดก็ตามที่คุณกำลังใช้อยู่ ลองใช้พอร์ตอื่นบน GPU ของคุณหากมี <b>ใช้ลิงก์รีเซ็ตด้านล่างนี้เพื่อรีเซ็ตหน้าจอสวมศีรษะ จากนั้นลองให้ GPU ทำงานใหม่อีกครั้ง</b>"
+"[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_Description"	"Your graphics card cannot successfully connect to your HMD display. Try removing any cable adapters or extenders you are using. Try another port on your GPU if one is available. <b>Use the reset link below to reset the HMD so the GPU will try again.</b>"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_FirstAction"	"รีเซ็ตเครื่องสวมศีรษะ"
+"[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_FirstAction"	"Reset Headset"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_FirstActionURL"	"vrmonitor://reboothmd"
+"[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_FirstActionURL"	"vrmonitor://reboothmd"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_Action"	"ข้อมูลเพิ่มเติม"
+"[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_Action"	"More info"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237&l=thai"
+"[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237"
 }
 }
