--- a/content/vrmonitor/translations/vrmonitor_finnish.txt
+++ b/content/vrmonitor/translations/vrmonitor_finnish.txt
@@ -141,22 +141,22 @@
 "[english]PerfTestResults_WorstGPU"	"Worst: %1"
 "SteamVRSystemState_Off"	"Pois käytöstä"
 "[english]SteamVRSystemState_Off"	"Off"
-"SteamVRSystemState_Ready"	"Valmis"
+"SteamVRSystemState_Ready"	"Nyt pelaamassa"
 "[english]SteamVRSystemState_Ready"	"Now Playing"
 "SteamVRSystemState_NotReady"	"Ei valmis"
 "[english]SteamVRSystemState_NotReady"	" "
-"SteamVRSystemState_Connecting"	"Yhdistetään"
+"SteamVRSystemState_Connecting"	"Haetaan..."
 "[english]SteamVRSystemState_Connecting"	"Searching..."
-"SteamVRSystemState_Shutdown"	"Sammuta"
-"[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
+"SteamVRSystemState_Shutdown"	"VR suljetaan..."
+"[english]SteamVRSystemState_Shutdown"	"Exiting VR..."
 "SteamVRSystemState_Installing"	"Laitteiston asennus käynnissä..."
 "[english]SteamVRSystemState_Installing"	"Hardware setup in progress..."
 "SteamVRSystemState_Restart"	"Käynnistetään SteamVR uudelleen..."
 "[english]SteamVRSystemState_Restart"	"Restarting SteamVR..."
 "SteamVRSystemState_Startup"	"Käynnistetään"
 "[english]SteamVRSystemState_Startup"	"Starting VR..."
-"SteamVRSystemState_ShutdownRequested"	"Valmistellaan sammutusta..."
-"[english]SteamVRSystemState_ShutdownRequested"	"Exiting SteamVR..."
+"SteamVRSystemState_ShutdownRequested"	"VR suljetaan..."
+"[english]SteamVRSystemState_ShutdownRequested"	"Exiting VR..."
 "MenuAction_StatusBar"	"Tila"
 "[english]MenuAction_StatusBar"	"Status"
 "MenuAction_RoomOverview"	"Huoneen yleiskatsaus"
@@ -1369,7 +1369,7 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_Title"	" Base Station Update Failed"
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"Laiteohjelmiston päivitys epäonnistui."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"This device update failed."
-"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Jos laitteistopäivitys ei edelleenkään onnistu, sulje SteamVR, poista ja kytke linkkilaatikon sekä tukiaseman kaapelit uudelleen. Käynnistä SteamVR ja yritä uudelleen."
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Jos laitteistopäivitys ei edelleenkään onnistu, sulje SteamVR, irrota ja kytke tukiaseman virtakaapelit uudelleen. Käynnistä SteamVR ja yritä uudelleen."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR, and try again.</ul>"
 "FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Napsauta 'Yritä uudestaan' alla yrittääksesi uudestaan."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Click 'Retry' below to try again."
@@ -2238,6 +2238,12 @@
 "[english]MenuAction_LegacySettings"	"Developer Settings"
 "MenuAction_Developer"	"Kehittäjä"
 "[english]MenuAction_Developer"	"Developer"
+"MenuAction_WebDevTools"	"Web-kehitystyökalut"
+"[english]MenuAction_WebDevTools"	"Web Dev Tools"
+"MenuAction_WebConsole"	"Web-konsoli"
+"[english]MenuAction_WebConsole"	"Web Console"
+"MenuAction_WebDevToolsPlaceholder"	"Instansseja ei löytynyt"
+"[english]MenuAction_WebDevToolsPlaceholder"	"No Instances Found"
 "MessageBox_OpenWirelessSettings"	"Bluetooth-asetukset"
 "[english]MessageBox_OpenWirelessSettings"	"Bluetooth Settings"
 "FirmwareWizard_DeviceOverview_FailedToUpdate"	"Päivitys epäonnistui"
@@ -2258,7 +2264,7 @@
 "[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station."
 "BS_PowerManagement_VisibleNowInTracking"	"Tukiasemat näkyvät nyt tässä seurantaistunnossa"
 "[english]BS_PowerManagement_VisibleNowInTracking"	"Visible now in this tracking session."
-"Monitor_RestartRequestedDialog_Title"	"Käynnistettävä uudelleen"
+"Monitor_RestartRequestedDialog_Title"	"Ajurin %1 käyttöönotto edellyttää uudelleenkäynnistystä"
 "[english]Monitor_RestartRequestedDialog_Title"	"Restart for %1 driver"
 "Monitor_RestartRequestedDialog_Message"	"%1"
 "[english]Monitor_RestartRequestedDialog_Message"	"%1"
@@ -2288,10 +2294,10 @@
 "[english]BS_PowerManagement_ObservedInTracking"	"Observed in a prior tracking session."
 "BS_PowerManagement_FailedToConnectRefresh"	"%1 epäonnistui yhteyden muodostamisessa. Klikkaa \"Päivitä\" ja yritä uudelleen."
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
-"Monitor_WakingBaseStations"	"Tukiasemia herätetään..."
-"[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
+"Monitor_WakingBaseStations"	"Tukiasemat heräilemässä..."
+"[english]Monitor_WakingBaseStations"	"Base stations waking up..."
 "Monitor_PuttingBaseStationsInStandby"	"Tukiasemat siirtyvät lepotilaan..."
-"[english]Monitor_PuttingBaseStationsInStandby"	"Bases Powering Down..."
+"[english]Monitor_PuttingBaseStationsInStandby"	"Base stations standing by..."
 "Settings_BaseStation_ContinueBaseStationUpdate"	"Palautus keskeytyneen päivityksen vuoksi"
 "[english]Settings_BaseStation_ContinueBaseStationUpdate"	"Recover From Incomplete Update"
 "FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"Päivitys keskeytetty. Tukiasemaan on jo asennettu uudempi päivitys."
@@ -2322,7 +2328,7 @@
 "[english]VRApplicationError_None"	"No Error"
 "VRApplicationError_AppKeyAlreadyExists"	"Sovellus on jo rekisteröity"
 "[english]VRApplicationError_AppKeyAlreadyExists"	"Application is already registered"
-"VRApplicationError_UnknownApplication"	"Tunnistamaton sovellus"
+"VRApplicationError_UnknownApplication"	"Tuntematon sovellus"
 "[english]VRApplicationError_UnknownApplication"	"Unknown application"
 "VRApplicationError_SteamVRIsExiting"	"SteamVR poistuu"
 "[english]VRApplicationError_SteamVRIsExiting"	"SteamVR is exiting"
@@ -2334,5 +2340,65 @@
 "[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
 "oculus_display_lost"	"Oculuksen yhteys näyttöön katkesi. Käynnistä uudelleen, kun olet tarkistanut VR-lasiesi kytkennät."
 "[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
+"SteamVRSystemState_Standby"	"Valmiustilassa"
+"[english]SteamVRSystemState_Standby"	"Standing by"
+"SteamVRSystemState_PseudoState_Waiting"	"Odottaa..."
+"[english]SteamVRSystemState_PseudoState_Waiting"	"Waiting..."
+"SteamVRSystemState_PseudoState_Welcome"	"Tervetuloa"
+"[english]SteamVRSystemState_PseudoState_Welcome"	"Welcome"
+"SteamVRSystemState_Ready_Application"	"%1"
+"[english]SteamVRSystemState_Ready_Application"	"%1"
+"SteamVRSystemState_Connecting_Application_Unknown"	"Siirrä vr-lasit pelialueelle"
+"[english]SteamVRSystemState_Connecting_Application_Unknown"	"Move headset to the play area"
+"SteamVRSystemState_Connecting_Application_Lighthouse"	"Varmista vr-lasien ja tukiasemien yhteys"
+"[english]SteamVRSystemState_Connecting_Application_Lighthouse"	"Make sure headset can see bases"
+"SteamVRSystemState_Connecting_Application_InsideOutCamera"	"Varmista, että vr-laseilla näkee pelialueen"
+"[english]SteamVRSystemState_Connecting_Application_InsideOutCamera"	"Make sure headset can see the play area"
+"SteamVRSystemState_Connecting_Application_OutsideInCamera"	"Varmista seurantakameroiden ja vr-lasien yhteys"
+"[english]SteamVRSystemState_Connecting_Application_OutsideInCamera"	"Make sure tracking cameras can see the headset"
+"SteamVRSystemState_Standby_Application"	"Pue päälle VR-lasisi, jotta ne menevät päälle"
+"[english]SteamVRSystemState_Standby_Application"	"Put on your headset to wake VR"
+"SteamVRSystemState_PseudoState_Welcome_Application"	"Kytke VR-lasisi"
+"[english]SteamVRSystemState_PseudoState_Welcome_Application"	"Please plug in your VR headset"
+"MenuAction_SystemReportViewer"	"Järjestelmäraportin katseluohjelma"
+"[english]MenuAction_SystemReportViewer"	"System Report Viewer"
+"MenuAction_DebugCommands"	"Virheenkorjauskomennot"
+"[english]MenuAction_DebugCommands"	"Debug Commands"
+"FirmwareWizard_ProgressPercentFinishing"	"[ Viimeistellään... ]"
+"[english]FirmwareWizard_ProgressPercentFinishing"	"[ Finishing... ]"
+"FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS20"	"Tukiaseman päivitys onnistui."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS20"	"Base Station successfully updated."
+"MessageBox_RemindMeLater"	"Muistuta myöhemmin"
+"[english]MessageBox_RemindMeLater"	"Remind Me Later"
+"FirmwareWizard_Nag_Title"	"Suositeltu laitteistopäivitys"
+"[english]FirmwareWizard_Nag_Title"	"Recommended Device Update"
+"FirmwareWizard_DeviceOverview_Nagging_Title"	"Vaatii laitteiston päivityksen"
+"[english]FirmwareWizard_DeviceOverview_Nagging_Title"	"Device Updates Required"
+"FirmwareWizard_DeviceOverview_TextContent_Nag"	"Vaadittuja laitteistopäivityksiä saatavilla. Valitse päivitettävä laite."
+"[english]FirmwareWizard_DeviceOverview_TextContent_Nag"	"Required device updates are available. Select a device to update."
+"HeadsetView_Title"	"VR-näkymä"
+"[english]HeadsetView_Title"	"VR View"
+"HeadsetView_MenuLabel"	"Valikko"
+"[english]HeadsetView_MenuLabel"	"Menu"
+"HeadsetView_PressKeyToExit"	"Paina %1 poistuaksesi koko ruudun tilasta"
+"[english]HeadsetView_PressKeyToExit"	"Press %1 to exit Full Screen"
+"HeadsetView_DockButtonLabel"	"Kiinnitä näkymä"
+"[english]HeadsetView_DockButtonLabel"	"Dock View"
+"HeadsetView_UndockButtonLabel"	"Vapauta näkymä"
+"[english]HeadsetView_UndockButtonLabel"	"Undock View"
+"HeadsetView_CloseButtonLabel"	"Sulje"
+"[english]HeadsetView_CloseButtonLabel"	"Close"
+"HeadsetView_EyeMode_Both"	"Molemmat silmät"
+"[english]HeadsetView_EyeMode_Both"	"Both Eyes"
+"HeadsetView_EyeMode_Left"	"Vasen silmä"
+"[english]HeadsetView_EyeMode_Left"	"Left Eye"
+"HeadsetView_EyeMode_Right"	"Oikea silmä"
+"[english]HeadsetView_EyeMode_Right"	"Right Eye"
+"HeadsetView_EyeMode_BothLeftDominant"	"Molemmat silmät - vasen silmä dominoiva"
+"[english]HeadsetView_EyeMode_BothLeftDominant"	"Both Eyes - Left Dominant"
+"HeadsetView_EyeMode_BothRightDominant"	"Molemmat silmät - oikea silmä dominoiva"
+"[english]HeadsetView_EyeMode_BothRightDominant"	"Both Eyes - Right Dominant"
+"HeadsetView_ViewMode_Center"	"Keskinäkymä"
+"[english]HeadsetView_ViewMode_Center"	"Center View"
 }
 }
