--- a/content/vrmonitor/translations/vrmonitor_italian.txt
+++ b/content/vrmonitor/translations/vrmonitor_italian.txt
@@ -147,16 +147,16 @@
 "[english]SteamVRSystemState_NotReady"	" "
 "SteamVRSystemState_Connecting"	"Ricerca in corso..."
 "[english]SteamVRSystemState_Connecting"	"Searching..."
-"SteamVRSystemState_Shutdown"	"Chiusura di SteamVR..."
-"[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
+"SteamVRSystemState_Shutdown"	"Chiusura VR..."
+"[english]SteamVRSystemState_Shutdown"	"Exiting VR..."
 "SteamVRSystemState_Installing"	"Configurazione dell'hardware in corso..."
 "[english]SteamVRSystemState_Installing"	"Hardware setup in progress..."
 "SteamVRSystemState_Restart"	"Riavvio di SteamVR..."
 "[english]SteamVRSystemState_Restart"	"Restarting SteamVR..."
 "SteamVRSystemState_Startup"	"Avvio VR..."
 "[english]SteamVRSystemState_Startup"	"Starting VR..."
-"SteamVRSystemState_ShutdownRequested"	"Chiusura di SteamVR..."
-"[english]SteamVRSystemState_ShutdownRequested"	"Exiting SteamVR..."
+"SteamVRSystemState_ShutdownRequested"	"Chiusura VR..."
+"[english]SteamVRSystemState_ShutdownRequested"	"Exiting VR..."
 "MenuAction_StatusBar"	"Stato"
 "[english]MenuAction_StatusBar"	"Status"
 "MenuAction_RoomOverview"	"Mostra la panoramica della stanza"
@@ -165,7 +165,7 @@
 "[english]MenuAction_Settings"	"Settings"
 "MenuAction_DiagnosticsMenu"	"Diagnostica"
 "[english]MenuAction_DiagnosticsMenu"	"Diagnostics"
-"MenuAction_PlaylistEditor"	"Editor di playlist"
+"MenuAction_PlaylistEditor"	"Editor playlist"
 "[english]MenuAction_PlaylistEditor"	"Playlist Editor"
 "MenuAction_PlaylistPlayer"	"Lettore di playlist"
 "[english]MenuAction_PlaylistPlayer"	"Playlist Player"
@@ -193,21 +193,21 @@
 "[english]MenuAction_SteamVRDeveloperSupport"	"SteamVR Developer Support"
 "MenuAction_SteamWorksDeveloperSupport"	"Assistenza degli sviluppatori di SteamWorks"
 "[english]MenuAction_SteamWorksDeveloperSupport"	"SteamWorks Developer Support"
-"MenuAction_CreateSystemReport"	"Crea un rapporto del sistema"
+"MenuAction_CreateSystemReport"	"Crea un rapporto di sistema"
 "[english]MenuAction_CreateSystemReport"	"Create System Report"
 "MenuAction_DisplayFrameTiming"	"Sincron. fotogrammi avanzata"
 "[english]MenuAction_DisplayFrameTiming"	"Advanced Frame Timing"
-"MenuAction_RecordTrackingData"	"Registra i dati di monitoraggio"
+"MenuAction_RecordTrackingData"	"Registra i dati di tracciamento"
 "[english]MenuAction_RecordTrackingData"	"Record Tracking Data"
 "MenuAction_StopRecording"	"Arresta registrazione"
 "[english]MenuAction_StopRecording"	"Stop Recording"
-"MenuAction_Crash"	"Blocco"
+"MenuAction_Crash"	"Crash"
 "[english]MenuAction_Crash"	"Crash"
-"MenuAction_RefreshStatusNow"	"Aggiorna stato ora"
+"MenuAction_RefreshStatusNow"	"Aggiorna lo stato"
 "[english]MenuAction_RefreshStatusNow"	"Refresh Status Now"
-"MenuAction_ViewLogDirectory"	"Mostra registri"
+"MenuAction_ViewLogDirectory"	"Mostra i log"
 "[english]MenuAction_ViewLogDirectory"	"View Logs"
-"MenuAction_ShowLogDirectory"	"Mostra cartella di registro"
+"MenuAction_ShowLogDirectory"	"Mostra cartella dei log"
 "[english]MenuAction_ShowLogDirectory"	"Show Log Directory"
 "MenuAction_ShowConfigDirectory"	"Mostra cartella di configurazione"
 "[english]MenuAction_ShowConfigDirectory"	"Show Config Directory"
@@ -1505,7 +1505,7 @@
 "[english]Settings_DisableEnhancedPowerManagement_Success"	"Windows Enhanced Power Management has been disabled for installed SteamVR USB devices.\n\nYou must replug the USB devices for changes to take effect.\n"
 "MenuAction_DisableEnhancedPowerManagement"	"Disabilita risparmio energetico"
 "[english]MenuAction_DisableEnhancedPowerManagement"	"Disable Power Management"
-"Explanation_DisableEnhancedPowerManagement"	"Se osservi misteriose perdite di monitoraggio o non sei in grado di associare i controller wireless, disabilita il Risparmio energetico avanzato di Windows per i dispositivi USB SteamVR."
+"Explanation_DisableEnhancedPowerManagement"	"Se osservi strane perdite di tracciamento o non riesci ad associare i controller wireless, disabilita il risparmio energetico avanzato di Windows per i dispositivi USB di SteamVR. "
 "[english]Explanation_DisableEnhancedPowerManagement"	"Disable Windows Enhanced Power Management for SteamVR USB Devices if you experience mysterious loss of tracking or inability to pair wireless controllers. "
 "WorkshopUpload_SelectContentType_Environment"	"Modello ambiente"
 "[english]WorkshopUpload_SelectContentType_Environment"	"Environment Model"
@@ -1839,7 +1839,7 @@
 "[english]Settings_StatusWindowMinimizeToTray_Text"	"Minimize to the system tray"
 "ShutdownWhileAppRunning_Title"	"Arresto di SteamVR"
 "[english]ShutdownWhileAppRunning_Title"	"SteamVR Shutdown"
-"ShutdownWhileAppRunning_Format"	"In questo modo arresterai anche \"%1\". Sei sicuro di voler uscire?"
+"ShutdownWhileAppRunning_Format"	"L'arresto di SteamVR arresterà anche \"%1\". Sei sicuro di voler uscire?"
 "[english]ShutdownWhileAppRunning_Format"	"This will also quit '%1'. Do you wish to quit now?"
 "RebootWhileAppRunning_Title"	"Riavviare SteamVR?"
 "[english]RebootWhileAppRunning_Title"	"Restart SteamVR?"
@@ -2001,7 +2001,7 @@
 "[english]Settings_Advanced_SupersamplingManualOverride"	"Enable custom resolution"
 "Explanation_Supersampling_Header"	"SteamVR imposta automaticamente la risoluzione dell'applicazione in base alle prestazioni della tua GPU."
 "[english]Explanation_Supersampling_Header"	"SteamVR automatically sets your application resolution based on the performance of your GPU."
-"Settings_PerApplication_Header"	"Usa queste opzioni per creare impostazioni uniche per ogni applicazione"
+"Settings_PerApplication_Header"	"Usa queste opzioni per creare impostazioni diverse per ogni applicazione"
 "[english]Settings_PerApplication_Header"	"Use these options to create unique settings per application"
 "Settings_PerApplication_AppResTitle"	"Risoluzione personalizzata"
 "[english]Settings_PerApplication_AppResTitle"	"Custom Resolution"
@@ -2313,10 +2313,10 @@
 "[english]BS_PowerManagement_ObservedInTracking"	"Observed in a prior tracking session."
 "BS_PowerManagement_FailedToConnectRefresh"	"%1: connessione fallita. Clicca 'Aggiorna' per riprovare."
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
-"Monitor_WakingBaseStations"	"Accensione stazioni di base..."
-"[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
-"Monitor_PuttingBaseStationsInStandby"	"Spegnimento stazioni di base..."
-"[english]Monitor_PuttingBaseStationsInStandby"	"Bases Powering Down..."
+"Monitor_WakingBaseStations"	"Attivazione stazioni di base..."
+"[english]Monitor_WakingBaseStations"	"Base stations waking up..."
+"Monitor_PuttingBaseStationsInStandby"	"Stazioni di base in standby..."
+"[english]Monitor_PuttingBaseStationsInStandby"	"Base stations standing by..."
 "Settings_BaseStation_ContinueBaseStationUpdate"	"Riprendi da un aggiornamento incompleto"
 "[english]Settings_BaseStation_ContinueBaseStationUpdate"	"Recover From Incomplete Update"
 "Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Correggi un aggiornamento della stazione di base interrotto o annullato che impedisce il normale tracciamento."
@@ -2327,9 +2327,9 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"This Base Station needs to be power cycled and rediscovered optically by a restart of SteamVR before the update can proceed. Please unplug and then replug the Base Station's power cable."
 "FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"Questa stazione di base ha rifiutato l'aggiornamento alla versione più recente. Scollega e ricollega il cavo di alimentazione della stazione di base."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"This Base Station has a newer version of the update and has rejected it. Please unplug and then replug the Base Station's power cable."
-"FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Clicca su 'Riprova' per tentare di nuovo."
+"FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Clicca su \"Riprova\" per tentare di nuovo."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Click 'Retry' below to try again."
-"FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"Clicca su 'Annulla' per riavviare SteamVR."
+"FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"Clicca su \"Annulla\" per riavviare SteamVR."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"Click 'Cancel' below to restart SteamVR."
 "FirmwareWizard_ProgressPercentStarting"	"[ Avvio... ]"
 "[english]FirmwareWizard_ProgressPercentStarting"	"[ Starting... ]"
@@ -2523,5 +2523,35 @@
 "[english]BS20_ConfigureChannel_ProgressWritingChannel"	"\nWriting Channel...\n"
 "BS20_ConfigureChannel_RSSI"	"RSSI: %1"
 "[english]BS20_ConfigureChannel_RSSI"	"RSSI: %1"
+"Key_Escape_Abbreviation"	"ESC"
+"[english]Key_Escape_Abbreviation"	"ESC"
+"HeadsetView_Title"	"Vista VR"
+"[english]HeadsetView_Title"	"VR View"
+"HeadsetView_MenuLabel"	"Menu"
+"[english]HeadsetView_MenuLabel"	"Menu"
+"HeadsetView_PressKeyToExit"	"Premi %1 per uscire dallo schermo intero"
+"[english]HeadsetView_PressKeyToExit"	"Press %1 to exit Full Screen"
+"HeadsetView_FullscreenButtonLabel"	"Schermo intero"
+"[english]HeadsetView_FullscreenButtonLabel"	"Full Screen"
+"HeadsetView_DockButtonLabel"	"Unisci la finestra"
+"[english]HeadsetView_DockButtonLabel"	"Dock View"
+"HeadsetView_UndockButtonLabel"	"Separa la finestra"
+"[english]HeadsetView_UndockButtonLabel"	"Undock View"
+"HeadsetView_CloseButtonLabel"	"Chiudi"
+"[english]HeadsetView_CloseButtonLabel"	"Close"
+"HeadsetView_EyeMode_Both"	"Entrambi gli occhi"
+"[english]HeadsetView_EyeMode_Both"	"Both Eyes"
+"HeadsetView_EyeMode_Left"	"Occhio sinistro"
+"[english]HeadsetView_EyeMode_Left"	"Left Eye"
+"HeadsetView_EyeMode_Right"	"Occhio destro"
+"[english]HeadsetView_EyeMode_Right"	"Right Eye"
+"HeadsetView_EyeMode_BothLeftDominant"	"Entrambi gli occhi - Sinistro dominante"
+"[english]HeadsetView_EyeMode_BothLeftDominant"	"Both Eyes - Left Dominant"
+"HeadsetView_EyeMode_BothRightDominant"	"Entrambi gli occhi - Destro dominante"
+"[english]HeadsetView_EyeMode_BothRightDominant"	"Both Eyes - Right Dominant"
+"HeadsetView_ViewMode_Center"	"Centra la finestra"
+"[english]HeadsetView_ViewMode_Center"	"Center View"
+"HeadsetView_DebugCommands"	"Apri comandi di debug"
+"[english]HeadsetView_DebugCommands"	"Open Debug Commands"
 }
 }
