--- a/content/vrmonitor/translations/vrmonitor_latam.txt
+++ b/content/vrmonitor/translations/vrmonitor_latam.txt
@@ -148,7 +148,7 @@
 "SteamVRSystemState_Connecting"	"Iniciando SteamVR..."
 "[english]SteamVRSystemState_Connecting"	"Searching..."
 "SteamVRSystemState_Shutdown"	"Saliendo de SteamVR..."
-"[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
+"[english]SteamVRSystemState_Shutdown"	"Exiting VR..."
 "SteamVRSystemState_Installing"	"Configuración de hardware en curso..."
 "[english]SteamVRSystemState_Installing"	"Hardware setup in progress..."
 "SteamVRSystemState_Restart"	"Reiniciando SteamVR..."
@@ -156,7 +156,7 @@
 "SteamVRSystemState_Startup"	"Iniciando RV..."
 "[english]SteamVRSystemState_Startup"	"Starting VR..."
 "SteamVRSystemState_ShutdownRequested"	"Saliendo de SteamVR..."
-"[english]SteamVRSystemState_ShutdownRequested"	"Exiting SteamVR..."
+"[english]SteamVRSystemState_ShutdownRequested"	"Exiting VR..."
 "MenuAction_StatusBar"	"Estado"
 "[english]MenuAction_StatusBar"	"Status"
 "MenuAction_RoomOverview"	"Vista general de la habitación"
@@ -2308,9 +2308,9 @@
 "BS_PowerManagement_FailedToConnectRefresh"	"No se ha podido conectar %1. Haz clic en \"Actualizar\" para volver a intentarlo."
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
 "Monitor_WakingBaseStations"	"Encendiendo estaciones base..."
-"[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
+"[english]Monitor_WakingBaseStations"	"Base stations waking up..."
 "Monitor_PuttingBaseStationsInStandby"	"Apagando estaciones base..."
-"[english]Monitor_PuttingBaseStationsInStandby"	"Bases Powering Down..."
+"[english]Monitor_PuttingBaseStationsInStandby"	"Base stations standing by..."
 "Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Repara una actualización interrumpida o cancelada de la estación base que le impide realizar un seguimiento normal."
 "[english]Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Fix an interrupted or cancelled base station update that is preventing it from tracking normally."
 "FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"Esta estación base debe ser redescubierta ópticamente mediante un reinicio de SteamVR antes de que la actualización pueda continuar."
@@ -2383,5 +2383,33 @@
 "[english]BS20_ConfigureChannel_AutoConfig_NoChannelConflictsFound"	"There are no channel conflicts."
 "BS20_ConfigureChannel_Apply"	"Aplicar"
 "[english]BS20_ConfigureChannel_Apply"	"Apply"
+"Key_Escape_Abbreviation"	"ESC"
+"[english]Key_Escape_Abbreviation"	"ESC"
+"HeadsetView_Title"	"Vista de RV"
+"[english]HeadsetView_Title"	"VR View"
+"HeadsetView_MenuLabel"	"Menú"
+"[english]HeadsetView_MenuLabel"	"Menu"
+"HeadsetView_PressKeyToExit"	"Presiona %1 para salir de pantalla completa"
+"[english]HeadsetView_PressKeyToExit"	"Press %1 to exit Full Screen"
+"HeadsetView_FullscreenButtonLabel"	"Pantalla completa"
+"[english]HeadsetView_FullscreenButtonLabel"	"Full Screen"
+"HeadsetView_DockButtonLabel"	"Fijar vista"
+"[english]HeadsetView_DockButtonLabel"	"Dock View"
+"HeadsetView_UndockButtonLabel"	"Desbloquear vista"
+"[english]HeadsetView_UndockButtonLabel"	"Undock View"
+"HeadsetView_CloseButtonLabel"	"Cerrar"
+"[english]HeadsetView_CloseButtonLabel"	"Close"
+"HeadsetView_EyeMode_Both"	"Ambos ojos"
+"[english]HeadsetView_EyeMode_Both"	"Both Eyes"
+"HeadsetView_EyeMode_Left"	"Ojo izquierdo"
+"[english]HeadsetView_EyeMode_Left"	"Left Eye"
+"HeadsetView_EyeMode_Right"	"Ojo derecho"
+"[english]HeadsetView_EyeMode_Right"	"Right Eye"
+"HeadsetView_EyeMode_BothLeftDominant"	"Ambos ojos (izquierdo dominante)"
+"[english]HeadsetView_EyeMode_BothLeftDominant"	"Both Eyes - Left Dominant"
+"HeadsetView_EyeMode_BothRightDominant"	"Ambos ojos (derecho dominante)"
+"[english]HeadsetView_EyeMode_BothRightDominant"	"Both Eyes - Right Dominant"
+"HeadsetView_ViewMode_Center"	"Centrar vista"
+"[english]HeadsetView_ViewMode_Center"	"Center View"
 }
 }
