--- a/content/vrmonitor/translations/vrmonitor_norwegian.txt
+++ b/content/vrmonitor/translations/vrmonitor_norwegian.txt
@@ -147,16 +147,16 @@
 "[english]SteamVRSystemState_NotReady"	" "
 "SteamVRSystemState_Connecting"	"Søker..."
 "[english]SteamVRSystemState_Connecting"	"Searching..."
-"SteamVRSystemState_Shutdown"	"Avslutter SteamVR..."
-"[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
+"SteamVRSystemState_Shutdown"	"Avslutter VR..."
+"[english]SteamVRSystemState_Shutdown"	"Exiting VR..."
 "SteamVRSystemState_Installing"	"Maskinvareoppsett i gang..."
 "[english]SteamVRSystemState_Installing"	"Hardware setup in progress..."
 "SteamVRSystemState_Restart"	"Starter SteamVR på nytt..."
 "[english]SteamVRSystemState_Restart"	"Restarting SteamVR..."
 "SteamVRSystemState_Startup"	"Starter VR..."
 "[english]SteamVRSystemState_Startup"	"Starting VR..."
-"SteamVRSystemState_ShutdownRequested"	"Avslutter SteamVR..."
-"[english]SteamVRSystemState_ShutdownRequested"	"Exiting SteamVR..."
+"SteamVRSystemState_ShutdownRequested"	"Avslutter VR..."
+"[english]SteamVRSystemState_ShutdownRequested"	"Exiting VR..."
 "MenuAction_StatusBar"	"Status"
 "[english]MenuAction_StatusBar"	"Status"
 "MenuAction_RoomOverview"	"Vis romoversikt"
@@ -2320,10 +2320,10 @@
 "[english]BS_PowerManagement_ObservedInTracking"	"Observed in a prior tracking session."
 "BS_PowerManagement_FailedToConnectRefresh"	"%1 kunne ikke opprette en forbindelse. Trykk «Oppdater» for å prøve igjen."
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
-"Monitor_WakingBaseStations"	"Basestasjoner starter opp..."
-"[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
-"Monitor_PuttingBaseStationsInStandby"	"Basestasjoner slås av..."
-"[english]Monitor_PuttingBaseStationsInStandby"	"Bases Powering Down..."
+"Monitor_WakingBaseStations"	"Basestasjoner vekkes..."
+"[english]Monitor_WakingBaseStations"	"Base stations waking up..."
+"Monitor_PuttingBaseStationsInStandby"	"Basestasjoner går i ventemodus..."
+"[english]Monitor_PuttingBaseStationsInStandby"	"Base stations standing by..."
 "Settings_BaseStation_ContinueBaseStationUpdate"	"Gjenopprett fra en ufullstendig oppdatering"
 "[english]Settings_BaseStation_ContinueBaseStationUpdate"	"Recover From Incomplete Update"
 "Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Reparer en avbrutt oppdatering, som forhindrer basestasjonen fra å spore normalt."
@@ -2530,5 +2530,35 @@
 "[english]BS20_ConfigureChannel_ProgressWritingChannel"	"\nWriting Channel...\n"
 "BS20_ConfigureChannel_RSSI"	"RSSI: %1"
 "[english]BS20_ConfigureChannel_RSSI"	"RSSI: %1"
+"Key_Escape_Abbreviation"	"ESC"
+"[english]Key_Escape_Abbreviation"	"ESC"
+"HeadsetView_Title"	"VR-visning"
+"[english]HeadsetView_Title"	"VR View"
+"HeadsetView_MenuLabel"	"Meny"
+"[english]HeadsetView_MenuLabel"	"Menu"
+"HeadsetView_PressKeyToExit"	"Trykk %1 for å avslutte fullskjerm"
+"[english]HeadsetView_PressKeyToExit"	"Press %1 to exit Full Screen"
+"HeadsetView_FullscreenButtonLabel"	"Fullskjerm"
+"[english]HeadsetView_FullscreenButtonLabel"	"Full Screen"
+"HeadsetView_DockButtonLabel"	"Fest visning"
+"[english]HeadsetView_DockButtonLabel"	"Dock View"
+"HeadsetView_UndockButtonLabel"	"Løsne visning"
+"[english]HeadsetView_UndockButtonLabel"	"Undock View"
+"HeadsetView_CloseButtonLabel"	"Lukk"
+"[english]HeadsetView_CloseButtonLabel"	"Close"
+"HeadsetView_EyeMode_Both"	"Begge øyne"
+"[english]HeadsetView_EyeMode_Both"	"Both Eyes"
+"HeadsetView_EyeMode_Left"	"Venstre øye"
+"[english]HeadsetView_EyeMode_Left"	"Left Eye"
+"HeadsetView_EyeMode_Right"	"Høyre øye"
+"[english]HeadsetView_EyeMode_Right"	"Right Eye"
+"HeadsetView_EyeMode_BothLeftDominant"	"Begge øyne (venstredominant)"
+"[english]HeadsetView_EyeMode_BothLeftDominant"	"Both Eyes - Left Dominant"
+"HeadsetView_EyeMode_BothRightDominant"	"Begge øyne (høyredominant)"
+"[english]HeadsetView_EyeMode_BothRightDominant"	"Both Eyes - Right Dominant"
+"HeadsetView_ViewMode_Center"	"Sentrert visning"
+"[english]HeadsetView_ViewMode_Center"	"Center View"
+"HeadsetView_DebugCommands"	"Åpne feilsøkingskommandoer"
+"[english]HeadsetView_DebugCommands"	"Open Debug Commands"
 }
 }
