--- a/content/vrmonitor/translations/vrmonitor_polish.txt
+++ b/content/vrmonitor/translations/vrmonitor_polish.txt
@@ -147,16 +147,16 @@
 "[english]SteamVRSystemState_NotReady"	" "
 "SteamVRSystemState_Connecting"	"Wyszukiwanie..."
 "[english]SteamVRSystemState_Connecting"	"Searching..."
-"SteamVRSystemState_Shutdown"	"Zamykanie SteamVR..."
-"[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
+"SteamVRSystemState_Shutdown"	"Zamykanie VR..."
+"[english]SteamVRSystemState_Shutdown"	"Exiting VR..."
 "SteamVRSystemState_Installing"	"Trwa konfiguracja sprzętu..."
 "[english]SteamVRSystemState_Installing"	"Hardware setup in progress..."
 "SteamVRSystemState_Restart"	"Restartowanie SteamVR..."
 "[english]SteamVRSystemState_Restart"	"Restarting SteamVR..."
 "SteamVRSystemState_Startup"	"Uruchamianie VR..."
 "[english]SteamVRSystemState_Startup"	"Starting VR..."
-"SteamVRSystemState_ShutdownRequested"	"Zamykanie SteamVR..."
-"[english]SteamVRSystemState_ShutdownRequested"	"Exiting SteamVR..."
+"SteamVRSystemState_ShutdownRequested"	"Zamykanie VR..."
+"[english]SteamVRSystemState_ShutdownRequested"	"Exiting VR..."
 "MenuAction_StatusBar"	"Stan"
 "[english]MenuAction_StatusBar"	"Status"
 "MenuAction_RoomOverview"	"Zobacz informacje ogólne o pokoju"
@@ -2329,10 +2329,10 @@
 "[english]BS_PowerManagement_ObservedInTracking"	"Observed in a prior tracking session."
 "BS_PowerManagement_FailedToConnectRefresh"	"Nie udało się połączyć z %1. Kliknij „Odśwież”, aby spróbować ponownie."
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
-"Monitor_WakingBaseStations"	"Uruchamianie stacji bazowych..."
-"[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
-"Monitor_PuttingBaseStationsInStandby"	"Wyłączanie stacji bazowych..."
-"[english]Monitor_PuttingBaseStationsInStandby"	"Bases Powering Down..."
+"Monitor_WakingBaseStations"	"Wybudzanie stacji bazowych..."
+"[english]Monitor_WakingBaseStations"	"Base stations waking up..."
+"Monitor_PuttingBaseStationsInStandby"	"Stacje bazowe wchodzą w tryb czuwania..."
+"[english]Monitor_PuttingBaseStationsInStandby"	"Base stations standing by..."
 "Settings_BaseStation_ContinueBaseStationUpdate"	"Przywróć po niekompletnej aktualizacji"
 "[english]Settings_BaseStation_ContinueBaseStationUpdate"	"Recover From Incomplete Update"
 "Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Napraw przerwaną lub anulowaną aktualizację stacji bazowej, która uniemożliwia jej normalne śledzenie."
@@ -2539,5 +2539,35 @@
 "[english]BS20_ConfigureChannel_ProgressWritingChannel"	"\nWriting Channel...\n"
 "BS20_ConfigureChannel_RSSI"	"RSSI: %1"
 "[english]BS20_ConfigureChannel_RSSI"	"RSSI: %1"
+"Key_Escape_Abbreviation"	"ESC"
+"[english]Key_Escape_Abbreviation"	"ESC"
+"HeadsetView_Title"	"Widok VR"
+"[english]HeadsetView_Title"	"VR View"
+"HeadsetView_MenuLabel"	"Menu"
+"[english]HeadsetView_MenuLabel"	"Menu"
+"HeadsetView_PressKeyToExit"	"Wciśnij %1, by wyłączyć tryb pełnoekranowy"
+"[english]HeadsetView_PressKeyToExit"	"Press %1 to exit Full Screen"
+"HeadsetView_FullscreenButtonLabel"	"Pełny ekran"
+"[english]HeadsetView_FullscreenButtonLabel"	"Full Screen"
+"HeadsetView_DockButtonLabel"	"Zadokuj widok"
+"[english]HeadsetView_DockButtonLabel"	"Dock View"
+"HeadsetView_UndockButtonLabel"	"Usuń dokowanie widoku"
+"[english]HeadsetView_UndockButtonLabel"	"Undock View"
+"HeadsetView_CloseButtonLabel"	"Zamknij"
+"[english]HeadsetView_CloseButtonLabel"	"Close"
+"HeadsetView_EyeMode_Both"	"Oboje oczu"
+"[english]HeadsetView_EyeMode_Both"	"Both Eyes"
+"HeadsetView_EyeMode_Left"	"Lewe oko"
+"[english]HeadsetView_EyeMode_Left"	"Left Eye"
+"HeadsetView_EyeMode_Right"	"Prawe oko"
+"[english]HeadsetView_EyeMode_Right"	"Right Eye"
+"HeadsetView_EyeMode_BothLeftDominant"	"Oboje oczu – lewe dominujące"
+"[english]HeadsetView_EyeMode_BothLeftDominant"	"Both Eyes - Left Dominant"
+"HeadsetView_EyeMode_BothRightDominant"	"Oboje oczu – prawe dominujące"
+"[english]HeadsetView_EyeMode_BothRightDominant"	"Both Eyes - Right Dominant"
+"HeadsetView_ViewMode_Center"	"Wyśrodkuj widok"
+"[english]HeadsetView_ViewMode_Center"	"Center View"
+"HeadsetView_DebugCommands"	"Otwórz komendy debugowania"
+"[english]HeadsetView_DebugCommands"	"Open Debug Commands"
 }
 }
