--- a/content/vrmonitor/translations/vrmonitor_portuguese.txt
+++ b/content/vrmonitor/translations/vrmonitor_portuguese.txt
@@ -147,16 +147,16 @@
 "[english]SteamVRSystemState_NotReady"	" "
 "SteamVRSystemState_Connecting"	"A procurar..."
 "[english]SteamVRSystemState_Connecting"	"Searching..."
-"SteamVRSystemState_Shutdown"	"A sair do SteamVR..."
-"[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
+"SteamVRSystemState_Shutdown"	"A sair da realidade virtual..."
+"[english]SteamVRSystemState_Shutdown"	"Exiting VR..."
 "SteamVRSystemState_Installing"	"Configuração do hardware a decorrer..."
 "[english]SteamVRSystemState_Installing"	"Hardware setup in progress..."
 "SteamVRSystemState_Restart"	"A reiniciar o SteamVR..."
 "[english]SteamVRSystemState_Restart"	"Restarting SteamVR..."
 "SteamVRSystemState_Startup"	"A iniciar RV..."
 "[english]SteamVRSystemState_Startup"	"Starting VR..."
-"SteamVRSystemState_ShutdownRequested"	"A sair do SteamVR..."
-"[english]SteamVRSystemState_ShutdownRequested"	"Exiting SteamVR..."
+"SteamVRSystemState_ShutdownRequested"	"A sair da realidade virtual..."
+"[english]SteamVRSystemState_ShutdownRequested"	"Exiting VR..."
 "MenuAction_StatusBar"	"Estado"
 "[english]MenuAction_StatusBar"	"Status"
 "MenuAction_RoomOverview"	"Vista geral do espaço"
@@ -2329,10 +2329,10 @@
 "[english]BS_PowerManagement_ObservedInTracking"	"Observed in a prior tracking session."
 "BS_PowerManagement_FailedToConnectRefresh"	"Falha na ligação de \"%1\". Clica em \"Atualizar\" para tentares de novo."
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
-"Monitor_WakingBaseStations"	"A ligar estações-base..."
-"[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
-"Monitor_PuttingBaseStationsInStandby"	"Estações-base a desligar..."
-"[english]Monitor_PuttingBaseStationsInStandby"	"Bases Powering Down..."
+"Monitor_WakingBaseStations"	"A despertar estações-base..."
+"[english]Monitor_WakingBaseStations"	"Base stations waking up..."
+"Monitor_PuttingBaseStationsInStandby"	"Estações-base em modo de espera..."
+"[english]Monitor_PuttingBaseStationsInStandby"	"Base stations standing by..."
 "Settings_BaseStation_ContinueBaseStationUpdate"	"Recuperar de atualização incompleta"
 "[english]Settings_BaseStation_ContinueBaseStationUpdate"	"Recover From Incomplete Update"
 "Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Repara uma atualização interrompida ou cancelada de uma estação-base que a esteja a impedir de detetar devidamente."
@@ -2341,7 +2341,7 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"This Base Station needs to be rediscovered optically by a restart of SteamVR before the update can proceed."
 "FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"Esta estação-base precisa primeiro de ser desligada e ligada novamente, e depois voltar a ser reconhecida visualmente ao reiniciar o SteamVR para que a atualização possa continuar. Por favor, desliga o cabo de alimentação da estação-base e depois volta a ligá-lo."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"This Base Station needs to be power cycled and rediscovered optically by a restart of SteamVR before the update can proceed. Please unplug and then replug the Base Station's power cable."
-"FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"Esta estação-base tem uma versão mais recente da atualização e esta foi rejeitada."
+"FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"Esta estação-base tem uma versão mais recente da atualização, a qual foi rejeitada. Por favor, desliga e volta a ligar o cabo de alimentação da estação-base."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"This Base Station has a newer version of the update and has rejected it. Please unplug and then replug the Base Station's power cable."
 "FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Clica em \"Tentar novamente\" para tentares de novo."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Click 'Retry' below to try again."
@@ -2452,7 +2452,7 @@
 "[english]BS20_ConfigureChannel_ConflictLegend"	"Channel conflict with another Base Station."
 "BS20_ConfigureChannel_ErrorLegend"	"Clica no link do canal para mais informações."
 "[english]BS20_ConfigureChannel_ErrorLegend"	"Click on channel link for more information."
-"BS20_ConfigureChannel_CancelledConnection"	"Ligação \"%1\" cancelada. Clica no link do canal para tentares de novo."
+"BS20_ConfigureChannel_CancelledConnection"	"Ligação a \"%1\" cancelada. Clica no link do canal para tentares de novo."
 "[english]BS20_ConfigureChannel_CancelledConnection"	"%1 connection cancelled. Click channel link to try again."
 "MessageBox_RemindMeLater"	"Lembrar-me mais tarde"
 "[english]MessageBox_RemindMeLater"	"Remind Me Later"
@@ -2478,7 +2478,95 @@
 "[english]BS_PowerManagement_FullStandby_Explanation"	"Base Stations will power off their lasers and motors."
 "BS_PowerManagement_ConnectionFailureLegend"	"Falha na ligação. Clica em \"Atualizar\" para tentares de novo."
 "[english]BS_PowerManagement_ConnectionFailureLegend"	"Connection failure. Click 'Refresh' to try again."
-"BS20_UpdateRecovery_BluetoothRequired"	"A recuperação de atualizações requer que a comunicação por Bluetooth seja permitida.\n\nPermite a comunicação por Bluetooth nas Definições."
+"BS20_UpdateRecovery_BluetoothRequired"	"A recuperação de atualizações requer comunicação por Bluetooth.\n\nAtiva a comunicação por Bluetooth nas Definições."
 "[english]BS20_UpdateRecovery_BluetoothRequired"	"Update recovery requires Bluetooth communication to be enabled.\n\nPlease enable Bluetooth communication in Settings."
+"BaseStation_Mode_Text"	"Modo %1"
+"[english]BaseStation_Mode_Text"	"Mode %1"
+"BS20_ConfigureChannel_Title"	"Estação-base 2.0 - Configuração do canal"
+"[english]BS20_ConfigureChannel_Title"	"Base Station 2.0 Channel Configuration"
+"BS20_ConfigureChannel_BluetoothRequired"	"A configuração do canal requer comunicação por Bluetooth.\n\nAtiva a comunicação por Bluetooth nas Definições."
+"[english]BS20_ConfigureChannel_BluetoothRequired"	"Channel configuration requires Bluetooth communication to be enabled.\n\nPlease enable Bluetooth communication in Settings."
+"BS20_ConfigureChannel_BaseStationName"	"A configurar %1 no canal %2"
+"[english]BS20_ConfigureChannel_BaseStationName"	"Configuring %1 on Channel %2"
+"BS20_ConfigureChannel_Description"	"Seleciona um canal não usado para esta estação-base para evitar possíveis conflitos de deteção."
+"[english]BS20_ConfigureChannel_Description"	"Select an unused channel for this Base Station to avoid potential tracking conflicts."
+"BS20_ConfigureChannel_InUseByPrefix"	"Em uso por:"
+"[english]BS20_ConfigureChannel_InUseByPrefix"	"Currently used by:"
+"BS20_ConfigureChannel_Legend"	"Indica um canal usado por outras estações-base próximas."
+"[english]BS20_ConfigureChannel_Legend"	"Denotes a channel used by other Base Stations in radio proximity."
+"BS20_ConfigureChannel_AutomaticConfiguration"	"Configuração automática"
+"[english]BS20_ConfigureChannel_AutomaticConfiguration"	"Automatic Configuration"
+"BS20_ConfigureChannel_AutoConfig_NoChannelConflictsFound"	"Não há canais em conflito."
+"[english]BS20_ConfigureChannel_AutoConfig_NoChannelConflictsFound"	"There are no channel conflicts."
+"BS20_ConfigureChannel_AutoConfig_NoFreeChannels"	"Não há canais livres para resolver %1 possíveis conflitos entre canais. Poderá ser necessário configurar os canais manualmente."
+"[english]BS20_ConfigureChannel_AutoConfig_NoFreeChannels"	"There are no free channels to resolve %1 potential channel conflicts. You may need to manually configure channels."
+"BS20_ConfigureChannel_AutoConfig_NotEnoughFreeChannels"	"Só há canais livres suficientes para resolver %1 dos %2 possíveis conflitos entre canais. Continuar e resolver os conflitos?"
+"[english]BS20_ConfigureChannel_AutoConfig_NotEnoughFreeChannels"	"There are only enough free channels to resolve %1 out of %2 potential channel conflicts. Continue and resolve conflicts?"
+"BS20_ConfigureChannel_AutoConfigContinue"	"Há %1 possíveis conflitos entre canais que podem ser resolvidos automaticamente ao reatribuir os respetivos canais. Continuar e resolver os conflitos?"
+"[english]BS20_ConfigureChannel_AutoConfigContinue"	"There are %1 potential channel conflicts that can be automatically resolved by re-assigning their channels. Continue and resolve conflicts?"
+"BS20_ConfigureChannel_AutoConfig_SuccessfulCompletion"	"Configuração automática concluída.\n\nNão há conflitos entre canais."
+"[english]BS20_ConfigureChannel_AutoConfig_SuccessfulCompletion"	"Automatic Configuration completed.\n\nThere are no channel conflicts."
+"BS20_ConfigureChannel_AutoConfig_Incomplete"	"Configuração automática concluída.\n\nHá %1 possíveis conflitos entre canais. Poderá ser necessário configurar os canais manualmente."
+"[english]BS20_ConfigureChannel_AutoConfig_Incomplete"	"Automatic Configuration completed.\n\nThere are %1 remaining potential channel conflicts. You may need to manually configure channels."
+"BS20_ConfigureChannel_AutoConfig_UnknownChannels"	"Há %1 estações-base cujos canais não puderam ser determinados, o que pode resultar em possíveis conflitos entre canais.\n"
+"[english]BS20_ConfigureChannel_AutoConfig_UnknownChannels"	"There are %1 Base Stations whose channels could not be determined that may result in potential channel conflicts.\n"
+"BS20_ConfigureChannel_ChannelConfigurationFailure"	"%1 falhou ao aceitar a configuração de canal solicitada."
+"[english]BS20_ConfigureChannel_ChannelConfigurationFailure"	"%1 failed to accept the requested channel configuration."
+"BS20_ConfigureChannel_ScanForMore"	"Procurar mais"
+"[english]BS20_ConfigureChannel_ScanForMore"	"Scan For More"
+"BS20_ConfigureChannel_Apply"	"Aplicar"
+"[english]BS20_ConfigureChannel_Apply"	"Apply"
+"BS20_ConfigureChannel_Connecting"	"A conectar..."
+"[english]BS20_ConfigureChannel_Connecting"	"Connecting..."
+"BS20_ConfigureChannel_Channel"	"Canal: %1"
+"[english]BS20_ConfigureChannel_Channel"	"Channel: %1"
+"BS20_ConfigureChannel_ConnectionFailure"	"%1 - Falha na conexão."
+"[english]BS20_ConfigureChannel_ConnectionFailure"	"%1 failed to connect."
+"BS20_ConfigureChannel_ConflictWarning"	"%1 está a usar o mesmo canal que outra estação-base."
+"[english]BS20_ConfigureChannel_ConflictWarning"	"%1 is using the same channel as another Base Station."
+"BS20_ConfigureChannel_FailedToConnectRetry"	"%1 - Falha na conexão. Clica em \"Tentar novamente\" para tentares de novo."
+"[english]BS20_ConfigureChannel_FailedToConnectRetry"	"%1 failed to connect. Click 'Retry' to try again."
+"BS20_ConfigureChannel_ConflictOnChannel"	"Possível conflito no canal %1"
+"[english]BS20_ConfigureChannel_ConflictOnChannel"	"Potential conflict on Channel %1"
+"BS20_ConfigureChannel_NoConflictOnChannel"	"Nenhum conflito no canal %1"
+"[english]BS20_ConfigureChannel_NoConflictOnChannel"	"No conflict on Channel %1"
+"BS20_ConfigureChannel_ProgressScanComplete"	"Procura concluída.\n\nClica no link do canal para alterá-lo."
+"[english]BS20_ConfigureChannel_ProgressScanComplete"	"Scan Completed.\n\nClick on a channel link to change it."
+"BS20_ConfigureChannel_ProgressScanNoStationsFound"	"Procura concluída.\n\nNão há estações-base 2.0 transmissoras por perto."
+"[english]BS20_ConfigureChannel_ProgressScanNoStationsFound"	"Scan Completed.\n\nThere are no broadcasting 2.0 Base Stations within your proximity."
+"BS20_ConfigureChannel_ProgressScanning"	"À procura de estações-base...\n\n%1 segundos restantes."
+"[english]BS20_ConfigureChannel_ProgressScanning"	"Scanning For Base Stations...\n\n%1 Seconds Remaining."
+"BS20_ConfigureChannel_ProgressWritingChannel"	"\nA gravar canal...\n"
+"[english]BS20_ConfigureChannel_ProgressWritingChannel"	"\nWriting Channel...\n"
+"BS20_ConfigureChannel_RSSI"	"RSSI: %1"
+"[english]BS20_ConfigureChannel_RSSI"	"RSSI: %1"
+"Key_Escape_Abbreviation"	"ESC"
+"[english]Key_Escape_Abbreviation"	"ESC"
+"HeadsetView_Title"	"Vista de R.V."
+"[english]HeadsetView_Title"	"VR View"
+"HeadsetView_MenuLabel"	"Menu"
+"[english]HeadsetView_MenuLabel"	"Menu"
+"HeadsetView_PressKeyToExit"	"Pressiona %1 para sair de ecrã completo"
+"[english]HeadsetView_PressKeyToExit"	"Press %1 to exit Full Screen"
+"HeadsetView_FullscreenButtonLabel"	"Ecrã completo"
+"[english]HeadsetView_FullscreenButtonLabel"	"Full Screen"
+"HeadsetView_DockButtonLabel"	"Juntar vista"
+"[english]HeadsetView_DockButtonLabel"	"Dock View"
+"HeadsetView_UndockButtonLabel"	"Separar vista"
+"[english]HeadsetView_UndockButtonLabel"	"Undock View"
+"HeadsetView_CloseButtonLabel"	"Fechar"
+"[english]HeadsetView_CloseButtonLabel"	"Close"
+"HeadsetView_EyeMode_Both"	"Ambos os olhos"
+"[english]HeadsetView_EyeMode_Both"	"Both Eyes"
+"HeadsetView_EyeMode_Left"	"Olho esquerdo"
+"[english]HeadsetView_EyeMode_Left"	"Left Eye"
+"HeadsetView_EyeMode_Right"	"Olho direito"
+"[english]HeadsetView_EyeMode_Right"	"Right Eye"
+"HeadsetView_EyeMode_BothLeftDominant"	"Ambos os olhos - Esquerdo dominante"
+"[english]HeadsetView_EyeMode_BothLeftDominant"	"Both Eyes - Left Dominant"
+"HeadsetView_EyeMode_BothRightDominant"	"Ambos os olhos - Direito dominante"
+"[english]HeadsetView_EyeMode_BothRightDominant"	"Both Eyes - Right Dominant"
+"HeadsetView_ViewMode_Center"	"Vista central"
+"[english]HeadsetView_ViewMode_Center"	"Center View"
 }
 }
