--- a/content/vrmonitor/translations/vrmonitor_romanian.txt
+++ b/content/vrmonitor/translations/vrmonitor_romanian.txt
@@ -144,7 +144,7 @@
 "SteamVRSystemState_Connecting"	"Se conectează"
 "[english]SteamVRSystemState_Connecting"	"Searching..."
 "SteamVRSystemState_Shutdown"	"OPRIRE"
-"[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
+"[english]SteamVRSystemState_Shutdown"	"Exiting VR..."
 "SteamVRSystemState_Installing"	"Pregătirea Hardware-ului e în desfășurare..."
 "[english]SteamVRSystemState_Installing"	"Hardware setup in progress..."
 "SteamVRSystemState_Restart"	"Se repornește SteamVR..."
@@ -152,7 +152,7 @@
 "SteamVRSystemState_Startup"	"Se pornește"
 "[english]SteamVRSystemState_Startup"	"Starting VR..."
 "SteamVRSystemState_ShutdownRequested"	"Se pregătește de ieșire..."
-"[english]SteamVRSystemState_ShutdownRequested"	"Exiting SteamVR..."
+"[english]SteamVRSystemState_ShutdownRequested"	"Exiting VR..."
 "MenuAction_StatusBar"	"Stare"
 "[english]MenuAction_StatusBar"	"Status"
 "MenuAction_RoomOverview"	"Privire de ansamblu a încăperii"
