--- a/content/vrmonitor/translations/vrmonitor_russian.txt
+++ b/content/vrmonitor/translations/vrmonitor_russian.txt
@@ -147,16 +147,16 @@
 "[english]SteamVRSystemState_NotReady"	" "
 "SteamVRSystemState_Connecting"	"Поиск..."
 "[english]SteamVRSystemState_Connecting"	"Searching..."
-"SteamVRSystemState_Shutdown"	"Выход из SteamVR..."
-"[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
+"SteamVRSystemState_Shutdown"	"Выход из виртуальной реальности..."
+"[english]SteamVRSystemState_Shutdown"	"Exiting VR..."
 "SteamVRSystemState_Installing"	"Выполняется настройка оборудования..."
 "[english]SteamVRSystemState_Installing"	"Hardware setup in progress..."
 "SteamVRSystemState_Restart"	"Перезапуск SteamVR…"
 "[english]SteamVRSystemState_Restart"	"Restarting SteamVR..."
 "SteamVRSystemState_Startup"	"Запуск виртуальной реальности..."
 "[english]SteamVRSystemState_Startup"	"Starting VR..."
-"SteamVRSystemState_ShutdownRequested"	"Выход из SteamVR..."
-"[english]SteamVRSystemState_ShutdownRequested"	"Exiting SteamVR..."
+"SteamVRSystemState_ShutdownRequested"	"Выход из виртуальной реальности..."
+"[english]SteamVRSystemState_ShutdownRequested"	"Exiting VR..."
 "MenuAction_StatusBar"	"Состояние"
 "[english]MenuAction_StatusBar"	"Status"
 "MenuAction_RoomOverview"	"Показать обзор комнаты"
@@ -1299,7 +1299,7 @@
 "[english]MenuAction_Workshop"	"Workshop"
 "MenuAction_Workshop_UploadBackground"	"Загрузить фон"
 "[english]MenuAction_Workshop_UploadBackground"	"Upload Background"
-"MenuAction_Workshop_Browse"	"Просмотреть Мастерскую"
+"MenuAction_Workshop_Browse"	"Просмотр Мастерской"
 "[english]MenuAction_Workshop_Browse"	"Browse Workshop"
 "WorkshopUpload_DialogTitle"	"Инструмент загрузки мастерской SteamVR"
 "[english]WorkshopUpload_DialogTitle"	"SteamVR Workshop Uploader"
@@ -2325,9 +2325,9 @@
 "BS_PowerManagement_FailedToConnectRefresh"	"%1: подключение не удалось. Нажмите «Обновить», чтобы повторить попытку."
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
 "Monitor_WakingBaseStations"	"Базовые станции включаются..."
-"[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
+"[english]Monitor_WakingBaseStations"	"Base stations waking up..."
 "Monitor_PuttingBaseStationsInStandby"	"Базовые станции выключаются..."
-"[english]Monitor_PuttingBaseStationsInStandby"	"Bases Powering Down..."
+"[english]Monitor_PuttingBaseStationsInStandby"	"Base stations standing by..."
 "Settings_BaseStation_ContinueBaseStationUpdate"	"Восстановление после неполного обновления"
 "[english]Settings_BaseStation_ContinueBaseStationUpdate"	"Recover From Incomplete Update"
 "Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Исправление прерванного или отменённого обновления базовой станции, препятствующее корректному отслеживанию."
@@ -2534,5 +2534,35 @@
 "[english]BS20_ConfigureChannel_ProgressWritingChannel"	"\nWriting Channel...\n"
 "BS20_ConfigureChannel_RSSI"	"RSSI: %1"
 "[english]BS20_ConfigureChannel_RSSI"	"RSSI: %1"
+"Key_Escape_Abbreviation"	"ESC"
+"[english]Key_Escape_Abbreviation"	"ESC"
+"HeadsetView_Title"	"Отображение VR"
+"[english]HeadsetView_Title"	"VR View"
+"HeadsetView_MenuLabel"	"Меню"
+"[english]HeadsetView_MenuLabel"	"Menu"
+"HeadsetView_PressKeyToExit"	"Нажмите %1, чтобы выйти из полноэкранного режима"
+"[english]HeadsetView_PressKeyToExit"	"Press %1 to exit Full Screen"
+"HeadsetView_FullscreenButtonLabel"	"Полноэкранный режим"
+"[english]HeadsetView_FullscreenButtonLabel"	"Full Screen"
+"HeadsetView_DockButtonLabel"	"Закрепить вид"
+"[english]HeadsetView_DockButtonLabel"	"Dock View"
+"HeadsetView_UndockButtonLabel"	"Открепить вид"
+"[english]HeadsetView_UndockButtonLabel"	"Undock View"
+"HeadsetView_CloseButtonLabel"	"Закрыть"
+"[english]HeadsetView_CloseButtonLabel"	"Close"
+"HeadsetView_EyeMode_Both"	"Оба глаза"
+"[english]HeadsetView_EyeMode_Both"	"Both Eyes"
+"HeadsetView_EyeMode_Left"	"Левый глаз"
+"[english]HeadsetView_EyeMode_Left"	"Left Eye"
+"HeadsetView_EyeMode_Right"	"Правый глаз"
+"[english]HeadsetView_EyeMode_Right"	"Right Eye"
+"HeadsetView_EyeMode_BothLeftDominant"	"Оба глаза: левый ведущий"
+"[english]HeadsetView_EyeMode_BothLeftDominant"	"Both Eyes - Left Dominant"
+"HeadsetView_EyeMode_BothRightDominant"	"Оба глаза: правый ведущий"
+"[english]HeadsetView_EyeMode_BothRightDominant"	"Both Eyes - Right Dominant"
+"HeadsetView_ViewMode_Center"	"Вид по центру"
+"[english]HeadsetView_ViewMode_Center"	"Center View"
+"HeadsetView_DebugCommands"	"Открыть команды отладки"
+"[english]HeadsetView_DebugCommands"	"Open Debug Commands"
 }
 }
