--- a/content/vrmonitor/translations/vrmonitor_schinese.txt
+++ b/content/vrmonitor/translations/vrmonitor_schinese.txt
@@ -148,7 +148,7 @@
 "SteamVRSystemState_Connecting"	"正在连接"
 "[english]SteamVRSystemState_Connecting"	"Searching..."
 "SteamVRSystemState_Shutdown"	"关机"
-"[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
+"[english]SteamVRSystemState_Shutdown"	"Exiting VR..."
 "SteamVRSystemState_Installing"	"硬件设置正在进行…"
 "[english]SteamVRSystemState_Installing"	"Hardware setup in progress..."
 "SteamVRSystemState_Restart"	"SteamVR 重启中…"
@@ -156,7 +156,7 @@
 "SteamVRSystemState_Startup"	"正在开始"
 "[english]SteamVRSystemState_Startup"	"Starting VR..."
 "SteamVRSystemState_ShutdownRequested"	"正在准备退出…"
-"[english]SteamVRSystemState_ShutdownRequested"	"Exiting SteamVR..."
+"[english]SteamVRSystemState_ShutdownRequested"	"Exiting VR..."
 "MenuAction_StatusBar"	"状态"
 "[english]MenuAction_StatusBar"	"Status"
 "MenuAction_RoomOverview"	"房间概览"
