--- a/content/vrmonitor/translations/vrmonitor_swedish.txt
+++ b/content/vrmonitor/translations/vrmonitor_swedish.txt
@@ -141,22 +141,22 @@
 "[english]PerfTestResults_WorstGPU"	"Worst: %1"
 "SteamVRSystemState_Off"	"Av"
 "[english]SteamVRSystemState_Off"	"Off"
-"SteamVRSystemState_Ready"	"Redo"
+"SteamVRSystemState_Ready"	"Spelar nu"
 "[english]SteamVRSystemState_Ready"	"Now Playing"
 "SteamVRSystemState_NotReady"	" "
 "[english]SteamVRSystemState_NotReady"	" "
 "SteamVRSystemState_Connecting"	"Söker ..."
 "[english]SteamVRSystemState_Connecting"	"Searching..."
-"SteamVRSystemState_Shutdown"	"Stäng av"
-"[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
+"SteamVRSystemState_Shutdown"	"Avslutar VR ..."
+"[english]SteamVRSystemState_Shutdown"	"Exiting VR..."
 "SteamVRSystemState_Installing"	"Hårdvarukonfiguration pågår..."
 "[english]SteamVRSystemState_Installing"	"Hardware setup in progress..."
 "SteamVRSystemState_Restart"	"Startar om SteamVR..."
 "[english]SteamVRSystemState_Restart"	"Restarting SteamVR..."
 "SteamVRSystemState_Startup"	"Startar VR..."
 "[english]SteamVRSystemState_Startup"	"Starting VR..."
-"SteamVRSystemState_ShutdownRequested"	"Förbereder att avsluta..."
-"[english]SteamVRSystemState_ShutdownRequested"	"Exiting SteamVR..."
+"SteamVRSystemState_ShutdownRequested"	"Avslutar VR ..."
+"[english]SteamVRSystemState_ShutdownRequested"	"Exiting VR..."
 "MenuAction_StatusBar"	"Status"
 "[english]MenuAction_StatusBar"	"Status"
 "MenuAction_RoomOverview"	"Rumöverblick"
@@ -245,7 +245,7 @@
 "[english]MonitorController_NotAbleToMakeCompositorFullscreen"	"SteamVR is having trouble enabling fullscreen mode."
 "MonitorController_ApplicationsInterfaceNotAvailable"	"Kunde inte starta %1. Programgränssnitt ej tillgänglig."
 "[english]MonitorController_ApplicationsInterfaceNotAvailable"	"Could not start %1. This application's interface is not available."
-"MonitorController_ApplicationCouldNotStart"	"Kunde inte starta %1. Felmeddelandet var %2."
+"MonitorController_ApplicationCouldNotStart"	"Kunde inte starta %1: %2."
 "[english]MonitorController_ApplicationCouldNotStart"	"Could not start %1: %2."
 "MonitorController_Version"	"Version %1"
 "[english]MonitorController_Version"	"Version %1"
@@ -309,7 +309,7 @@
 "[english]Settings_MediumSpace"	"Medium Space"
 "Settings_LargeSpace"	"Stort utrymme"
 "[english]Settings_LargeSpace"	"Large Space"
-"Settings_RemoveAllUSBDevices"	"Mata ut alla SteamVR USB-enheter"
+"Settings_RemoveAllUSBDevices"	"Ta bort alla SteamVR USB-enheter"
 "[english]Settings_RemoveAllUSBDevices"	"Remove all SteamVR USB devices"
 "Settings_ResetChaperoneToDK2Default"	"Återställ Chaperone-data till standardvärden hos Oculus Rift DK2"
 "[english]Settings_ResetChaperoneToDK2Default"	"Reset Chaperone Data to Oculus Rift DK2 Default"
@@ -319,7 +319,7 @@
 "[english]Settings_ResetQtSettings_Text"	"You want to reset the Qt settings.\n\nAre you sure?"
 "Settings_ResetRuntimeBasedOnVRMonitorAndQuit_Text"	"Detta kommer återställa SteamVR-sökvägen baserat på SteamVR:s körbara fil, och starta om SteamVR\n\nÄr du säker?"
 "[english]Settings_ResetRuntimeBasedOnVRMonitorAndQuit_Text"	"This will reset the SteamVR path based on the location of the SteamVR executable, and restart SteamVR. \n\nAre you sure?"
-"Settings_RemoveAllRelevantUSBDevices_Text"	"Detta kommer mata ut alla SteamVR USB-enheter från systemet. Du behöver koppla in enheterna igen, så systemet installerar drivrutiner.\n\nÄr du säker?"
+"Settings_RemoveAllRelevantUSBDevices_Text"	"Detta kommer mata ut alla SteamVR USB-enheter från systemet. Du behöver koppla in enheterna igen, så att systemet installerar drivrutiner.\n\nÄr du säker?"
 "[english]Settings_RemoveAllRelevantUSBDevices_Text"	"This will remove all SteamVR USB devices from the system. You will need to unplug and then reconnect the devices in again, so the system installs drivers.\n\nAre you sure?"
 "Settings_RemoveAllRelevantUSBDevices_FailToStart"	"Hjälpprogrammet som tar bort USB-enheter kunde inte starta.\nSe till att du kan köra detta program som administratör.\n"
 "[english]Settings_RemoveAllRelevantUSBDevices_FailToStart"	"The helper application to remove the USB devices was not able to start.\nMake sure that you can run this application as admin.\n"
@@ -418,7 +418,7 @@
 "[english]MenuAction_ResetRuntimeAndQuit"	"Reset SteamVR path"
 "Explanation_ResetRuntimeAndQuit"	"Återställer din SteamVR-sökväg baserad på mappen som SteamVR startas ifrån."
 "[english]Explanation_ResetRuntimeAndQuit"	"Reset your SteamVR path based on the directory SteamVR is launched from."
-"MenuAction_RemoveAllSteamVRUSBDevices"	"Mata ut alla SteamVR USB-enheter"
+"MenuAction_RemoveAllSteamVRUSBDevices"	"Ta bort alla SteamVR USB-enheter"
 "[english]MenuAction_RemoveAllSteamVRUSBDevices"	"Remove All SteamVR USB Devices"
 "MenuAction_ResetAllSettingsAndQuit"	"Återställ alla inställningar och starta om"
 "[english]MenuAction_ResetAllSettingsAndQuit"	"Reset all Settings and Restart"
@@ -749,7 +749,7 @@
 "FirmwareWizard_UpdateHeadset_Fail_LowerText"	"
 "
 "[english]FirmwareWizard_UpdateHeadset_Fail_LowerText"	""
-"FirmwareWizard_UpdateHeadset_Success_Title"	"Uppdatera headsetprogramvara"
+"FirmwareWizard_UpdateHeadset_Success_Title"	"Uppdatera headset"
 "[english]FirmwareWizard_UpdateHeadset_Success_Title"	"Update Headset"
 "FirmwareWizard_UpdateHeadset_Success_UpperText"	"Klart!"
 "[english]FirmwareWizard_UpdateHeadset_Success_UpperText"	"Success!"
@@ -779,7 +779,7 @@
 "FirmwareWizard_UpdateController_Success_LowerText"	"
 "
 "[english]FirmwareWizard_UpdateController_Success_LowerText"	" "
-"FirmwareWizard_UpdateBasestation_Start_Title"	"Uppdatera programvara för basstation"
+"FirmwareWizard_UpdateBasestation_Start_Title"	"Uppdatera basstation"
 "[english]FirmwareWizard_UpdateBasestation_Start_Title"	"Update Base Station"
 "FirmwareWizard_UpdateBasestation_Start_UpperText"	"
 "
@@ -788,7 +788,7 @@
 "[english]FirmwareWizard_UpdateBasestation_Start_MiddleText"	"1. Unmount and unplug your base station.\n\n2. Use a micro-USB cable to plug the base station into a USB port on your computer. You can use the same cable that is used to charge your controllers.\n\n3. While holding down the channel button on the back of the base station, plug in your base station's power cord."
 "FirmwareWizard_UpdateBasestation_Start_LowerText"	"4. Programvaruuppdateringen påbörjas automatiskt när din basstation upptäcks, och då kan du släppa kanalknappen."
 "[english]FirmwareWizard_UpdateBasestation_Start_LowerText"	"4. The update will start automatically once your base station is detected and you may release the channel button."
-"FirmwareWizard_UpdateBasestation_Progress_Title"	"Uppdatera programvara för basstation"
+"FirmwareWizard_UpdateBasestation_Progress_Title"	"Uppdatera basstation"
 "[english]FirmwareWizard_UpdateBasestation_Progress_Title"	"Update Base Station"
 "FirmwareWizard_UpdateBasestation_Progress_MiddleText"	"Uppdaterar programvara för basstation. Detta kan ta flera minuter..."
 "[english]FirmwareWizard_UpdateBasestation_Progress_MiddleText"	"Updating base station. This could take several minutes..."
@@ -800,7 +800,7 @@
 "[english]FirmwareWizard_UpdateBasestation_Fail_MiddleText"	"Make sure your base station is securely connected to your computer by micro-USB. If this continues to fail, quit SteamVR and unplug your base station's power cable. Then launch SteamVR, and try again."
 "FirmwareWizard_UpdateBasestation_Fail_LowerText"	"Klicka \"Försök igen\" nedan för nytt försök."
 "[english]FirmwareWizard_UpdateBasestation_Fail_LowerText"	"Click 'Retry' below to try again."
-"FirmwareWizard_UpdateBasestation_Success_Title"	"Uppdatera programvara för basstation"
+"FirmwareWizard_UpdateBasestation_Success_Title"	"Uppdatera basstation"
 "[english]FirmwareWizard_UpdateBasestation_Success_Title"	"Update Base Station"
 "FirmwareWizard_UpdateBasestation_Success_UpperText"	"Klart!"
 "[english]FirmwareWizard_UpdateBasestation_Success_UpperText"	"Success!"
@@ -1210,11 +1210,11 @@
 "[english]RebootHelper_RebootingVive"	"Restarting SteamVR..."
 "RebootHelper_ConnectingToVive"	"Ansluter till headset ..."
 "[english]RebootHelper_ConnectingToVive"	"Connecting to headset..."
-"FirmwareWizard_UpdateBasestation_Choice_Title"	"Uppdatera basstationens programvara"
+"FirmwareWizard_UpdateBasestation_Choice_Title"	"Uppdatera basstation"
 "[english]FirmwareWizard_UpdateBasestation_Choice_Title"	"Update Base Station"
 "FirmwareWizard_UpdateBasestation_Choice_MiddleText"	"Uppdateringen kan ske manuellt eller trådlöst."
 "[english]FirmwareWizard_UpdateBasestation_Choice_MiddleText"	"The update can happen manually or wirelessly."
-"FirmwareWizard_UpdateBasestation_WirelessProgress_Title"	"Uppdatera basstationprogramvara"
+"FirmwareWizard_UpdateBasestation_WirelessProgress_Title"	"Uppdatera basstation"
 "[english]FirmwareWizard_UpdateBasestation_WirelessProgress_Title"	"Update Base Station"
 "FirmwareWizard_UpdateBasestation_WirelessProgress_MiddleText"	"Uppdaterar basstationens programvara. Detta kan ta flera minuter..."
 "[english]FirmwareWizard_UpdateBasestation_WirelessProgress_MiddleText"	"Updating base station. This could take several minutes..."
@@ -1388,7 +1388,7 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR, and try again.</ul>"
 "FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Klicka på \"Försök igen\" nedan för att försöka igen."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Click 'Retry' below to try again."
-"FirmwareWizard_UpdateBasestationWireless_Success_Title"	"Uppdatering klar"
+"FirmwareWizard_UpdateBasestationWireless_Success_Title"	"Uppdatera basstation"
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_Title"	"Update Base Station"
 "FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Klart!"
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_UpperText"	"Success!"
@@ -1598,7 +1598,7 @@
 "[english]Settings_DefaultScreenshotType_MonoPanorama"	"Mono Panorama"
 "Settings_DefaultScreenshotType_StereoPanorama"	"Stereopanorama"
 "[english]Settings_DefaultScreenshotType_StereoPanorama"	"Stereo Panorama"
-"FirmwareWizard_UpdateBasestation_Wireless_Title"	"Uppdatera basstationens programvara"
+"FirmwareWizard_UpdateBasestation_Wireless_Title"	"Uppdatera basstation"
 "[english]FirmwareWizard_UpdateBasestation_Wireless_Title"	"Update Base Station"
 "FirmwareWizard_UpdateBasestation_Wireless_UpperText"	"
 "
@@ -2009,6 +2009,8 @@
 "[english]Settings_Bluetooth_Driver_Update"	"Update Bluetooth Driver"
 "Settings_Advanced_SupersamplingManualOverride"	"Manuell överskridning"
 "[english]Settings_Advanced_SupersamplingManualOverride"	"Enable custom resolution"
+"Settings_PerApplication_DashboardSuffix"	"(Övertoningsapplikation)"
+"[english]Settings_PerApplication_DashboardSuffix"	"(Overlay Application)"
 "Settings_PerApplication_CustomSuffix"	"(Anpassad)"
 "[english]Settings_PerApplication_CustomSuffix"	"(Custom)"
 "FirmwareWizard_AudioBridgeUpdate"	"Enhetsuppdatering"
@@ -2115,6 +2117,12 @@
 "[english]Settings_PerApplication_MotionReprojection_On"	"On"
 "Settings_PerApplication_MotionReprojection_Off"	"Av"
 "[english]Settings_PerApplication_MotionReprojection_Off"	"Off"
+"Advanced_MotionReprojection_Active"	"Rörelseomprojicering på"
+"[english]Advanced_MotionReprojection_Active"	"Motion Reprojection On"
+"Advanced_MotionReprojection_NotActive"	"Rörelseomprojicering av"
+"[english]Advanced_MotionReprojection_NotActive"	"Motion Reprojection Off"
+"Advanced_MotionReprojection_Disabled"	"Rörelseomprojicering otillgänglig"
+"[english]Advanced_MotionReprojection_Disabled"	"Motion Reprojection Unavailable"
 "Advanced_BaseStation"	"Basstation"
 "[english]Advanced_BaseStation"	"Base Station"
 "MessageBox_Forget"	"Glöm"
@@ -2123,6 +2131,8 @@
 "[english]MessageBox_RefreshAll"	"Refresh All"
 "BS20_ConfigureChannel_ProgressCancelling"	"\nAvbryter...\n"
 "[english]BS20_ConfigureChannel_ProgressCancelling"	"\nCancelling...\n"
+"BS_PowerManagement_Title"	"Strömhantering för basstationer"
+"[english]BS_PowerManagement_Title"	"Base Station Power Management"
 "BS_PowerManagement_Enable"	"Aktivera energihantering *"
 "[english]BS_PowerManagement_Enable"	"Enable Power Management *"
 "BS_PowerManagement_Enable_Explanation"	"Strömstyrda basstationer går i viloläge när SteamVR inte används, och vaknar när SteamVR startas.\n"
@@ -2145,6 +2155,8 @@
 "[english]Settings_PerApplication_MotionSmoothing_On"	"Enabled"
 "Settings_PerApplication_MotionSmoothing_Off"	"Inaktiverad"
 "[english]Settings_PerApplication_MotionSmoothing_Off"	"Disabled"
+"Settings_PerApplication_MotionSmoothing_Checkbox_Default"	"Använda global inställning (för närvarande %1)"
+"[english]Settings_PerApplication_MotionSmoothing_Checkbox_Default"	"Use global setting (Currently %1)"
 "Settings_PerApplication_MotionSmoothing_Checkbox_ForceOn"	"Åsidosätt global inställning och aktivera"
 "[english]Settings_PerApplication_MotionSmoothing_Checkbox_ForceOn"	"Always enable"
 "Settings_PerApplication_MotionSmoothing_Checkbox_ForceOff"	"Åsidosätt global inställning och inaktivera"
@@ -2199,6 +2211,8 @@
 "[english]MenuAction_WebConsole"	"Web Console"
 "MenuAction_OverlayViewer"	"Övertoningsvisare"
 "[english]MenuAction_OverlayViewer"	"Overlay Viewer"
+"MenuAction_WebDevToolsPlaceholder"	"Inga instanser funna"
+"[english]MenuAction_WebDevToolsPlaceholder"	"No Instances Found"
 "FirmwareWizard_DeviceOverview_FailedToUpdate"	"Misslyckades att uppdatera"
 "[english]FirmwareWizard_DeviceOverview_FailedToUpdate"	"Failed To Update"
 "FirmwareWizard_DeviceOverview_LookingForDevice"	"Söker efter enhet ..."
@@ -2237,6 +2251,10 @@
 "[english]BS_PowerManagement_ObservedInTracking"	"Observed in a prior tracking session."
 "BS_PowerManagement_FailedToConnectRefresh"	"%1 kunde inte ansluta. Klicka på Uppdatera för att försöka igen."
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
+"FirmwareWizard_ProgressPercentSearching"	"[ Söker ... ]"
+"[english]FirmwareWizard_ProgressPercentSearching"	"[ Scanning... ]"
+"BS20_UpdateRecovery_Refresh"	"Sök igen"
+"[english]BS20_UpdateRecovery_Refresh"	"Scan Again"
 "BS20_UpdateRecovery_UpdateDevice"	"Återställ enhet"
 "[english]BS20_UpdateRecovery_UpdateDevice"	"Recover Device"
 "BS20_UpdateRecovery_FoundStations"	"Sökning slutförd.<br><br><font color=#ffffff>Följande basstationer har inkompletta uppdateringar.<br><br>Välj en basstation och klicka på \"Återställ enhet\" för att fortsätta.</font>"
