--- a/content/vrmonitor/translations/vrmonitor_thai.txt
+++ b/content/vrmonitor/translations/vrmonitor_thai.txt
@@ -147,16 +147,16 @@
 "[english]SteamVRSystemState_NotReady"	" "
 "SteamVRSystemState_Connecting"	"กำลังค้นหา..."
 "[english]SteamVRSystemState_Connecting"	"Searching..."
-"SteamVRSystemState_Shutdown"	"กำลังออก SteamVR..."
-"[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
+"SteamVRSystemState_Shutdown"	"กำลังออก VR..."
+"[english]SteamVRSystemState_Shutdown"	"Exiting VR..."
 "SteamVRSystemState_Installing"	"การติดตั้งฮาร์ดแวร์อยู่ระหว่างดำเนินการ..."
 "[english]SteamVRSystemState_Installing"	"Hardware setup in progress..."
 "SteamVRSystemState_Restart"	"กำลังรีสตาร์ท SteamVR..."
 "[english]SteamVRSystemState_Restart"	"Restarting SteamVR..."
 "SteamVRSystemState_Startup"	"กำลังเริ่ม VR..."
 "[english]SteamVRSystemState_Startup"	"Starting VR..."
-"SteamVRSystemState_ShutdownRequested"	"กำลังออก SteamVR..."
-"[english]SteamVRSystemState_ShutdownRequested"	"Exiting SteamVR..."
+"SteamVRSystemState_ShutdownRequested"	"กำลังออก VR..."
+"[english]SteamVRSystemState_ShutdownRequested"	"Exiting VR..."
 "MenuAction_StatusBar"	"สถานะ"
 "[english]MenuAction_StatusBar"	"Status"
 "MenuAction_RoomOverview"	"ดูภาพรวมของห้อง"
@@ -2313,19 +2313,19 @@
 "[english]BS_PowerManagement_ObservedInTracking"	"Observed in a prior tracking session."
 "BS_PowerManagement_FailedToConnectRefresh"	"%1 ล้มเหลวในการเชื่อมต่อ คลิก 'รีเฟรช' เพื่อลองใหม่อีกครั้ง"
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
-"Monitor_WakingBaseStations"	"ฐานกำลังเปิด..."
-"[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
-"Monitor_PuttingBaseStationsInStandby"	"ฐานกำลังปิด..."
-"[english]Monitor_PuttingBaseStationsInStandby"	"Bases Powering Down..."
+"Monitor_WakingBaseStations"	"สถานีฐานกำลังตื่น..."
+"[english]Monitor_WakingBaseStations"	"Base stations waking up..."
+"Monitor_PuttingBaseStationsInStandby"	"สถานีฐานกำลังรอใช้งาน..."
+"[english]Monitor_PuttingBaseStationsInStandby"	"Base stations standing by..."
 "Settings_BaseStation_ContinueBaseStationUpdate"	"กู้คืนจากอัปเดตที่ไม่สมบูรณ์"
 "[english]Settings_BaseStation_ContinueBaseStationUpdate"	"Recover From Incomplete Update"
 "Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"แก้ไขอัปเดตสถานีฐานที่ถูกขัดจังหวะหรือถูกยกเลิก ซึ่งขัดขวางอุปกรณ์จากการติดตามอย่างปกติ"
 "[english]Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Fix an interrupted or cancelled base station update that is preventing it from tracking normally."
 "FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"สถานีฐานนี้จำเป็นต้องถูกค้นพบด้วยแสงอีกครั้ง โดยรีสตาร์ท SteamVR ก่อนที่การอัปเดตจะสามารถดำเนินการได้"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"This Base Station needs to be rediscovered optically by a restart of SteamVR before the update can proceed."
-"FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"สถานีฐานนี้จำเป็นต้องถูกปิดและเปิดใหม่ และจำเป็นต้องถูกค้นพบด้วยแสงอีกครั้ง โดยรีสตาร์ท SteamVR ก่อนที่การอัปเดตจะสามารถดำเนินการได้ กรุณาถอดสายไฟและเสียบสายไฟของสถานีฐานอีกครั้ง"
+"FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"สถานีฐานนี้จำเป็นต้องถูกปิดและเปิดใหม่ และจำเป็นต้องถูกค้นพบด้วยแสงอีกครั้ง โดยรีสตาร์ท SteamVR ก่อนที่การอัปเดตจะสามารถดำเนินการได้ กรุณาถอดสายไฟและเสียบสายไฟของสถานีฐานใหม่อีกครั้ง"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"This Base Station needs to be power cycled and rediscovered optically by a restart of SteamVR before the update can proceed. Please unplug and then replug the Base Station's power cable."
-"FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"สถานีฐานนี้มีเวอร์ชันอัปเดตที่ใหม่กว่า และได้ปฏิเสธการอัปเดตแล้ว"
+"FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"สถานีฐานนี้มีเวอร์ชันอัปเดตที่ใหม่กว่า และได้ปฏิเสธการอัปเดตแล้ว กรุณาถอดสายไฟและเสียบสายไฟของสถานีฐานใหม่อีกครั้ง"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"This Base Station has a newer version of the update and has rejected it. Please unplug and then replug the Base Station's power cable."
 "FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"คลิก 'ลองใหม่' ด้านล่างเพื่อลองใหม่อีกครั้ง"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Click 'Retry' below to try again."
@@ -2425,7 +2425,7 @@
 "[english]MenuAction_DebugCommands"	"Debug Commands"
 "FirmwareWizard_ProgressPercentFinishing"	"[ กำลังเสร็จสิ้น... ]"
 "[english]FirmwareWizard_ProgressPercentFinishing"	"[ Finishing... ]"
-"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"หากการอัปเดตอุปกรณ์นี้ยังคงดำเนินการล้มเหลว ให้ออกจาก SteamVR จากนั้นถอดสายไฟของกล่องลิงก์และสถานีฐานออกแล้ว เสียบสายไฟใหม่อีกครั้ง จากนั้นเริ่มเปิด SteamVR และลองใหม่อีกครั้ง"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"หากการอัปเดตอุปกรณ์นี้ยังคงล้มเหลวต่อไปโดยไม่มีความคืบหน้า... <ul><li>ออกจาก SteamVR<li>ถอดสายไฟของกล่องลิงก์ออก และเสียบสายไฟใหม่อีกครั้ง<li>ถอดสายไฟสถานีฐานออก และเสียบสายไฟใหม่อีกครั้ง<li>เปิด SteamVR และลองใหม่อีกครั้ง</ul>"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug and replug the Link Box power cable.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR, and try again.</ul>"
 "FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10"	"สถานีฐานถูกอัปเดตเรียบร้อยแล้ว คุณอาจจำเป็นต้องถอดสายไฟและเสียบสายไฟของสถานีฐานของคุณอีกครั้ง เพื่อให้อุปกรณ์ได้ลงทะเบียนว่าถูกอัปเดตแล้ว"
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
@@ -2461,5 +2461,61 @@
 "[english]BS_PowerManagement_ConnectionFailureLegend"	"Connection failure. Click 'Refresh' to try again."
 "BS20_UpdateRecovery_BluetoothRequired"	"การกู้คืนอัปเดตจำเป็นต้องใช้การสื่อสารบลูทูธเพื่อเปิดการใช้งาน\n\nกรุณาเปิดการใช้งานการสื่อสารบลูทูธในการตั้งค่า"
 "[english]BS20_UpdateRecovery_BluetoothRequired"	"Update recovery requires Bluetooth communication to be enabled.\n\nPlease enable Bluetooth communication in Settings."
+"BaseStation_Mode_Text"	"โหมด %1"
+"[english]BaseStation_Mode_Text"	"Mode %1"
+"BS20_ConfigureChannel_Title"	"การกำหนดค่าช่องสัญญาณสถานีฐาน 2.0"
+"[english]BS20_ConfigureChannel_Title"	"Base Station 2.0 Channel Configuration"
+"BS20_ConfigureChannel_BluetoothRequired"	"การกำหนดค่าช่องสัญญาณจำเป็นต้องใช้การสื่อสารบลูทูธเพื่อเปิดการใช้งาน\n\nกรุณาเปิดการใช้งานการสื่อสารบลูทูธในการตั้งค่า"
+"[english]BS20_ConfigureChannel_BluetoothRequired"	"Channel configuration requires Bluetooth communication to be enabled.\n\nPlease enable Bluetooth communication in Settings."
+"BS20_ConfigureChannel_BaseStationName"	"การกำหนดค่า %1 บนช่องสัญญาณ %2"
+"[english]BS20_ConfigureChannel_BaseStationName"	"Configuring %1 on Channel %2"
+"BS20_ConfigureChannel_Description"	"เลือกช่องสัญญาณที่ไม่ใช้สำหรับสถานีฐานนี้เพื่อหลีกเลี่ยงความขัดแย้งในการติดตามที่อาจเกิดขึ้น"
+"[english]BS20_ConfigureChannel_Description"	"Select an unused channel for this Base Station to avoid potential tracking conflicts."
+"BS20_ConfigureChannel_InUseByPrefix"	"ถูกใช้ล่าสุดโดย:"
+"[english]BS20_ConfigureChannel_InUseByPrefix"	"Currently used by:"
+"BS20_ConfigureChannel_AutomaticConfiguration"	"การกำหนดค่าอัตโนมัติ"
+"[english]BS20_ConfigureChannel_AutomaticConfiguration"	"Automatic Configuration"
+"BS20_ConfigureChannel_AutoConfig_NoChannelConflictsFound"	"ไม่มีความขัดแย้งของช่องสัญญาณ"
+"[english]BS20_ConfigureChannel_AutoConfig_NoChannelConflictsFound"	"There are no channel conflicts."
+"BS20_ConfigureChannel_ChannelConfigurationFailure"	"%1 ล้มเหลวในการยอมรับการกำหนดค่าช่องสัญญาณที่จำเป็น"
+"[english]BS20_ConfigureChannel_ChannelConfigurationFailure"	"%1 failed to accept the requested channel configuration."
+"BS20_ConfigureChannel_ScanForMore"	"สแกนเพิ่มเติม"
+"[english]BS20_ConfigureChannel_ScanForMore"	"Scan For More"
+"BS20_ConfigureChannel_Apply"	"นำไปใช้"
+"[english]BS20_ConfigureChannel_Apply"	"Apply"
+"BS20_ConfigureChannel_Connecting"	"กำลังเชื่อมต่อ..."
+"[english]BS20_ConfigureChannel_Connecting"	"Connecting..."
+"BS20_ConfigureChannel_Channel"	"ช่องสัญญาณ: %1"
+"[english]BS20_ConfigureChannel_Channel"	"Channel: %1"
+"BS20_ConfigureChannel_ConnectionFailure"	"%1 ล้มเหลวในการเชื่อมต่อ"
+"[english]BS20_ConfigureChannel_ConnectionFailure"	"%1 failed to connect."
+"BS20_ConfigureChannel_NoConflictOnChannel"	"ไม่มีความขัดแย้งบนช่องสัญญาณ %1"
+"[english]BS20_ConfigureChannel_NoConflictOnChannel"	"No conflict on Channel %1"
+"BS20_ConfigureChannel_RSSI"	"RSSI: %1"
+"[english]BS20_ConfigureChannel_RSSI"	"RSSI: %1"
+"Key_Escape_Abbreviation"	"ESC"
+"[english]Key_Escape_Abbreviation"	"ESC"
+"HeadsetView_Title"	"มุมมอง VR"
+"[english]HeadsetView_Title"	"VR View"
+"HeadsetView_MenuLabel"	"เมนู"
+"[english]HeadsetView_MenuLabel"	"Menu"
+"HeadsetView_PressKeyToExit"	"กด %1 เพื่อออกจากเต็มจอ"
+"[english]HeadsetView_PressKeyToExit"	"Press %1 to exit Full Screen"
+"HeadsetView_FullscreenButtonLabel"	"เต็มหน้าจอ"
+"[english]HeadsetView_FullscreenButtonLabel"	"Full Screen"
+"HeadsetView_CloseButtonLabel"	"ปิด"
+"[english]HeadsetView_CloseButtonLabel"	"Close"
+"HeadsetView_EyeMode_Both"	"ตาทั้งสองข้าง"
+"[english]HeadsetView_EyeMode_Both"	"Both Eyes"
+"HeadsetView_EyeMode_Left"	"ตาซ้าย"
+"[english]HeadsetView_EyeMode_Left"	"Left Eye"
+"HeadsetView_EyeMode_Right"	"ตาขวา"
+"[english]HeadsetView_EyeMode_Right"	"Right Eye"
+"HeadsetView_EyeMode_BothLeftDominant"	"ตาทั้งสองข้าง - ถนัดซ้าย"
+"[english]HeadsetView_EyeMode_BothLeftDominant"	"Both Eyes - Left Dominant"
+"HeadsetView_EyeMode_BothRightDominant"	"ตาทั้งสองข้าง - ถนัดขวา"
+"[english]HeadsetView_EyeMode_BothRightDominant"	"Both Eyes - Right Dominant"
+"HeadsetView_ViewMode_Center"	"มุมมองตรงกลาง"
+"[english]HeadsetView_ViewMode_Center"	"Center View"
 }
 }
