--- a/content/vrmonitor/translations/vrmonitor_vietnamese.txt
+++ b/content/vrmonitor/translations/vrmonitor_vietnamese.txt
@@ -87,6 +87,8 @@
 "[english]Log_Button_ShowInExplorer"	"Show in Explorer"
 "Log_Button_LoadCompleteFile"	"Tải tệp hoàn thành"
 "[english]Log_Button_LoadCompleteFile"	"Load Complete File"
+"Log_Text_MoreLineInTheActualFile"	"THÊM DÒNG TRONG TỆP THỰC\n\n"
+"[english]Log_Text_MoreLineInTheActualFile"	"MORE LINES IN THE ACTUAL FILE\n\n"
 "Status_MenuButton_SteamVR"	"SteamVR"
 "[english]Status_MenuButton_SteamVR"	"SteamVR"
 "Status_CompositorDrawing"	" "
@@ -145,16 +147,16 @@
 "[english]SteamVRSystemState_NotReady"	" "
 "SteamVRSystemState_Connecting"	"Khởi động SteamVR..."
 "[english]SteamVRSystemState_Connecting"	"Searching..."
-"SteamVRSystemState_Shutdown"	"Thoát SteamVR..."
-"[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
+"SteamVRSystemState_Shutdown"	"Thoát VR..."
+"[english]SteamVRSystemState_Shutdown"	"Exiting VR..."
 "SteamVRSystemState_Installing"	"Đang cài đặt phần cứng..."
 "[english]SteamVRSystemState_Installing"	"Hardware setup in progress..."
 "SteamVRSystemState_Restart"	"Khởi động lại SteamVR..."
 "[english]SteamVRSystemState_Restart"	"Restarting SteamVR..."
 "SteamVRSystemState_Startup"	"VR đang bắt đầu..."
 "[english]SteamVRSystemState_Startup"	"Starting VR..."
-"SteamVRSystemState_ShutdownRequested"	"Thoát SteamVR..."
-"[english]SteamVRSystemState_ShutdownRequested"	"Exiting SteamVR..."
+"SteamVRSystemState_ShutdownRequested"	"Thoát VR..."
+"[english]SteamVRSystemState_ShutdownRequested"	"Exiting VR..."
 "MenuAction_StatusBar"	"TRẠNG THÁI"
 "[english]MenuAction_StatusBar"	"Status"
 "MenuAction_RoomOverview"	"Nhìn tổng quan phòng"
@@ -267,6 +269,8 @@
 "[english]Settings_OpenVRPaths"	"OpenVR Paths"
 "Settings_Reset"	"TÁI LẬP"
 "[english]Settings_Reset"	"Reset"
+"Settings_PerfCheck"	"PerfCheck"
+"[english]Settings_PerfCheck"	"PerfCheck"
 "Settings_CheckForSteam"	"Kiểm tra Steam"
 "[english]Settings_CheckForSteam"	"Check for Steam"
 "Settings_CheckStatus"	"Kiểm tra trạng thái"
@@ -471,6 +475,8 @@
 "[english]Advanced_StatsWillBeLive"	""
 "Advanced_CurrentWarningConfig"	"Thiết lập cảnh báo hiện tại"
 "[english]Advanced_CurrentWarningConfig"	"Current Warning Config"
+"Advanced_CurConfig"	"<CurConfig>"
+"[english]Advanced_CurConfig"	"<CurConfig>"
 "Advanced_RunPerfTest"	"Chạy bài kiểm tra hiệu suất"
 "[english]Advanced_RunPerfTest"	"Run Performance Test"
 "Advanced_LoadPerfTest"	"Tải kết quả kiểm tra..."
@@ -587,6 +593,8 @@
 "[english]MessageBox_Done"	"Done"
 "Info_UnknownURL_Title"	"SteamVR"
 "[english]Info_UnknownURL_Title"	"SteamVR"
+"Info_UnknownURL_Message"	"Liên kết vẫn chưa hoạt động. Nếu lỗi bạn đang chẩn đoán vẫn tiếp diễn, vui lòng ghé thăm <a style ='color: rgb(%r, %g, %b);' href='http://steamcommunity.com/app/358720/discussions/'>Diễn đàn nhà phát triển SteamVR</a> để được trợ giúp."
+"[english]Info_UnknownURL_Message"	"That link isn’t quite hooked up yet. If the error you are trying to diagnose persists, please visit the <a style ='color: rgb(%r, %g, %b);' href='http://steamcommunity.com/app/358720/discussions/'>SteamVR Developer Forums</a> for help."
 "PairingWizard_NoDonglesAvailable_Title"	"Hai tay cầm đang được sử dụng"
 "[english]PairingWizard_NoDonglesAvailable_Title"	"Two controllers already in use"
 "PairingWizard_NoDonglesAvailable_Header"	"
@@ -697,6 +705,8 @@
 "[english]FrameTiming_Compositor"	"Compositor"
 "FrameTiming_Application"	"Ứng dụng"
 "[english]FrameTiming_Application"	"Application"
+"FrameTiming_LateStart"	"Bắt đầu chậm"
+"[english]FrameTiming_LateStart"	"Late Start"
 "Settings_Camera_EnableCamera"	"Bật Camera"
 "[english]Settings_Camera_EnableCamera"	"Enable Camera"
 "Settings_Camera_AllowCameraInDashboard"	"Bật tay cầm như camera xem phòng trong trang tổng quan"
@@ -1024,6 +1034,10 @@
 "[english]Explanation_ResetDismissableWarnings"	"Reset Warnings will show all dismissed warnings again when they occur."
 "DismissableWarning_WarningsForTheFirstTime"	"Các cảnh báo lần đầu (0x0010)"
 "[english]DismissableWarning_WarningsForTheFirstTime"	"Warnings for the first time (0x0010)"
+"DismissableWarning_MissedFrames"	"Thiếu khung hình (0x0020)"
+"[english]DismissableWarning_MissedFrames"	"Missed Frames (0x0020)"
+"DismissableWarning_PowerSchemeIsNotHighPerformance"	"Power Scheme không ở mức High Performance (0x0040)"
+"[english]DismissableWarning_PowerSchemeIsNotHighPerformance"	"Power Scheme is not High Performance (0x0040)"
 "MenuAction_SetLogDirectory"	"Đặt thư mục nhật ký"
 "[english]MenuAction_SetLogDirectory"	"Set Log Directory"
 "MenuAction_SetConfigDirectory"	"Đặt thư mục thiết lập"
@@ -1228,6 +1242,8 @@
 "[english]SystemReport_LighthouseDB"	"LighthouseDB"
 "SystemReport_Raw"	"Thô"
 "[english]SystemReport_Raw"	"Raw"
+"SystemReport_PrepareReport"	"Đang chuẩn bị báo cáo"
+"[english]SystemReport_PrepareReport"	"Preparing Report"
 "SystemReport_DiscoverIssues"	"Đang tìm vấn đề"
 "[english]SystemReport_DiscoverIssues"	"Discovering issues"
 "SystemReport_DiscoverDisplays"	"Đang tìm màn hình"
@@ -1362,6 +1378,8 @@
 "[english]Settings_Audio_AudioMirrorUnsupported"	"Audio mirroring is not supported on this computer"
 "Settings_AllowReprojection"	"Cho phép giảm và đệm thêm khung hình (khuyên dùng)"
 "[english]Settings_AllowReprojection"	"Allow interleaved reprojection (recommended)"
+"DismissableWarning_Detected"	"Đã phát hiện"
+"[english]DismissableWarning_Detected"	"Detected"
 "DismissableWarning_TimeFormat"	"h:mm:ss AP"
 "[english]DismissableWarning_TimeFormat"	"h:mm:ss AP"
 "Settings_Camera_Compatibility"	"<b>Mức camera</b>"
@@ -1398,6 +1416,8 @@
 "[english]KnockKnock_Text"	"I'm in VR right now. If you'd like to get my attention please click the button below or press the '%1' key."
 "KnockKnock_Button"	"Cốc cốc"
 "[english]KnockKnock_Button"	"Knock Knock"
+"KnockKnock_Notification_Text"	"Cốc Cốc\nAi đó bên ngoài VR muốn gọi bạn."
+"[english]KnockKnock_Notification_Text"	"Knock Knock\nSomeone outside VR would like your attention."
 "MenuAction_Workshop_UploadItem"	"Tải lên hình nền mới"
 "[english]MenuAction_Workshop_UploadItem"	"Upload New Background"
 "MenuAction_Workshop_EditItem"	"Sửa hình nền có sẵn"
@@ -1506,6 +1526,8 @@
 "[english]CalibrateControllerTrackpad_End_LowerText"	""
 "Advanced_Framerate_Good"	"Khung hình tốt"
 "[english]Advanced_Framerate_Good"	"Framerate Good"
+"Advanced_Framerate_MissedFrames"	"THIẾU KHUNG HÌNH"
+"[english]Advanced_Framerate_MissedFrames"	"MISSED FRAMES"
 "Advanced_Framerate_NoFrameData"	"Không có dữ liệu khung hình"
 "[english]Advanced_Framerate_NoFrameData"	"No Frame Data"
 "DismissableWarning_DisplayInExtendedMode"	"Màn hình ở chế độ mở rộng (0x10000)"
@@ -1572,6 +1594,10 @@
 "[english]PlaylistEditor_General_Tab"	"General"
 "PlaylistEditor_Detail_Name_Label"	"Tên:"
 "[english]PlaylistEditor_Detail_Name_Label"	"Name:"
+"PlaylistEditor_Detail_Entry_Text"	"Mục"
+"[english]PlaylistEditor_Detail_Entry_Text"	"Entry"
+"PlaylistEditor_Detail_Executable_Label"	"Thực thi:"
+"[english]PlaylistEditor_Detail_Executable_Label"	"Executable:"
 "PlaylistEditor_Detail_DotDotDot_Label"	"..."
 "[english]PlaylistEditor_Detail_DotDotDot_Label"	"..."
 "PlaylistEditor_Detail_Environment_Label"	"Môi trường:"
@@ -1827,6 +1853,8 @@
 "[english]MessageBox_Submit"	"Submit"
 "BugReporter_Title"	"Báo cáo lỗi"
 "[english]BugReporter_Title"	"Report a Bug"
+"BugReporter_Explanation"	"Cảm ơn bạn đã giúp Valve cải tiến SteamVR.\n\nCông cụ báo lỗi này khởi tạo một Báo cáo hệ thống SteamVR, thu thập nhật ký hệ thống, môi trường và SteamVR để Valve sử dụng để phân tích."
+"[english]BugReporter_Explanation"	"Thank you for helping Valve improve SteamVR.\n\nThis bug reporter generates a SteamVR System Report which gathers system, environment, and SteamVR logging for use by Valve for diagnostics."
 "BugReporter_ForPersonalSupport"	"Đây không phải là phiếu yêu cầu hỗ trợ và bạn sẽ không nhận được phản hồi trực tiếp. Để nhận hỗ trợ SteamVR cá nhân từ nhân viên, xin hãy xem trang trợ giúp."
 "[english]BugReporter_ForPersonalSupport"	"This is not a support ticket and you will not receive a direct response. To receive personalized SteamVR support from an agent, please visit the support site."
 "BugReporter_SteamVRSupport"	"Đội hỗ trợ SteamVR"
@@ -1922,6 +1950,8 @@
 "[english]Settings_PerApplication_AppResTitle"	"Custom Resolution"
 "Settings_PerApplication_AppResHeader"	"Cài đặt này là một hệ số áp dụng lên các cài đặt Độ phân giải ứng dụng Video của bạn. Có thể cần khởi động lại ứng dụng để cài đặt này có hiệu lực. (Giá trị mặc định là 100%)"
 "[english]Settings_PerApplication_AppResHeader"	"This setting is a multiplier on top of your Video Application Resolution settings. This application may need to be restarted for settings to take effect. (Default is 100%)"
+"Settings_PerApplication_AppResFooter"	"Thiết lập hiện tại dựng hình ở mức <font color=#eeeeee>%1x%2</font>"
+"[english]Settings_PerApplication_AppResFooter"	"The current setting renders each eye at <font color=#eeeeee>%1x%2</font>"
 "Settings_PerApplication_OverlayVisibleHeader"	"Các ứng dụng lớp phủ có mặt dưới dạng các thẻ tại trang tổng quan SteamVR."
 "[english]Settings_PerApplication_OverlayVisibleHeader"	"Overlay applications are available as tabs in the SteamVR Dashboard."
 "Settings_PerApplication_OverlayVisibleCheckbox"	"Khởi động ứng dụng nền này khi SteamVR khởi chạy."
@@ -2227,9 +2257,9 @@
 "BS_PowerManagement_FailedToConnectRefresh"	"%1 kết nối thất bại. Thử nhấn lại 'Làm mới'."
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
 "Monitor_WakingBaseStations"	"Đánh thức trạm theo dõi..."
-"[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
+"[english]Monitor_WakingBaseStations"	"Base stations waking up..."
 "Monitor_PuttingBaseStationsInStandby"	"Trạm theo dõi sẽ về trạng thái nghỉ..."
-"[english]Monitor_PuttingBaseStationsInStandby"	"Bases Powering Down..."
+"[english]Monitor_PuttingBaseStationsInStandby"	"Base stations standing by..."
 "Settings_BaseStation_ContinueBaseStationUpdate"	"Phục hồi từ cập nhật không hoàn thiện"
 "[english]Settings_BaseStation_ContinueBaseStationUpdate"	"Recover From Incomplete Update"
 "Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Sửa lỗi cập nhật gặp gián đoạn hoặc bị hủy của trạm theo dõi, nguyên nhân khiến nó không thể theo dõi bình thường."
@@ -2322,6 +2352,10 @@
 "[english]SteamVRSystemState_Standby_Application"	"Put on your headset to wake VR"
 "SteamVRSystemState_PseudoState_Welcome_Application"	"Xin hãy cắm dây mũ chụp VR của bạn"
 "[english]SteamVRSystemState_PseudoState_Welcome_Application"	"Please plug in your VR headset"
+"MenuAction_SystemReportViewer"	"Trình xem báo cáo hệ thống"
+"[english]MenuAction_SystemReportViewer"	"System Report Viewer"
+"MenuAction_DebugCommands"	"Lệnh debug"
+"[english]MenuAction_DebugCommands"	"Debug Commands"
 "FirmwareWizard_ProgressPercentFinishing"	"[ Hoàn tất... ]"
 "[english]FirmwareWizard_ProgressPercentFinishing"	"[ Finishing... ]"
 "FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"Nếu quá trình cập nhật thiết bị tiếp tục thất bại...<ul><li>Hãy thoát SteamVR<li>Tháo rồi cắm lại dây điện của Link Box<li>Tháo rồi cắm lại dây điện của trạm theo dõi chuyển động.<li>Sau đó chạy SteamVR và thử lại.</ul>"
@@ -2422,5 +2456,29 @@
 "[english]BS20_ConfigureChannel_ProgressWritingChannel"	"\nWriting Channel...\n"
 "BS20_ConfigureChannel_RSSI"	"RSSI: %1"
 "[english]BS20_ConfigureChannel_RSSI"	"RSSI: %1"
+"Key_Escape_Abbreviation"	"ESC"
+"[english]Key_Escape_Abbreviation"	"ESC"
+"HeadsetView_Title"	"Xem VR"
+"[english]HeadsetView_Title"	"VR View"
+"HeadsetView_MenuLabel"	"Trình đơn"
+"[english]HeadsetView_MenuLabel"	"Menu"
+"HeadsetView_PressKeyToExit"	"Nhấn %1 để thoát toàn màn hình"
+"[english]HeadsetView_PressKeyToExit"	"Press %1 to exit Full Screen"
+"HeadsetView_FullscreenButtonLabel"	"Toàn màn hình"
+"[english]HeadsetView_FullscreenButtonLabel"	"Full Screen"
+"HeadsetView_CloseButtonLabel"	"Đóng"
+"[english]HeadsetView_CloseButtonLabel"	"Close"
+"HeadsetView_EyeMode_Both"	"Cả hai mắt"
+"[english]HeadsetView_EyeMode_Both"	"Both Eyes"
+"HeadsetView_EyeMode_Left"	"Mắt trái"
+"[english]HeadsetView_EyeMode_Left"	"Left Eye"
+"HeadsetView_EyeMode_Right"	"Mắt phải"
+"[english]HeadsetView_EyeMode_Right"	"Right Eye"
+"HeadsetView_EyeMode_BothLeftDominant"	"Hai mắt - Thuận trái"
+"[english]HeadsetView_EyeMode_BothLeftDominant"	"Both Eyes - Left Dominant"
+"HeadsetView_EyeMode_BothRightDominant"	"Hai mắt - Thuận phải"
+"[english]HeadsetView_EyeMode_BothRightDominant"	"Both Eyes - Right Dominant"
+"HeadsetView_ViewMode_Center"	"Tầm nhìn chính giữa"
+"[english]HeadsetView_ViewMode_Center"	"Center View"
 }
 }
