--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_japanese.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_japanese.json
@@ -8,14 +8,14 @@
 	"pairing_nofreedongles_title": "コントローラのペアリング",
 	"pairing_nofreedongles_desc": "コントローラは既に接続されています！",
 	"pairing_nofreedongles_instr": "新たなコントローラをペアリングするには、<span class=\"Highlight\">既存のコントローラの1つの電源を切ってください</span>。",
-	"pairing_nodongles_title": "ペアリング可能なデバイスは検出されませんでした",
-	"pairing_nodongles_desc": "SteamVRは、コントローラをペアリングするためのハードウェアを検出できませんでした。",
+	"pairing_nodongles_title": "ペアリング可能なデバイスが検出されませんでした",
+	"pairing_nodongles_desc": "SteamVRは、コントローラとペアリングするハードウェアを検出できませんでした。",
 	"pairing_nodongles_instr": "ヘッドセットが接続されていることを確認してください。",
 	"pairing_selectdevice_title": "コントローラのタイプを選択",
-	"pairingdevice_knuckles_controllername": "ナックルズコントローラ",
+	"pairingdevice_knuckles_controllername": "Indexコントローラ",
 	"pairingdevice_vivewand_shortname": "HTC Viveコントローラ",
 	"pairingdevice_vivetracker_shortname": "HTC Viveトラッカー",
-	"pairingdevice_a_knuckles_controllername": "ナックルズコントローラ",
+	"pairingdevice_a_knuckles_controllername": "Indexコントローラ",
 	"pairingdevice_a_vivewand_shortname": "HTC Viveコントローラ",
 	"pairingdevice_a_vivetracker_shortname": "HTC Viveトラッカー",
 	"pair_controller_title": "%1$sのペアリング",
@@ -31,5 +31,8 @@
 	"pairing_button_done": "OK",
 	"pairing_button_cancel": "キャンセル",
 	"pairing_success_again": "別のコントローラをペアリング...",
+	"pairing_try_again": "もう一度お試しください…",
+	"pairing_error_title": "問題が発生しました",
+	"pairing_timed_out_desc": "コントローラがタイムアウトしました。",
 	"DummyEntryToConsumeComma": "DummyEntryToConsumeComma"
 }
