--- a/content/panorama/localization/tenfoot_italian.txt
+++ b/content/panorama/localization/tenfoot_italian.txt
@@ -660,7 +660,7 @@
 "[english]Panorama_Lang_Latam_Spanish"	"Latam"
 "Panorama_Lang_Latam_Vietnamese"	"Vietnamita"
 "[english]Panorama_Lang_Latam_Vietnamese"	"Vietnamese"
-"Panorama_Selection_Latam_Spanish"	"Español-Latinoamérica (Spagnolo dell'America Latina)"
+"Panorama_Selection_Latam_Spanish"	"Español-Latinoamérica (Spagnolo latinoamericano)"
 "[english]Panorama_Selection_Latam_Spanish"	"Español-Latinoamérica (Spanish-Latin America)"
 "Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamita)"
 "[english]Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamese)"
