--- a/content/vrmonitor/translations/vrmonitor_brazilian.txt
+++ b/content/vrmonitor/translations/vrmonitor_brazilian.txt
@@ -148,7 +148,7 @@
 "SteamVRSystemState_Connecting"	"Buscando..."
 "[english]SteamVRSystemState_Connecting"	"Searching..."
 "SteamVRSystemState_Shutdown"	"Encerrando o SteamVR..."
-"[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
+"[english]SteamVRSystemState_Shutdown"	"Exiting VR..."
 "SteamVRSystemState_Installing"	"Configuração do hardware em andamento..."
 "[english]SteamVRSystemState_Installing"	"Hardware setup in progress..."
 "SteamVRSystemState_Restart"	"Reiniciando o SteamVR..."
@@ -156,7 +156,7 @@
 "SteamVRSystemState_Startup"	"Iniciando RV..."
 "[english]SteamVRSystemState_Startup"	"Starting VR..."
 "SteamVRSystemState_ShutdownRequested"	"Encerrando o SteamVR..."
-"[english]SteamVRSystemState_ShutdownRequested"	"Exiting SteamVR..."
+"[english]SteamVRSystemState_ShutdownRequested"	"Exiting VR..."
 "MenuAction_StatusBar"	"Situação"
 "[english]MenuAction_StatusBar"	"Status"
 "MenuAction_RoomOverview"	"Visão geral do cômodo"
@@ -1369,7 +1369,7 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_Title"	" Base Station Update Failed"
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"Falha na atualização de firmware."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"This device update failed."
-"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Caso a atualização do dispositivo continue a dar problema, feche o SteamVR, desconecte e reconecte o cabo de força da estação base, inicie o SteamVR e tente novamente."
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Caso a atualização do dispositivo continue a dar problema...<ul><li>Feche o SteamVR.<li>Desconecte e reconecte o cabo de força da estação base.<li>Inicie o SteamVR e tente novamente.</ul>"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR, and try again.</ul>"
 "FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Clique no botão abaixo para tentar novamente."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Click 'Retry' below to try again."
@@ -2101,7 +2101,7 @@
 "[english]Advanced_ReprojectionOff"	"Reprojection Off"
 "Settings_StatusWindowHidePopups_Text"	"Não exibir avisos e alertas quando a janela do SteamVR estiver minimizada"
 "[english]Settings_StatusWindowHidePopups_Text"	"Suppress VR warnings and alerts when minimized"
-"MenuAction_ShowControllerBinding"	"Configurar controle"
+"MenuAction_ShowControllerBinding"	"Configurações dos controles"
 "[english]MenuAction_ShowControllerBinding"	"Controller Settings"
 "MenuAction_ShowManageTrackers"	"Gerenciar rastreadores do Vive"
 "[english]MenuAction_ShowManageTrackers"	"Manage Vive Trackers"
@@ -2271,7 +2271,7 @@
 "[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station."
 "BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 precisa ser atualizada para poder ser identificada."
 "[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
-"BS_PowerManagement_VisibleNowInTracking"	"Visível nesta seção de rastreamento"
+"BS_PowerManagement_VisibleNowInTracking"	"Visível nesta seção de rastreamento."
 "[english]BS_PowerManagement_VisibleNowInTracking"	"Visible now in this tracking session."
 "Monitor_RestartRequestedDialog_Title"	"Reinicialização necessária para driver %1"
 "[english]Monitor_RestartRequestedDialog_Title"	"Restart for %1 driver"
@@ -2299,14 +2299,16 @@
 "[english]BluetoothControllerStatus_NoBluetoothDeviceUpdateNeeded"	"Bluetooth capability not detected. A device update is needed to enable this feature. Hover over the headset icon and select Update Device."
 "BS_PowerManagement_Enable_Warning"	"<font color=#ffffff>* NÃO RECOMENDADO para espaços rastreados compartilhados, com mais de um usuário do SteamVR.</font>"
 "[english]BS_PowerManagement_Enable_Warning"	"<font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
-"BS_PowerManagement_ObservedInTracking"	"Observada em uma sessão de rastreamento anterior"
+"BS_PowerManagement_ObservedInTracking"	"Observada em uma sessão de rastreamento anterior."
 "[english]BS_PowerManagement_ObservedInTracking"	"Observed in a prior tracking session."
 "BS_PowerManagement_FailedToConnectRefresh"	"Não foi possível conectar %1. Clique em \"Atualizar\" para tentar novamente."
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
 "Monitor_WakingBaseStations"	"Iniciando estações base..."
-"[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
+"[english]Monitor_WakingBaseStations"	"Base stations waking up..."
 "Monitor_PuttingBaseStationsInStandby"	"Estações entrando em repouso..."
-"[english]Monitor_PuttingBaseStationsInStandby"	"Bases Powering Down..."
+"[english]Monitor_PuttingBaseStationsInStandby"	"Base stations standing by..."
+"FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"A estação base rejeitou a atualização por já ter uma versão mais nova. Por favor, desconecte e então reconecte o cabo de força da estação base."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"This Base Station has a newer version of the update and has rejected it. Please unplug and then replug the Base Station's power cable."
 "FirmwareWizard_ProgressPercentStarting"	"[ Iniciando... ]"
 "[english]FirmwareWizard_ProgressPercentStarting"	"[ Starting... ]"
 "FirmwareWizard_ProgressPercentSearching"	"[ Escaneando... ]"
@@ -2325,7 +2327,7 @@
 "[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
 "BS20_UpdateRecovery_FoundStations"	"Varredura concluída.<br><br><font color=#ffffff>As estações base abaixo foram atualizadas pela metade.<br><br>Por favor, selecione uma estação base e clique em \"Restaurar dispositivo\" para continuar.</font>"
 "[english]BS20_UpdateRecovery_FoundStations"	"Scan Completed.<br><br><font color=#ffffff>These Base Stations have incomplete updates.<br><br>Please select a Base Station and click 'Recover Device' to continue.</font>"
-"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"Caso a atualização do dispositivo continue a dar problema, feche o SteamVR, desconecte e reconecte o cabo de força da Link Box e da estação base, inicie o SteamVR e tente novamente."
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"Caso a atualização do dispositivo continue a dar problema...<ul><li>Feche o SteamVR.<li>Desconecte e reconecte o cabo de força da Link Box.<li>Desconecte e reconecte o cabo de força da estação base.<li>inicie o SteamVR e tente novamente.</ul>"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug and replug the Link Box power cable.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR, and try again.</ul>"
 "FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10"	"Estação base atualizada com sucesso. Talvez seja necessário desconectar e reconectar o cabo de força da estação base para que apareça como atualizada."
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
@@ -2345,5 +2347,37 @@
 "[english]FirmwareWizard_DeviceOverview_Nagging_Title"	"Device Updates Required"
 "FirmwareWizard_DeviceOverview_TextContent_Nag"	"Atualizações obrigatórias estão disponíveis. Selecione um dispositivo para atualizar."
 "[english]FirmwareWizard_DeviceOverview_TextContent_Nag"	"Required device updates are available. Select a device to update."
+"MenuAction_ResetSeatedPosition"	"Redefinir posição sentada"
+"[english]MenuAction_ResetSeatedPosition"	"Reset Seated Position"
+"Settings_Bluetooth_RetryConnection"	"Reconectar"
+"[english]Settings_Bluetooth_RetryConnection"	"Retry Connection"
+"BS_PowerManagement_PartialStandby_Explanation"	"As estações base desligam apenas os lasers para que despertem mais rápido quando o SteamVR for iniciado."
+"[english]BS_PowerManagement_PartialStandby_Explanation"	"Base Stations will power off only their lasers for a faster wake up when SteamVR starts."
+"BS_PowerManagement_PartialStandby_HybridExplanation"	"As estações base 2.0 desligam apenas os lasers para que despertem mais rápido quando o SteamVR for iniciado."
+"[english]BS_PowerManagement_PartialStandby_HybridExplanation"	"Base Station 2.0 will power off only their lasers for a faster wake up when SteamVR starts."
+"BS_PowerManagement_FullStandby_Explanation"	"As estações base desligam os lasers e motores."
+"[english]BS_PowerManagement_FullStandby_Explanation"	"Base Stations will power off their lasers and motors."
+"BS_PowerManagement_ConnectionFailureLegend"	"Falha ao conectar-se. Clique em \"Atualizar\" para tentar novamente."
+"[english]BS_PowerManagement_ConnectionFailureLegend"	"Connection failure. Click 'Refresh' to try again."
+"BS20_UpdateRecovery_BluetoothRequired"	"A recuperação de atualização requer Bluetooth.\n\nPor favor, ative a comunicação Bluetooth nas configurações."
+"[english]BS20_UpdateRecovery_BluetoothRequired"	"Update recovery requires Bluetooth communication to be enabled.\n\nPlease enable Bluetooth communication in Settings."
+"BaseStation_Mode_Text"	"Modo %1"
+"[english]BaseStation_Mode_Text"	"Mode %1"
+"BS20_ConfigureChannel_Title"	"Configuração de canal da estação base 2.0"
+"[english]BS20_ConfigureChannel_Title"	"Base Station 2.0 Channel Configuration"
+"BS20_ConfigureChannel_BluetoothRequired"	"A configuração de canal requer Bluetooth.\n\nnPor favor, ative a comunicação Bluetooth nas configurações."
+"[english]BS20_ConfigureChannel_BluetoothRequired"	"Channel configuration requires Bluetooth communication to be enabled.\n\nPlease enable Bluetooth communication in Settings."
+"BS20_ConfigureChannel_BaseStationName"	"Configurando %1 no canal %2"
+"[english]BS20_ConfigureChannel_BaseStationName"	"Configuring %1 on Channel %2"
+"BS20_ConfigureChannel_Description"	"Selecione um canal não usado para esta estação base para evitar possíveis conflitos de rastreamento."
+"[english]BS20_ConfigureChannel_Description"	"Select an unused channel for this Base Station to avoid potential tracking conflicts."
+"BS20_ConfigureChannel_InUseByPrefix"	"Em uso por:"
+"[english]BS20_ConfigureChannel_InUseByPrefix"	"Currently used by:"
+"BS20_ConfigureChannel_Legend"	"Indica um canal usado por outras estações base próximas."
+"[english]BS20_ConfigureChannel_Legend"	"Denotes a channel used by other Base Stations in radio proximity."
+"BS20_ConfigureChannel_AutomaticConfiguration"	"Configuração automática"
+"[english]BS20_ConfigureChannel_AutomaticConfiguration"	"Automatic Configuration"
+"HeadsetView_FullscreenButtonLabel"	"Tela cheia"
+"[english]HeadsetView_FullscreenButtonLabel"	"Full Screen"
 }
 }
