--- a/content/vrmonitor/translations/vrmonitor_errors_vietnamese.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_vietnamese.txt
@@ -1283,5 +1283,9 @@
 "[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_Action"	"More info"
 "VRInitError_Compositor_FailedToCreateDirectModeDisplay_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237"
 "[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237"
+"Warning_DismissableWarning_DevelopmentHardwareNotSupported_Header"	"Thiết bị không còn được hỗ trợ"
+"[english]Warning_DismissableWarning_DevelopmentHardwareNotSupported_Header"	"Device No Longer Supported"
+"Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description"	"%1 (%2) của bạn là một công cụ phát triển tiền-sản-xuất và không còn được hỗ trợ.<br><br><font color=#ff0000>Khả năng hoạt động là không khả thi. Vui lòng thay thế ngay lập tức.</font>"
+"[english]Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description"	"<font color=#aaaa00>Your pre-production %1 is no longer supported.</font> <br><br> This device will no longer receive firmware updates, and diminished functionality is expected. Please replace at your earliest convenience. <br><br>(hwid: %2)"
 }
 }
