--- a/content/vrmonitor/translations/vrmonitor_german.txt
+++ b/content/vrmonitor/translations/vrmonitor_german.txt
@@ -147,16 +147,16 @@
 "[english]SteamVRSystemState_NotReady"	" "
 "SteamVRSystemState_Connecting"	"Suche läuft..."
 "[english]SteamVRSystemState_Connecting"	"Searching..."
-"SteamVRSystemState_Shutdown"	"SteamVR wird beendet..."
-"[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
+"SteamVRSystemState_Shutdown"	"VR wird beendet..."
+"[english]SteamVRSystemState_Shutdown"	"Exiting VR..."
 "SteamVRSystemState_Installing"	"Hardwareeinrichtung läuft..."
 "[english]SteamVRSystemState_Installing"	"Hardware setup in progress..."
 "SteamVRSystemState_Restart"	"SteamVR wird neu gestartet..."
 "[english]SteamVRSystemState_Restart"	"Restarting SteamVR..."
 "SteamVRSystemState_Startup"	"VR wird gestartet..."
 "[english]SteamVRSystemState_Startup"	"Starting VR..."
-"SteamVRSystemState_ShutdownRequested"	"SteamVR wird beendet..."
-"[english]SteamVRSystemState_ShutdownRequested"	"Exiting SteamVR..."
+"SteamVRSystemState_ShutdownRequested"	"VR wird beendet..."
+"[english]SteamVRSystemState_ShutdownRequested"	"Exiting VR..."
 "MenuAction_StatusBar"	"Status"
 "[english]MenuAction_StatusBar"	"Status"
 "MenuAction_RoomOverview"	"Raumübersicht anzeigen"
@@ -1568,7 +1568,7 @@
 "[english]Advanced_Framerate_MissedFrames"	"MISSED FRAMES"
 "Advanced_Framerate_NoFrameData"	"Keine Daten zur Bildfrequenz"
 "[english]Advanced_Framerate_NoFrameData"	"No Frame Data"
-"DismissableWarning_DisplayInExtendedMode"	"Im gestrecktem Anzeigemodus anzeigen (0x10000)"
+"DismissableWarning_DisplayInExtendedMode"	"Im erweiterten Anzeigemodus anzeigen (0x10000)"
 "[english]DismissableWarning_DisplayInExtendedMode"	"Display in Extended Mode (0x10000)"
 "Settings_Advanced_DirectMode_Header"	"Direkter Anzeigemodus"
 "[english]Settings_Advanced_DirectMode_Header"	"Direct Display Mode"
@@ -2330,9 +2330,9 @@
 "BS_PowerManagement_FailedToConnectRefresh"	"Verbindung zu %1 konnte nicht hergestellt werden. Klicken Sie auf \"Aktualisieren\", um es erneut zu versuchen."
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
 "Monitor_WakingBaseStations"	"Basisstationen werden hochgefahren..."
-"[english]Monitor_WakingBaseStations"	"Bases Powering Up..."
+"[english]Monitor_WakingBaseStations"	"Base stations waking up..."
 "Monitor_PuttingBaseStationsInStandby"	"Basisstationen werden ausgeschaltet..."
-"[english]Monitor_PuttingBaseStationsInStandby"	"Bases Powering Down..."
+"[english]Monitor_PuttingBaseStationsInStandby"	"Base stations standing by..."
 "Settings_BaseStation_ContinueBaseStationUpdate"	"Wiederherstellung nach unvollständigem Update"
 "[english]Settings_BaseStation_ContinueBaseStationUpdate"	"Recover From Incomplete Update"
 "Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Setzen Sie ein unterbrochenes oder abgebrochenes Update einer Basisstation fort, um Ortungsprobleme zu beheben."
@@ -2407,9 +2407,9 @@
 "[english]VRApplicationError_UnknownProperty"	"Unknown property"
 "VRApplicationError_InvalidParameter"	"Ungültiger Parameter"
 "[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
-"Settings_Advanced_RefreshRate_NotFound"	"<b>HINWEIS:</b> Ihr VR-Headset unterstützt weitere Bildfrequenzen, die jedoch von Ihrem Grafiktreiber nicht erkannt werden. Bitte vergewissern Sie sich, dass die Firmware Ihres VR-Headsets und die Grafiktreiber auf dem neuesten Stand sind."
+"Settings_Advanced_RefreshRate_NotFound"	"<b>HINWEIS:</b> Ihr VR-Headset unterstützt weitere Aktualisierungsraten, die jedoch von Ihrem Grafiktreiber nicht erkannt werden. Bitte vergewissern Sie sich, dass die Firmware Ihres VR-Headsets und die Grafiktreiber auf dem neuesten Stand sind."
 "[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but were not detected by the graphics driver. Please verify your headset firmware and graphics drivers are up to date."
-"Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>HINWEIS:</b> Ihr VR-Headset unterstützt weitere Bildfrequenzen, aber SteamVR kann die Bildwiederholfrequenz im gestreckten Anzeigemodus nicht verwalten. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Direkten Anzeigemodus aktivieren.</span></a>"
+"Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>HINWEIS:</b> Ihr VR-Headset unterstützt weitere Aktualisierungsraten, die jedoch von SteamVR nicht im erweiterten Anzeigemodus dargestellt werden können. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Direkten Anzeigemodus aktivieren.</span></a>"
 "[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
 "oculus_display_lost"	"Das Oculus-System hat seine Verbindung zur Anzeige verloren. Bitte überprüfen Sie den Anschluss Ihres VR-Headsets und starten Sie es dann neu."
 "[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
@@ -2543,5 +2543,35 @@
 "[english]BS20_ConfigureChannel_ProgressWritingChannel"	"\nWriting Channel...\n"
 "BS20_ConfigureChannel_RSSI"	"RSSI: %1"
 "[english]BS20_ConfigureChannel_RSSI"	"RSSI: %1"
+"Key_Escape_Abbreviation"	"ESC"
+"[english]Key_Escape_Abbreviation"	"ESC"
+"HeadsetView_Title"	"VR-Ansicht"
+"[english]HeadsetView_Title"	"VR View"
+"HeadsetView_MenuLabel"	"Menü"
+"[english]HeadsetView_MenuLabel"	"Menu"
+"HeadsetView_PressKeyToExit"	"Zum Beenden des Vollbildmodus %1 drücken"
+"[english]HeadsetView_PressKeyToExit"	"Press %1 to exit Full Screen"
+"HeadsetView_FullscreenButtonLabel"	"Vollbild"
+"[english]HeadsetView_FullscreenButtonLabel"	"Full Screen"
+"HeadsetView_DockButtonLabel"	"Ansicht andocken"
+"[english]HeadsetView_DockButtonLabel"	"Dock View"
+"HeadsetView_UndockButtonLabel"	"Ansicht lösen"
+"[english]HeadsetView_UndockButtonLabel"	"Undock View"
+"HeadsetView_CloseButtonLabel"	"Schließen"
+"[english]HeadsetView_CloseButtonLabel"	"Close"
+"HeadsetView_EyeMode_Both"	"Beide Augen"
+"[english]HeadsetView_EyeMode_Both"	"Both Eyes"
+"HeadsetView_EyeMode_Left"	"Linkes Auge"
+"[english]HeadsetView_EyeMode_Left"	"Left Eye"
+"HeadsetView_EyeMode_Right"	"Rechtes Auge"
+"[english]HeadsetView_EyeMode_Right"	"Right Eye"
+"HeadsetView_EyeMode_BothLeftDominant"	"Beide Augen – links dominant"
+"[english]HeadsetView_EyeMode_BothLeftDominant"	"Both Eyes - Left Dominant"
+"HeadsetView_EyeMode_BothRightDominant"	"Beide Augen – rechts dominant"
+"[english]HeadsetView_EyeMode_BothRightDominant"	"Both Eyes - Right Dominant"
+"HeadsetView_ViewMode_Center"	"Ansicht zentrieren"
+"[english]HeadsetView_ViewMode_Center"	"Center View"
+"HeadsetView_DebugCommands"	"Debug-Befehle öffnen"
+"[english]HeadsetView_DebugCommands"	"Open Debug Commands"
 }
 }
