--- a/content/vrmonitor/translations/vrmonitor_koreana.txt
+++ b/content/vrmonitor/translations/vrmonitor_koreana.txt
@@ -148,7 +148,7 @@
 "SteamVRSystemState_Connecting"	"연결 중"
 "[english]SteamVRSystemState_Connecting"	"Searching..."
 "SteamVRSystemState_Shutdown"	"종료"
-"[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
+"[english]SteamVRSystemState_Shutdown"	"Exiting VR..."
 "SteamVRSystemState_Installing"	"하드웨어 설정 진행 중..."
 "[english]SteamVRSystemState_Installing"	"Hardware setup in progress..."
 "SteamVRSystemState_Restart"	"SteamVR 재시작 중..."
@@ -156,7 +156,7 @@
 "SteamVRSystemState_Startup"	"시작하는 중"
 "[english]SteamVRSystemState_Startup"	"Starting VR..."
 "SteamVRSystemState_ShutdownRequested"	"종료 준비 중..."
-"[english]SteamVRSystemState_ShutdownRequested"	"Exiting SteamVR..."
+"[english]SteamVRSystemState_ShutdownRequested"	"Exiting VR..."
 "MenuAction_StatusBar"	"상태"
 "[english]MenuAction_StatusBar"	"Status"
 "MenuAction_RoomOverview"	"방 개요"
