--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_brazilian.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_brazilian.json
@@ -12,10 +12,10 @@
 	"pairing_nodongles_desc": "O SteamVR não encontrou um aparelho ao qual parear os controles.",
 	"pairing_nodongles_instr": "Confirme que o headset está conectado.",
 	"pairing_selectdevice_title": "Selecione o tipo do controle",
-	"pairingdevice_knuckles_controllername": "Knuckles Controller",
+	"pairingdevice_knuckles_controllername": "Index Controller",
 	"pairingdevice_vivewand_shortname": "Controle HTC Vice",
 	"pairingdevice_vivetracker_shortname": "Rastreador HTC Vive",
-	"pairingdevice_a_knuckles_controllername": "um controle Knuckles",
+	"pairingdevice_a_knuckles_controllername": "an Index Controller",
 	"pairingdevice_a_vivewand_shortname": "um Controle HTC Vive",
 	"pairingdevice_a_vivetracker_shortname": "um Rastreador HTC Vive",
 	"pair_controller_title": "Parear %1$s",
@@ -31,5 +31,8 @@
 	"pairing_button_done": "OK",
 	"pairing_button_cancel": "Cancelar",
 	"pairing_success_again": "Parear outro controle...",
+	"pairing_try_again": "Try again...",
+	"pairing_error_title": "Something went wrong",
+	"pairing_timed_out_desc": "The controller timed out.",
 	"DummyEntryToConsumeComma": "DummyEntryToConsumeComma"
 }
