--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_dutch.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_dutch.json
@@ -12,10 +12,10 @@
 	"pairing_nodongles_desc": "SteamVR kan geen hardware vinden om de controllers mee te koppelen.",
 	"pairing_nodongles_instr": "Zorg ervoor dat je headset verbonden is.",
 	"pairing_selectdevice_title": "Controllertype selecteren",
-	"pairingdevice_knuckles_controllername": "Knuckles Controller",
+	"pairingdevice_knuckles_controllername": "Index Controller",
 	"pairingdevice_vivewand_shortname": "HTC Vive Controller",
 	"pairingdevice_vivetracker_shortname": "HTC Vive Tracker",
-	"pairingdevice_a_knuckles_controllername": "Knuckles Controller",
+	"pairingdevice_a_knuckles_controllername": "an Index Controller",
 	"pairingdevice_a_vivewand_shortname": "HTC Vive Controller",
 	"pairingdevice_a_vivetracker_shortname": "HTC Vive Tracker",
 	"pair_controller_title": "%1$s koppelen",
@@ -31,5 +31,8 @@
 	"pairing_button_done": "Gereed",
 	"pairing_button_cancel": "Annuleren",
 	"pairing_success_again": "Andere controller koppelen...",
+	"pairing_try_again": "Try again...",
+	"pairing_error_title": "Something went wrong",
+	"pairing_timed_out_desc": "The controller timed out.",
 	"DummyEntryToConsumeComma": "DummyEntryToConsumeComma"
 }
