--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_german.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_german.json
@@ -12,10 +12,10 @@
 	"pairing_nodongles_desc": "SteamVR kann keine Hardware zum Koppeln mit den Controllern finden.",
 	"pairing_nodongles_instr": "Bitte stellen Sie sicher, dass Ihr VR-Headset angeschlossen ist.",
 	"pairing_selectdevice_title": "Wählen Sie Ihren Controllertyp",
-	"pairingdevice_knuckles_controllername": "Knuckles Controller",
+	"pairingdevice_knuckles_controllername": "Valve Index Controller",
 	"pairingdevice_vivewand_shortname": "HTC Vive Controller",
 	"pairingdevice_vivetracker_shortname": "HTC Vive Tracker",
-	"pairingdevice_a_knuckles_controllername": "Knuckles Controller",
+	"pairingdevice_a_knuckles_controllername": "1 Valve Index Controller",
 	"pairingdevice_a_vivewand_shortname": "HTC Vive Controller",
 	"pairingdevice_a_vivetracker_shortname": "HTC Vive Tracker",
 	"pair_controller_title": "%1$s koppeln",
@@ -31,5 +31,8 @@
 	"pairing_button_done": "Fertig",
 	"pairing_button_cancel": "Abbrechen",
 	"pairing_success_again": "Weiteren Controller koppeln...",
+	"pairing_try_again": "Bitte erneut versuchen…",
+	"pairing_error_title": "Es ist ein Fehler aufgetreten",
+	"pairing_timed_out_desc": "Es war einmal nach langer Zeit ... eine Zeitüberschreitung bei einem Controller.",
 	"DummyEntryToConsumeComma": "DummyEntryToConsumeComma"
 }
