--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_korean.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_korean.json
@@ -12,10 +12,10 @@
 	"pairing_nodongles_desc": "SteamVR은 컨트롤러를 페어링할 하드웨어를 찾을 수 없습니다",
 	"pairing_nodongles_instr": "헤드셋이 확실히 연결되어 있어야 합니다.",
 	"pairing_selectdevice_title": "컨트롤러 종류를 선택하세요",
-	"pairingdevice_knuckles_controllername": "Knuckles 컨트롤러",
+	"pairingdevice_knuckles_controllername": "Index Controller",
 	"pairingdevice_vivewand_shortname": "HTC Vive 컨트롤러",
 	"pairingdevice_vivetracker_shortname": "HTC Vive 트래커",
-	"pairingdevice_a_knuckles_controllername": "a Knuckles Controller",
+	"pairingdevice_a_knuckles_controllername": "an Index Controller",
 	"pairingdevice_a_vivewand_shortname": "an HTC Vive Controller",
 	"pairingdevice_a_vivetracker_shortname": "an HTC Vive Tracker",
 	"pair_controller_title": "%1$s 페어링",
@@ -31,5 +31,8 @@
 	"pairing_button_done": "완료",
 	"pairing_button_cancel": "취소",
 	"pairing_success_again": "다른 컨트롤러 페어링...",
+	"pairing_try_again": "Try again...",
+	"pairing_error_title": "Something went wrong",
+	"pairing_timed_out_desc": "The controller timed out.",
 	"DummyEntryToConsumeComma": "DummyEntryToConsumeComma"
 }
