--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_romanian.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_romanian.json
@@ -12,10 +12,10 @@
 	"pairing_nodongles_desc": "SteamVR nu poate găsi niciun hardware cu care să asocieze controlerele.",
 	"pairing_nodongles_instr": "Asigură-te că headsetul este conectat.",
 	"pairing_selectdevice_title": "Selectează tipul tău de controler",
-	"pairingdevice_knuckles_controllername": "Controler Knuckles",
+	"pairingdevice_knuckles_controllername": "Index Controller",
 	"pairingdevice_vivewand_shortname": "Controler HTC Vive",
 	"pairingdevice_vivetracker_shortname": "Tracker HTC Vive",
-	"pairingdevice_a_knuckles_controllername": "un controler Knuckles",
+	"pairingdevice_a_knuckles_controllername": "an Index Controller",
 	"pairingdevice_a_vivewand_shortname": "un controler HTC Vive",
 	"pairingdevice_a_vivetracker_shortname": "un tracker HTC Vive",
 	"pair_controller_title": "Asociază %1$s",
@@ -31,5 +31,8 @@
 	"pairing_button_done": "Terminat",
 	"pairing_button_cancel": "Anuleazǎ",
 	"pairing_success_again": "Asociază un alt controler...",
+	"pairing_try_again": "Try again...",
+	"pairing_error_title": "Something went wrong",
+	"pairing_timed_out_desc": "The controller timed out.",
 	"DummyEntryToConsumeComma": "DummyEntryToConsumeComma"
 }
