--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_russian.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_russian.json
@@ -12,10 +12,10 @@
 	"pairing_nodongles_desc": "Не удаётся найти оборудование, к которому можно привязать контроллеры.",
 	"pairing_nodongles_instr": "Убедитесь, что шлем подключён.",
 	"pairing_selectdevice_title": "Выберите тип контроллера",
-	"pairingdevice_knuckles_controllername": "Контроллер Knuckles",
+	"pairingdevice_knuckles_controllername": "Контроллер Index",
 	"pairingdevice_vivewand_shortname": "Контроллер HTC Vive",
 	"pairingdevice_vivetracker_shortname": "Трекер HTC Vive",
-	"pairingdevice_a_knuckles_controllername": "контроллер Knuckles",
+	"pairingdevice_a_knuckles_controllername": "Контроллер Index",
 	"pairingdevice_a_vivewand_shortname": "контроллер HTC Vive",
 	"pairingdevice_a_vivetracker_shortname": "трекер HTC Vive",
 	"pair_controller_title": "Привязать %1$s",
@@ -31,5 +31,8 @@
 	"pairing_button_done": "Готово",
 	"pairing_button_cancel": "Отмена",
 	"pairing_success_again": "Привязать ещё один контроллер...",
+	"pairing_try_again": "Повторите попытку...",
+	"pairing_error_title": "Произошла ошибка",
+	"pairing_timed_out_desc": "Время соединения контроллера истекло.",
 	"DummyEntryToConsumeComma": "DummyEntryToConsumeComma"
 }
