--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_tchinese.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_tchinese.json
@@ -12,10 +12,10 @@
 	"pairing_nodongles_desc": "SteamVR 找不到任何能與控制器配對的硬體。",
 	"pairing_nodongles_instr": "請確認您的頭戴顯示器已連接。",
 	"pairing_selectdevice_title": "請選擇您的控制器類型",
-	"pairingdevice_knuckles_controllername": "Knuckles 控制器",
+	"pairingdevice_knuckles_controllername": "Index Controller",
 	"pairingdevice_vivewand_shortname": "HTC Vive 控制器",
 	"pairingdevice_vivetracker_shortname": "HTC Vive 移動定位器",
-	"pairingdevice_a_knuckles_controllername": " Knuckles 控制器",
+	"pairingdevice_a_knuckles_controllername": "an Index Controller",
 	"pairingdevice_a_vivewand_shortname": " HTC Vive 控制器",
 	"pairingdevice_a_vivetracker_shortname": " HTC Vive 移動定位器",
 	"pair_controller_title": "配對%1$s",
@@ -31,5 +31,8 @@
 	"pairing_button_done": "完成",
 	"pairing_button_cancel": "取消",
 	"pairing_success_again": "配對另一個控制器…",
+	"pairing_try_again": "Try again...",
+	"pairing_error_title": "Something went wrong",
+	"pairing_timed_out_desc": "The controller timed out.",
 	"DummyEntryToConsumeComma": "DummyEntryToConsumeComma"
 }
