--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_ukrainian.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_ukrainian.json
@@ -12,10 +12,10 @@
 	"pairing_nodongles_desc": "SteamVR не вдалося знайти обладнання для поєднання контролерів.",
 	"pairing_nodongles_instr": "Переконайтеся, що ваш шолом увімкнено та під’єднано.",
 	"pairing_selectdevice_title": "Виберіть тип контролера",
-	"pairingdevice_knuckles_controllername": "Контролер Knuckles",
+	"pairingdevice_knuckles_controllername": "Контролер Index",
 	"pairingdevice_vivewand_shortname": "Контролер HTC Vive",
 	"pairingdevice_vivetracker_shortname": "Відстежувач HTC Vive",
-	"pairingdevice_a_knuckles_controllername": "контролер Knuckles",
+	"pairingdevice_a_knuckles_controllername": "контролер Index",
 	"pairingdevice_a_vivewand_shortname": "контролер HTC Vive",
 	"pairingdevice_a_vivetracker_shortname": "відстежувач HTC Vive",
 	"pair_controller_title": "Поєднати %1$s",
@@ -31,5 +31,8 @@
 	"pairing_button_done": "Готово",
 	"pairing_button_cancel": "Скасувати",
 	"pairing_success_again": "Поєднати інший контролер…",
+	"pairing_try_again": "Спробувати знову…",
+	"pairing_error_title": "Щось пішло не так",
+	"pairing_timed_out_desc": "Час з’єднання контролера скінчився.",
 	"DummyEntryToConsumeComma": "DummyEntryToConsumeComma"
 }
